commit bilingual contents

--- a/docs/csharp/misc/cs0059.md
+++ b/docs/csharp/misc/cs0059.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0059"
+title: コンパイラ エラー CS0059
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0059
 helpviewer_keywords:
 - CS0059
 ms.assetid: 25a8624b-7f7b-4487-ba80-413d57f9132b
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 8ed1850effbcf357d3311489808b0522e7f3c935
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 0cb2e760f5a6a9e6b4f6c1e4623e8eb3be6a9af3
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279238"
 ---
-# <a name="compiler-error-cs0059"></a><span data-ttu-id="fb781-102">コンパイラ エラー CS0059</span><span class="sxs-lookup"><span data-stu-id="fb781-102">Compiler Error CS0059</span></span>
-<span data-ttu-id="fb781-103">アクセシビリティに一貫性がありません。パラメーター型 'type' のアクセシビリティはデリゲート 'delegate' よりも低く設定されています</span><span class="sxs-lookup"><span data-stu-id="fb781-103">Inconsistent accessibility: parameter type 'type' is less accessible than delegate 'delegate'</span></span>  
+# <a name="compiler-error-cs0059"></a><span data-ttu-id="e5fc6-102">コンパイラ エラー CS0059</span><span class="sxs-lookup"><span data-stu-id="e5fc6-102">Compiler Error CS0059</span></span>
+<span data-ttu-id="e5fc6-103">アクセシビリティに一貫性がありません。パラメーター型 'type' のアクセシビリティはデリゲート 'delegate' よりも低く設定されています</span><span class="sxs-lookup"><span data-stu-id="e5fc6-103">Inconsistent accessibility: parameter type 'type' is less accessible than delegate 'delegate'</span></span>  
   
- <span data-ttu-id="fb781-104">戻り値の型と、メソッドの仮パラメーター リストで参照されるそれぞれの型は、少なくともメソッド自体と同程度にアクセス可能である必要があります。</span><span class="sxs-lookup"><span data-stu-id="fb781-104">The return type and each of the types referenced in the formal parameter list of a method must be at least as accessible as the method itself.</span></span> <span data-ttu-id="fb781-105">詳細については、「[アクセス修飾子](../../csharp/programming-guide/classes-and-structs/access-modifiers.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="fb781-105">For more information, see [Access Modifiers](../../csharp/programming-guide/classes-and-structs/access-modifiers.md).</span></span>  
+ <span data-ttu-id="e5fc6-104">戻り値の型と、メソッドの仮パラメーター リストで参照されるそれぞれの型は、少なくともメソッド自体と同程度にアクセス可能である必要があります。</span><span class="sxs-lookup"><span data-stu-id="e5fc6-104">The return type and each of the types referenced in the formal parameter list of a method must be at least as accessible as the method itself.</span></span> <span data-ttu-id="e5fc6-105">詳細については、「[アクセス修飾子](../../csharp/programming-guide/classes-and-structs/access-modifiers.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="e5fc6-105">For more information, see [Access Modifiers](../../csharp/programming-guide/classes-and-structs/access-modifiers.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="fb781-106">例</span><span class="sxs-lookup"><span data-stu-id="fb781-106">Example</span></span>  
- <span data-ttu-id="fb781-107">次の例では CS0059 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="fb781-107">The following sample generates CS0059:</span></span>  
+## <a name="example"></a><span data-ttu-id="e5fc6-106">例</span><span class="sxs-lookup"><span data-stu-id="e5fc6-106">Example</span></span>  
+ <span data-ttu-id="e5fc6-107">次の例では CS0059 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="e5fc6-107">The following sample generates CS0059:</span></span>  
   
 ```csharp  
 // CS0059.cs  
