--- a/docs/csharp/misc/cs0406.md
+++ b/docs/csharp/misc/cs0406.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0406"
+title: コンパイラ エラー CS0406
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0406
 helpviewer_keywords:
 - CS0406
 ms.assetid: 9d69681c-e261-4e5e-9361-ea566de12f2e
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 16142b6ef4f2f57fda7cf602188a20f9cc8d0247
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 7603f711751184a537722fe46767c7a07c3a1712
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33281327"
 ---
-# <a name="compiler-error-cs0406"></a><span data-ttu-id="c9f40-102">コンパイラ エラー CS0406</span><span class="sxs-lookup"><span data-stu-id="c9f40-102">Compiler Error CS0406</span></span>
-<span data-ttu-id="c9f40-103">クラス型制約 'constraint' は、他の制約の前に指定する必要があります</span><span class="sxs-lookup"><span data-stu-id="c9f40-103">The class type constraint 'constraint' must come before any other constraints</span></span>  
+# <a name="compiler-error-cs0406"></a><span data-ttu-id="1b0e0-102">コンパイラ エラー CS0406</span><span class="sxs-lookup"><span data-stu-id="1b0e0-102">Compiler Error CS0406</span></span>
+<span data-ttu-id="1b0e0-103">クラス型制約 'constraint' は、他の制約の前に指定する必要があります</span><span class="sxs-lookup"><span data-stu-id="1b0e0-103">The class type constraint 'constraint' must come before any other constraints</span></span>  
   
- <span data-ttu-id="c9f40-104">ジェネリック型またはメソッドにクラス型の制約がある場合、その制約がリストの先頭に配置されている必要があります。</span><span class="sxs-lookup"><span data-stu-id="c9f40-104">When a generic type or method has a class type constraint, that constraint must be listed first.</span></span> <span data-ttu-id="c9f40-105">このエラーを回避するには、クラス型の制約を制約リストの先頭に移動します。</span><span class="sxs-lookup"><span data-stu-id="c9f40-105">To avoid this error, move the class type constraint to the beginning of the constraint list.</span></span>  
+ <span data-ttu-id="1b0e0-104">ジェネリック型またはメソッドにクラス型の制約がある場合、その制約がリストの先頭に配置されている必要があります。</span><span class="sxs-lookup"><span data-stu-id="1b0e0-104">When a generic type or method has a class type constraint, that constraint must be listed first.</span></span> <span data-ttu-id="1b0e0-105">このエラーを回避するには、クラス型の制約を制約リストの先頭に移動します。</span><span class="sxs-lookup"><span data-stu-id="1b0e0-105">To avoid this error, move the class type constraint to the beginning of the constraint list.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="c9f40-106">例</span><span class="sxs-lookup"><span data-stu-id="c9f40-106">Example</span></span>  
- <span data-ttu-id="c9f40-107">次の例では CS0406 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="c9f40-107">The following sample generates CS0406.</span></span>  
+## <a name="example"></a><span data-ttu-id="1b0e0-106">例</span><span class="sxs-lookup"><span data-stu-id="1b0e0-106">Example</span></span>  
+ <span data-ttu-id="1b0e0-107">次の例では CS0406 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="1b0e0-107">The following sample generates CS0406.</span></span>  
   
 ```csharp  
 // CS0406.cs  
