--- a/docs/csharp/language-reference/compiler-messages/cs0120.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0120.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33216123"
 ---
 # <a name="compiler-error-cs0120"></a><span data-ttu-id="33890-102">コンパイラ エラー CS0120</span><span class="sxs-lookup"><span data-stu-id="33890-102">Compiler Error CS0120</span></span>
 <span data-ttu-id="33890-103">静的でないフィールド、メソッド、またはプロパティ 'member' で、オブジェクト参照が必要です</span><span class="sxs-lookup"><span data-stu-id="33890-103">An object reference is required for the nonstatic field, method, or property 'member'</span></span>  
