--- a/docs/csharp/language-reference/compiler-messages/cs4014.md
+++ b/docs/csharp/language-reference/compiler-messages/cs4014.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33219259"
 ---
 # <a name="compiler-warning-level-1-cs4014"></a><span data-ttu-id="9876a-102">コンパイラの警告 (レベル 1) CS4014</span><span class="sxs-lookup"><span data-stu-id="9876a-102">Compiler Warning (level 1) CS4014</span></span>
 <span data-ttu-id="9876a-103">この呼び出しは待機されなかったため、現在のメソッドの実行は呼び出しの完了を待たずに続行されます。</span><span class="sxs-lookup"><span data-stu-id="9876a-103">Because this call is not awaited, execution of the current method continues before the call is completed.</span></span> <span data-ttu-id="9876a-104">呼び出しの結果に 'await' 演算子を適用することを検討してください。</span><span class="sxs-lookup"><span data-stu-id="9876a-104">Consider applying the 'await' operator to the result of the call.</span></span>  
