--- a/docs/csharp/misc/cs0003.md
+++ b/docs/csharp/misc/cs0003.md
@@ -1,29 +1,23 @@
 ---
 title: コンパイラ エラー CS0003
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0003
 helpviewer_keywords:
 - CS0003
 ms.assetid: 6aee4b0e-e24f-47b5-8281-ca4c7ee8a3cf
-caps.latest.revision: 8
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 9cc07320cd6197f3c57144401ff906f767f2bf1d
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
-ms.translationtype: MT
+ms.openlocfilehash: 15c151f84e16ca30d56b313e19aacfca642e78cc
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279267"
 ---
-# <a name="compiler-error-cs0003"></a><span data-ttu-id="ce5ff-102">コンパイラ エラー CS0003</span><span class="sxs-lookup"><span data-stu-id="ce5ff-102">Compiler Error CS0003</span></span>
-<span data-ttu-id="ce5ff-103">メモリが不足しています</span><span class="sxs-lookup"><span data-stu-id="ce5ff-103">Out of memory</span></span>  
+# <a name="compiler-error-cs0003"></a><span data-ttu-id="df2e7-102">コンパイラ エラー CS0003</span><span class="sxs-lookup"><span data-stu-id="df2e7-102">Compiler Error CS0003</span></span>
+<span data-ttu-id="df2e7-103">メモリ不足</span><span class="sxs-lookup"><span data-stu-id="df2e7-103">Out of memory</span></span>  
   
- <span data-ttu-id="ce5ff-104">コンパイラでは、コンパイルを完了するために十分な仮想メモリを割り当てることができませんでした。</span><span class="sxs-lookup"><span data-stu-id="ce5ff-104">The compiler was unable to allocate enough virtual memory to complete compilation.</span></span> <span data-ttu-id="ce5ff-105">不要なアプリケーションをすべて閉じて、もう一度コンパイルします。</span><span class="sxs-lookup"><span data-stu-id="ce5ff-105">Close all unnecessary applications and compile again.</span></span>  
+ <span data-ttu-id="df2e7-104">コンパイラでは、コンパイルを完了するために十分な仮想メモリを割り当てることができませんでした。</span><span class="sxs-lookup"><span data-stu-id="df2e7-104">The compiler was unable to allocate enough virtual memory to complete compilation.</span></span> <span data-ttu-id="df2e7-105">不要なアプリケーションをすべて閉じて、もう一度コンパイルします。</span><span class="sxs-lookup"><span data-stu-id="df2e7-105">Close all unnecessary applications and compile again.</span></span>  
   
- <span data-ttu-id="ce5ff-106">ページファイル サイズを増やすことが必要な場合もあるため、空きディスク領域があることを確認してください。</span><span class="sxs-lookup"><span data-stu-id="ce5ff-106">You may also want to increase the pagefile size and make sure that you have free disk space.</span></span>  
+ <span data-ttu-id="df2e7-106">ページファイル サイズを増やすことが必要な場合もあるため、空きディスク領域があることを確認してください。</span><span class="sxs-lookup"><span data-stu-id="df2e7-106">You may also want to increase the pagefile size and make sure that you have free disk space.</span></span>  
   
- <span data-ttu-id="ce5ff-107">このエラーは、 [!INCLUDE[winsdklong](~/includes/winsdklong-md.md)] と C# コンパイラのバージョンが一致しなかったり、C# コンパイラをサポートする 1 つまたは複数のファイルが破損しているために発生する場合もあります。この場合には、Visual Studio を再インストールしてください。</span><span class="sxs-lookup"><span data-stu-id="ce5ff-107">This error may also appear as the result of having mismatched versions of the [!INCLUDE[winsdklong](~/includes/winsdklong-md.md)] and the C# compiler or one or more corrupted files that support the C# compiler; reinstall Visual Studio.</span></span>
+ <span data-ttu-id="df2e7-107">このエラーは、 [!INCLUDE[winsdklong](~/includes/winsdklong-md.md)] と C# コンパイラのバージョンが一致しなかったり、C# コンパイラをサポートする 1 つまたは複数のファイルが破損しているために発生する場合もあります。この場合には、Visual Studio を再インストールしてください。</span><span class="sxs-lookup"><span data-stu-id="df2e7-107">This error may also appear as the result of having mismatched versions of the [!INCLUDE[winsdklong](~/includes/winsdklong-md.md)] and the C# compiler or one or more corrupted files that support the C# compiler; reinstall Visual Studio.</span></span>
