--- a/docs/csharp/misc/cs0009.md
+++ b/docs/csharp/misc/cs0009.md
@@ -1,25 +1,19 @@
 ---
 title: コンパイラ エラー CS0009
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0009
 helpviewer_keywords:
 - CS0009
 ms.assetid: 1b13d4b6-d5c2-4020-b0f8-d1747a15084d
-caps.latest.revision: 7
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 0fb390187f99eb31c622f1aa79f010f8728770db
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
-ms.translationtype: MT
+ms.openlocfilehash: b4fbbb4aa38d0b2a37bc6db8f32de6da19e74a58
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33267968"
 ---
-# <a name="compiler-error-cs0009"></a><span data-ttu-id="e91e7-102">コンパイラ エラー CS0009</span><span class="sxs-lookup"><span data-stu-id="e91e7-102">Compiler Error CS0009</span></span>
-<span data-ttu-id="e91e7-103">メタデータ ファイル 'file' を開けませんでした — 'description'</span><span class="sxs-lookup"><span data-stu-id="e91e7-103">Metadata file 'file' could not be opened — 'description'</span></span>  
+# <a name="compiler-error-cs0009"></a><span data-ttu-id="32462-102">コンパイラ エラー CS0009</span><span class="sxs-lookup"><span data-stu-id="32462-102">Compiler Error CS0009</span></span>
+<span data-ttu-id="32462-103">メタデータ ファイル 'file' を開けませんでした — 'description'</span><span class="sxs-lookup"><span data-stu-id="32462-103">Metadata file 'file' could not be opened — 'description'</span></span>  
   
- <span data-ttu-id="e91e7-104">[/reference](../../csharp/language-reference/compiler-options/reference-compiler-option.md) コンパイラ オプションで指定されたファイルに有効なメタデータが含まれていません。</span><span class="sxs-lookup"><span data-stu-id="e91e7-104">The file specified with the [/reference](../../csharp/language-reference/compiler-options/reference-compiler-option.md) compiler option does not contain valid metadata.</span></span>
+ <span data-ttu-id="32462-104">[/reference](../../csharp/language-reference/compiler-options/reference-compiler-option.md) コンパイラ オプションで指定されたファイルに有効なメタデータが含まれていません。</span><span class="sxs-lookup"><span data-stu-id="32462-104">The file specified with the [/reference](../../csharp/language-reference/compiler-options/reference-compiler-option.md) compiler option does not contain valid metadata.</span></span>
