--- a/docs/csharp/misc/cs0068.md
+++ b/docs/csharp/misc/cs0068.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0068"
+title: コンパイラ エラー CS0068
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0068
 helpviewer_keywords:
 - CS0068
 ms.assetid: 9c9ac915-e12f-4ceb-8eb0-806790f11a09
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: bf5b135221bb662cd2c67b8bf1edeb2347233c23
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: c2ec05a55cf0f33972358a19a5265eff180a3ba4
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33282172"
 ---
-# <a name="compiler-error-cs0068"></a><span data-ttu-id="477e1-102">コンパイラ エラー CS0068</span><span class="sxs-lookup"><span data-stu-id="477e1-102">Compiler Error CS0068</span></span>
-<span data-ttu-id="477e1-103">'event': インターフェイスのイベントに初期化子を含めることができません</span><span class="sxs-lookup"><span data-stu-id="477e1-103">'event': event in interface cannot have initializer</span></span>  
+# <a name="compiler-error-cs0068"></a><span data-ttu-id="97319-102">コンパイラ エラー CS0068</span><span class="sxs-lookup"><span data-stu-id="97319-102">Compiler Error CS0068</span></span>
+<span data-ttu-id="97319-103">'event': インターフェイスのイベントに初期化子を含めることができません</span><span class="sxs-lookup"><span data-stu-id="97319-103">'event': event in interface cannot have initializer</span></span>  
   
- <span data-ttu-id="477e1-104">インターフェイスのイベントに初期化子を含めることはできません。</span><span class="sxs-lookup"><span data-stu-id="477e1-104">An event in an interface cannot have an initializer.</span></span> <span data-ttu-id="477e1-105">詳細については、「[インターフェイス](../../csharp/programming-guide/interfaces/index.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="477e1-105">For more information, see [Interfaces](../../csharp/programming-guide/interfaces/index.md).</span></span>  
+ <span data-ttu-id="97319-104">インターフェイスのイベントに初期化子を含めることはできません。</span><span class="sxs-lookup"><span data-stu-id="97319-104">An event in an interface cannot have an initializer.</span></span> <span data-ttu-id="97319-105">詳細については、「[インターフェイス](../../csharp/programming-guide/interfaces/index.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="97319-105">For more information, see [Interfaces](../../csharp/programming-guide/interfaces/index.md).</span></span>  
   
- <span data-ttu-id="477e1-106">次の例では CS0068 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="477e1-106">The following sample generates CS0068:</span></span>  
+ <span data-ttu-id="97319-106">次の例では CS0068 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="97319-106">The following sample generates CS0068:</span></span>  
   
 ```csharp  
 // CS0068.cs  
