--- a/docs/csharp/misc/cs0101.md
+++ b/docs/csharp/misc/cs0101.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0101"
+title: コンパイラ エラー CS0101
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0101
 helpviewer_keywords:
 - CS0101
 ms.assetid: edb5246b-c16b-4845-bb2d-0ef769d014c7
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: b0c7d69263600238eee0c84a5c2d9fee1fd5421a
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 8824ce4d1c0b81db2bd5b6dcd4cfe93aae45555d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279907"
 ---
-# <a name="compiler-error-cs0101"></a><span data-ttu-id="249b5-102">コンパイラ エラー CS0101</span><span class="sxs-lookup"><span data-stu-id="249b5-102">Compiler Error CS0101</span></span>
-<span data-ttu-id="249b5-103">名前空間 'namespace' に 'type' の定義が既に含まれています</span><span class="sxs-lookup"><span data-stu-id="249b5-103">The namespace 'namespace' already contains a definition for 'type'</span></span>  
+# <a name="compiler-error-cs0101"></a><span data-ttu-id="9d4bd-102">コンパイラ エラー CS0101</span><span class="sxs-lookup"><span data-stu-id="9d4bd-102">Compiler Error CS0101</span></span>
+<span data-ttu-id="9d4bd-103">名前空間 'namespace' に 'type' の定義が既に含まれています</span><span class="sxs-lookup"><span data-stu-id="9d4bd-103">The namespace 'namespace' already contains a definition for 'type'</span></span>  
   
- <span data-ttu-id="249b5-104">[名前空間](../../csharp/language-reference/keywords/namespace.md) の識別子が重複しています。</span><span class="sxs-lookup"><span data-stu-id="249b5-104">A [namespace](../../csharp/language-reference/keywords/namespace.md) has duplicate identifiers.</span></span> <span data-ttu-id="249b5-105">重複している識別子のうちの 1 つの名前を変更するか、または削除してください。</span><span class="sxs-lookup"><span data-stu-id="249b5-105">Rename or delete one of the duplicate identifiers.</span></span> <span data-ttu-id="249b5-106">詳細については、次を参照してください[名前空間。](../../csharp/programming-guide/namespaces/index.md)</span><span class="sxs-lookup"><span data-stu-id="249b5-106">For more information, see [Namespaces](../../csharp/programming-guide/namespaces/index.md)</span></span>  
+ <span data-ttu-id="9d4bd-104">[名前空間](../../csharp/language-reference/keywords/namespace.md) の識別子が重複しています。</span><span class="sxs-lookup"><span data-stu-id="9d4bd-104">A [namespace](../../csharp/language-reference/keywords/namespace.md) has duplicate identifiers.</span></span> <span data-ttu-id="9d4bd-105">重複している識別子のうちの 1 つの名前を変更するか、または削除してください。</span><span class="sxs-lookup"><span data-stu-id="9d4bd-105">Rename or delete one of the duplicate identifiers.</span></span> <span data-ttu-id="9d4bd-106">詳細については、次を参照してください[名前空間。](../../csharp/programming-guide/namespaces/index.md)</span><span class="sxs-lookup"><span data-stu-id="9d4bd-106">For more information, see [Namespaces](../../csharp/programming-guide/namespaces/index.md)</span></span>  
   
- <span data-ttu-id="249b5-107">次の例では CS0101 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="249b5-107">The following sample generates CS0101:</span></span>  
+ <span data-ttu-id="9d4bd-107">次の例では CS0101 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="9d4bd-107">The following sample generates CS0101:</span></span>  
   
 ```csharp  
 // CS0101.cs  
