--- a/docs/csharp/misc/cs0105.md
+++ b/docs/csharp/misc/cs0105.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラの警告 (レベル 3) CS0105"
+title: コンパイラの警告 (レベル 3) CS0105
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0105
 helpviewer_keywords:
 - CS0105
 ms.assetid: 96d1d5d7-79e9-424f-bbde-f87e88b70003
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 3d89b2253f7abdfbaee4eca52cd8143966862d63
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 41d01f073cd20aeabaf0e683ec2687407917af91
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33274821"
 ---
-# <a name="compiler-warning-level-3-cs0105"></a><span data-ttu-id="6455e-102">コンパイラの警告 (レベル 3) CS0105</span><span class="sxs-lookup"><span data-stu-id="6455e-102">Compiler Warning (level 3) CS0105</span></span>
-<span data-ttu-id="6455e-103">'namespace' の using ディレクティブは、この名前空間で既に使用されています。</span><span class="sxs-lookup"><span data-stu-id="6455e-103">The using directive for 'namespace' appeared previously in this namespace</span></span>  
+# <a name="compiler-warning-level-3-cs0105"></a><span data-ttu-id="fc0ff-102">コンパイラの警告 (レベル 3) CS0105</span><span class="sxs-lookup"><span data-stu-id="fc0ff-102">Compiler Warning (level 3) CS0105</span></span>
+<span data-ttu-id="fc0ff-103">'namespace' の using ディレクティブは、この名前空間で既に使用されています。</span><span class="sxs-lookup"><span data-stu-id="fc0ff-103">The using directive for 'namespace' appeared previously in this namespace</span></span>  
   
- <span data-ttu-id="6455e-104">1 回のみ宣言する必要のある [名前空間](../../csharp/language-reference/keywords/namespace.md)が、複数回宣言されました。すべての重複する名前空間宣言を削除します。</span><span class="sxs-lookup"><span data-stu-id="6455e-104">A [namespace](../../csharp/language-reference/keywords/namespace.md), which should only be declared once, was declared more than once; remove all duplicate namespace declarations.</span></span>  
+ <span data-ttu-id="fc0ff-104">1 回のみ宣言する必要のある [名前空間](../../csharp/language-reference/keywords/namespace.md)が、複数回宣言されました。すべての重複する名前空間宣言を削除します。</span><span class="sxs-lookup"><span data-stu-id="fc0ff-104">A [namespace](../../csharp/language-reference/keywords/namespace.md), which should only be declared once, was declared more than once; remove all duplicate namespace declarations.</span></span>  
   
- <span data-ttu-id="6455e-105">次の例では CS0105 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="6455e-105">The following sample generates CS0105:</span></span>  
+ <span data-ttu-id="fc0ff-105">次の例では CS0105 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="fc0ff-105">The following sample generates CS0105:</span></span>  
   
 ```csharp  
 // CS0105.cs  
