--- a/docs/csharp/misc/cs0119.md
+++ b/docs/csharp/misc/cs0119.md
@@ -1,37 +1,31 @@
 ---
-title: "コンパイラ エラー CS0119"
+title: コンパイラ エラー CS0119
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0119
 helpviewer_keywords:
 - CS0119
 ms.assetid: 048924f1-378f-4021-bd20-299d3218f810
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 22cb5219c50a92a288fea14ddf15ae6b47ba871b
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 09c746cffffba90c59f916301cfe1c1132cd4c36
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279933"
 ---
-# <a name="compiler-error-cs0119"></a><span data-ttu-id="4e458-102">コンパイラ エラー CS0119</span><span class="sxs-lookup"><span data-stu-id="4e458-102">Compiler Error CS0119</span></span>
-<span data-ttu-id="4e458-103">'construct1_name' は 'construct1' ですが、指定されたコンテキストでは有効ではありません</span><span class="sxs-lookup"><span data-stu-id="4e458-103">'construct1_name' is a 'construct1', which is not valid in the given context.</span></span>  
+# <a name="compiler-error-cs0119"></a><span data-ttu-id="e8081-102">コンパイラ エラー CS0119</span><span class="sxs-lookup"><span data-stu-id="e8081-102">Compiler Error CS0119</span></span>
+<span data-ttu-id="e8081-103">'construct1_name' は 'construct1' ですが、指定されたコンテキストでは有効ではありません</span><span class="sxs-lookup"><span data-stu-id="e8081-103">'construct1_name' is a 'construct1', which is not valid in the given context.</span></span>  
   
- <span data-ttu-id="4e458-104">コンパイラで、次のような予期しない構成体が検出されました。</span><span class="sxs-lookup"><span data-stu-id="4e458-104">The compiler detected an unexpected construct such as the following:</span></span>  
+ <span data-ttu-id="e8081-104">コンパイラで、次のような予期しない構成体が検出されました。</span><span class="sxs-lookup"><span data-stu-id="e8081-104">The compiler detected an unexpected construct such as the following:</span></span>  
   
--   <span data-ttu-id="4e458-105">クラス コンストラクターは、条件付きステートメントにおいて有効なテスト式ではありません。</span><span class="sxs-lookup"><span data-stu-id="4e458-105">A class constructor is not a valid test expression in a conditional statement.</span></span>  
+-   <span data-ttu-id="e8081-105">クラス コンストラクターは、条件付きステートメントにおいて有効なテスト式ではありません。</span><span class="sxs-lookup"><span data-stu-id="e8081-105">A class constructor is not a valid test expression in a conditional statement.</span></span>  
   
--   <span data-ttu-id="4e458-106">配列要素の参照に、インスタンス名ではなくクラス名が使用されました。</span><span class="sxs-lookup"><span data-stu-id="4e458-106">A class name was used instead of an instance name to refer to an array element.</span></span>  
+-   <span data-ttu-id="e8081-106">配列要素の参照に、インスタンス名ではなくクラス名が使用されました。</span><span class="sxs-lookup"><span data-stu-id="e8081-106">A class name was used instead of an instance name to refer to an array element.</span></span>  
   
--   <span data-ttu-id="4e458-107">メソッド識別子は、構造体またはクラスのように使用されます。</span><span class="sxs-lookup"><span data-stu-id="4e458-107">A method identifier is used as if it were a struct or class</span></span>  
+-   <span data-ttu-id="e8081-107">メソッド識別子は、構造体またはクラスのように使用されます。</span><span class="sxs-lookup"><span data-stu-id="e8081-107">A method identifier is used as if it were a struct or class</span></span>  
   
-## <a name="example"></a><span data-ttu-id="4e458-108">例</span><span class="sxs-lookup"><span data-stu-id="4e458-108">Example</span></span>  
- <span data-ttu-id="4e458-109">次の例では CS0119 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="4e458-109">The following sample generates CS0119.</span></span>  
+## <a name="example"></a><span data-ttu-id="e8081-108">例</span><span class="sxs-lookup"><span data-stu-id="e8081-108">Example</span></span>  
+ <span data-ttu-id="e8081-109">次の例では CS0119 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="e8081-109">The following sample generates CS0119.</span></span>  
   
 ```csharp  
 // CS0119.cs  
