--- a/docs/csharp/misc/cs0138.md
+++ b/docs/csharp/misc/cs0138.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0138"
+title: コンパイラ エラー CS0138
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0138
 helpviewer_keywords:
 - CS0138
 ms.assetid: 970545f8-5ee5-428e-921a-3aa29f68d16d
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: eea44ba56c9d78b1b559cb385c5ca1560864f049
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 70d78c9de27f800b00d49b8a9ecefb4025647a2a
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285929"
 ---
-# <a name="compiler-error-cs0138"></a><span data-ttu-id="0fa9d-102">コンパイラ エラー CS0138</span><span class="sxs-lookup"><span data-stu-id="0fa9d-102">Compiler Error CS0138</span></span>
-<span data-ttu-id="0fa9d-103">using namespace ディレクティブは名前空間に対してのみ使用できます。'type' は名前空間ではなく型です。</span><span class="sxs-lookup"><span data-stu-id="0fa9d-103">A using namespace directive can only be applied to namespaces; 'type' is a type not a namespace</span></span>  
+# <a name="compiler-error-cs0138"></a><span data-ttu-id="b8b8a-102">コンパイラ エラー CS0138</span><span class="sxs-lookup"><span data-stu-id="b8b8a-102">Compiler Error CS0138</span></span>
+<span data-ttu-id="b8b8a-103">using namespace ディレクティブは名前空間に対してのみ使用できます。'type' は名前空間ではなく型です。</span><span class="sxs-lookup"><span data-stu-id="b8b8a-103">A using namespace directive can only be applied to namespaces; 'type' is a type not a namespace</span></span>  
   
- <span data-ttu-id="0fa9d-104">[using](../../csharp/language-reference/keywords/using.md) ディレクティブでは、パラメーターとして名前空間の名前のみを使用できます。</span><span class="sxs-lookup"><span data-stu-id="0fa9d-104">A [using](../../csharp/language-reference/keywords/using.md) directive can only take the name of a namespace as a parameter.</span></span> <span data-ttu-id="0fa9d-105">詳細については、「[名前空間](../../csharp/programming-guide/namespaces/index.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="0fa9d-105">For more information, see [Namespaces](../../csharp/programming-guide/namespaces/index.md).</span></span>  
+ <span data-ttu-id="b8b8a-104">[using](../../csharp/language-reference/keywords/using.md) ディレクティブでは、パラメーターとして名前空間の名前のみを使用できます。</span><span class="sxs-lookup"><span data-stu-id="b8b8a-104">A [using](../../csharp/language-reference/keywords/using.md) directive can only take the name of a namespace as a parameter.</span></span> <span data-ttu-id="b8b8a-105">詳細については、「[名前空間](../../csharp/programming-guide/namespaces/index.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="b8b8a-105">For more information, see [Namespaces](../../csharp/programming-guide/namespaces/index.md).</span></span>  
   
- <span data-ttu-id="0fa9d-106">次の例では CS0138 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="0fa9d-106">The following sample generates CS0138:</span></span>  
+ <span data-ttu-id="b8b8a-106">次の例では CS0138 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="b8b8a-106">The following sample generates CS0138:</span></span>  
   
 ```csharp  
 // CS0138.cs  
