--- a/docs/csharp/misc/cs0171.md
+++ b/docs/csharp/misc/cs0171.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0171"
+title: コンパイラ エラー CS0171
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0171
 helpviewer_keywords:
 - CS0171
 ms.assetid: 8c1d76c9-1048-4579-9031-23e3566e6288
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 2d9544c937613084d00702d53828435931638344
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 00d70f4b1cec85b0e4a16cdbf8f2a2bf6f33a01d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33282312"
 ---
-# <a name="compiler-error-cs0171"></a><span data-ttu-id="fb39f-102">コンパイラ エラー CS0171</span><span class="sxs-lookup"><span data-stu-id="fb39f-102">Compiler Error CS0171</span></span>
-<span data-ttu-id="fb39f-103">自動的に実装されたプロパティ 'name' のバッキング フィールドは、コントロールが呼び出し元に返される前に完全に割り当てられている必要があります。</span><span class="sxs-lookup"><span data-stu-id="fb39f-103">Backing field for automatically implemented property 'name' must be fully assigned before control is returned to the caller.</span></span> <span data-ttu-id="fb39f-104">コンストラクター初期化子から既定のコンストラクターを呼び出すことをご検討ください。</span><span class="sxs-lookup"><span data-stu-id="fb39f-104">Consider calling the default constructor from a constructor initializer.</span></span>  
+# <a name="compiler-error-cs0171"></a><span data-ttu-id="d389d-102">コンパイラ エラー CS0171</span><span class="sxs-lookup"><span data-stu-id="d389d-102">Compiler Error CS0171</span></span>
+<span data-ttu-id="d389d-103">自動的に実装されたプロパティ 'name' のバッキング フィールドは、コントロールが呼び出し元に返される前に完全に割り当てられている必要があります。</span><span class="sxs-lookup"><span data-stu-id="d389d-103">Backing field for automatically implemented property 'name' must be fully assigned before control is returned to the caller.</span></span> <span data-ttu-id="d389d-104">コンストラクター初期化子から既定のコンストラクターを呼び出すことをご検討ください。</span><span class="sxs-lookup"><span data-stu-id="d389d-104">Consider calling the default constructor from a constructor initializer.</span></span>  
   
- <span data-ttu-id="fb39f-105">[構造体](../../csharp/language-reference/keywords/struct.md) 内のコンストラクターは、その構造体のすべてのフィールドを初期化する必要があります。</span><span class="sxs-lookup"><span data-stu-id="fb39f-105">A constructor in a [struct](../../csharp/language-reference/keywords/struct.md) must initialize all fields in the struct.</span></span> <span data-ttu-id="fb39f-106">詳細については、「[コンストラクター](../../csharp/programming-guide/classes-and-structs/constructors.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="fb39f-106">For more information, see [Constructors](../../csharp/programming-guide/classes-and-structs/constructors.md).</span></span>  
+ <span data-ttu-id="d389d-105">[構造体](../../csharp/language-reference/keywords/struct.md) 内のコンストラクターは、その構造体のすべてのフィールドを初期化する必要があります。</span><span class="sxs-lookup"><span data-stu-id="d389d-105">A constructor in a [struct](../../csharp/language-reference/keywords/struct.md) must initialize all fields in the struct.</span></span> <span data-ttu-id="d389d-106">詳細については、「[コンストラクター](../../csharp/programming-guide/classes-and-structs/constructors.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="d389d-106">For more information, see [Constructors](../../csharp/programming-guide/classes-and-structs/constructors.md).</span></span>  
   
- <span data-ttu-id="fb39f-107">次の例では CS0171 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="fb39f-107">The following sample generates CS0171:</span></span>  
+ <span data-ttu-id="d389d-107">次の例では CS0171 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="d389d-107">The following sample generates CS0171:</span></span>  
   
 ```csharp  
 // CS0171.cs  
