--- a/docs/csharp/misc/cs0182.md
+++ b/docs/csharp/misc/cs0182.md
@@ -1,43 +1,37 @@
 ---
-title: "コンパイラ エラー CS0182"
+title: コンパイラ エラー CS0182
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0182
 helpviewer_keywords:
 - CS0182
 ms.assetid: a9e97bb8-f06e-499f-aadf-26abc2082f98
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 0fd5c06d1021e22820a2e86cb1ee46b1841a2e81
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 59a36e41b2d795452bf46dd94090c21d24485c44
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33284863"
 ---
-# <a name="compiler-error-cs0182"></a><span data-ttu-id="e6516-102">コンパイラ エラー CS0182</span><span class="sxs-lookup"><span data-stu-id="e6516-102">Compiler Error CS0182</span></span>
-<span data-ttu-id="e6516-103">属性引数は、定数式、typeof 式、または属性パラメーター型の配列の作成式でなければなりません。</span><span class="sxs-lookup"><span data-stu-id="e6516-103">An attribute argument must be a constant expression, typeof expression or array creation expression of an attribute parameter type</span></span>  
+# <a name="compiler-error-cs0182"></a><span data-ttu-id="cf32c-102">コンパイラ エラー CS0182</span><span class="sxs-lookup"><span data-stu-id="cf32c-102">Compiler Error CS0182</span></span>
+<span data-ttu-id="cf32c-103">属性引数は、定数式、typeof 式、または属性パラメーター型の配列の作成式でなければなりません。</span><span class="sxs-lookup"><span data-stu-id="cf32c-103">An attribute argument must be a constant expression, typeof expression or array creation expression of an attribute parameter type</span></span>  
   
- <span data-ttu-id="e6516-104">どの種類の引数を属性に使用できるかについて、特定の制限が適用されます。</span><span class="sxs-lookup"><span data-stu-id="e6516-104">Certain restrictions apply to what kinds of arguments may be used with attributes.</span></span> <span data-ttu-id="e6516-105">エラー メッセージに示された制限に加えて、次の型を属性引数として使用できないことに注意してください。</span><span class="sxs-lookup"><span data-stu-id="e6516-105">Note that in addition to the restrictions specified in the error message, the following types are NOT allowed as attribute arguments:</span></span>  
+ <span data-ttu-id="cf32c-104">どの種類の引数を属性に使用できるかについて、特定の制限が適用されます。</span><span class="sxs-lookup"><span data-stu-id="cf32c-104">Certain restrictions apply to what kinds of arguments may be used with attributes.</span></span> <span data-ttu-id="cf32c-105">エラー メッセージに示された制限に加えて、次の型を属性引数として使用できないことに注意してください。</span><span class="sxs-lookup"><span data-stu-id="cf32c-105">Note that in addition to the restrictions specified in the error message, the following types are NOT allowed as attribute arguments:</span></span>  
   
--   [<span data-ttu-id="e6516-106">sbyte</span><span class="sxs-lookup"><span data-stu-id="e6516-106">sbyte</span></span>](../../csharp/language-reference/keywords/sbyte.md)  
+-   [<span data-ttu-id="cf32c-106">sbyte</span><span class="sxs-lookup"><span data-stu-id="cf32c-106">sbyte</span></span>](../../csharp/language-reference/keywords/sbyte.md)  
   
--   [<span data-ttu-id="e6516-107">ushort</span><span class="sxs-lookup"><span data-stu-id="e6516-107">ushort</span></span>](../../csharp/language-reference/keywords/ushort.md)  
+-   [<span data-ttu-id="cf32c-107">ushort</span><span class="sxs-lookup"><span data-stu-id="cf32c-107">ushort</span></span>](../../csharp/language-reference/keywords/ushort.md)  
   
--   [<span data-ttu-id="e6516-108">uint</span><span class="sxs-lookup"><span data-stu-id="e6516-108">uint</span></span>](../../csharp/language-reference/keywords/uint.md)  
+-   [<span data-ttu-id="cf32c-108">uint</span><span class="sxs-lookup"><span data-stu-id="cf32c-108">uint</span></span>](../../csharp/language-reference/keywords/uint.md)  
   
--   [<span data-ttu-id="e6516-109">ulong</span><span class="sxs-lookup"><span data-stu-id="e6516-109">ulong</span></span>](../../csharp/language-reference/keywords/ulong.md)  
+-   [<span data-ttu-id="cf32c-109">ulong</span><span class="sxs-lookup"><span data-stu-id="cf32c-109">ulong</span></span>](../../csharp/language-reference/keywords/ulong.md)  
   
--   [<span data-ttu-id="e6516-110">decimal</span><span class="sxs-lookup"><span data-stu-id="e6516-110">decimal</span></span>](../../csharp/language-reference/keywords/decimal.md)  
+-   [<span data-ttu-id="cf32c-110">decimal</span><span class="sxs-lookup"><span data-stu-id="cf32c-110">decimal</span></span>](../../csharp/language-reference/keywords/decimal.md)  
   
- <span data-ttu-id="e6516-111">詳細については、次を参照してください。[ビルド内にありません: グローバル属性 (c# プログラミング ガイド)](http://msdn.microsoft.com/library/7c6c41f8-f0d5-4345-8987-3d91f9bae136)です。</span><span class="sxs-lookup"><span data-stu-id="e6516-111">For more information, see [NOT IN BUILD: Global Attributes (C# Programming Guide)](http://msdn.microsoft.com/library/7c6c41f8-f0d5-4345-8987-3d91f9bae136).</span></span>  
+ <span data-ttu-id="cf32c-111">詳細については、次を参照してください。[ビルド内にありません: グローバル属性 (c# プログラミング ガイド)](http://msdn.microsoft.com/library/7c6c41f8-f0d5-4345-8987-3d91f9bae136)です。</span><span class="sxs-lookup"><span data-stu-id="cf32c-111">For more information, see [NOT IN BUILD: Global Attributes (C# Programming Guide)](http://msdn.microsoft.com/library/7c6c41f8-f0d5-4345-8987-3d91f9bae136).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="e6516-112">例</span><span class="sxs-lookup"><span data-stu-id="e6516-112">Example</span></span>  
- <span data-ttu-id="e6516-113">次の例では CS0182 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="e6516-113">The following sample generates CS0182:</span></span>  
+## <a name="example"></a><span data-ttu-id="cf32c-112">例</span><span class="sxs-lookup"><span data-stu-id="cf32c-112">Example</span></span>  
+ <span data-ttu-id="cf32c-113">次の例では CS0182 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="cf32c-113">The following sample generates CS0182:</span></span>  
   
 ```csharp  
 // CS0182.cs  
