--- a/docs/csharp/misc/cs0218.md
+++ b/docs/csharp/misc/cs0218.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0218"
+title: コンパイラ エラー CS0218
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0218
 helpviewer_keywords:
 - CS0218
 ms.assetid: f675e06a-c55c-44a1-b5db-0df178fd8f79
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: b204201f86fa92c724f9a209f42e4e47eded8336
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 484a14060b33083e902cf28e52354831a969467c
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33286212"
 ---
-# <a name="compiler-error-cs0218"></a><span data-ttu-id="63558-102">コンパイラ エラー CS0218</span><span class="sxs-lookup"><span data-stu-id="63558-102">Compiler Error CS0218</span></span>
-<span data-ttu-id="63558-103">型 ('type') に演算子 true および演算子 false の宣言が含まれている必要があります</span><span class="sxs-lookup"><span data-stu-id="63558-103">The type ('type') must contain declarations of operator true and operator false</span></span>  
+# <a name="compiler-error-cs0218"></a><span data-ttu-id="40b0f-102">コンパイラ エラー CS0218</span><span class="sxs-lookup"><span data-stu-id="40b0f-102">Compiler Error CS0218</span></span>
+<span data-ttu-id="40b0f-103">型 ('type') に演算子 true および演算子 false の宣言が含まれている必要があります</span><span class="sxs-lookup"><span data-stu-id="40b0f-103">The type ('type') must contain declarations of operator true and operator false</span></span>  
   
- <span data-ttu-id="63558-104">ユーザー定義型の演算子を定義し、その演算子をショート サーキット演算子として使用する場合、ユーザー定義演算子には演算子 true と演算子 false を定義する必要があります。</span><span class="sxs-lookup"><span data-stu-id="63558-104">If you define an operator for a user-defined type, and then try to use the operator as a short-circuit operator, the user-defined operator must have operator true and operator false defined.</span></span> <span data-ttu-id="63558-105">ショート サーキット演算子の詳細については、「 [& & 演算子](../../csharp/language-reference/operators/conditional-and-operator.md)と[ &#124; &#124;演算子](../../csharp/language-reference/operators/conditional-or-operator.md)です。</span><span class="sxs-lookup"><span data-stu-id="63558-105">For more information on short-circuit operators, see [&& Operator](../../csharp/language-reference/operators/conditional-and-operator.md) and [&#124;&#124; Operator](../../csharp/language-reference/operators/conditional-or-operator.md).</span></span>  
+ <span data-ttu-id="40b0f-104">ユーザー定義型の演算子を定義し、その演算子をショート サーキット演算子として使用する場合、ユーザー定義演算子には演算子 true と演算子 false を定義する必要があります。</span><span class="sxs-lookup"><span data-stu-id="40b0f-104">If you define an operator for a user-defined type, and then try to use the operator as a short-circuit operator, the user-defined operator must have operator true and operator false defined.</span></span> <span data-ttu-id="40b0f-105">ショート サーキット演算子の詳細については、「 [& & 演算子](../../csharp/language-reference/operators/conditional-and-operator.md)と[ &#124; &#124;演算子](../../csharp/language-reference/operators/conditional-or-operator.md)です。</span><span class="sxs-lookup"><span data-stu-id="40b0f-105">For more information on short-circuit operators, see [&& Operator](../../csharp/language-reference/operators/conditional-and-operator.md) and [&#124;&#124; Operator](../../csharp/language-reference/operators/conditional-or-operator.md).</span></span>  
   
- <span data-ttu-id="63558-106">次の例では CS0218 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="63558-106">The following sample generates CS0218:</span></span>  
+ <span data-ttu-id="40b0f-106">次の例では CS0218 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="40b0f-106">The following sample generates CS0218:</span></span>  
   
 ```csharp  
 // CS0218.cs  
@@ -62,5 +56,5 @@ public class MyClass
 }  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="63558-107">参照</span><span class="sxs-lookup"><span data-stu-id="63558-107">See Also</span></span>  
- [<span data-ttu-id="63558-108">変換演算子</span><span class="sxs-lookup"><span data-stu-id="63558-108">Conversion Operators</span></span>](../../csharp/programming-guide/statements-expressions-operators/conversion-operators.md)
+## <a name="see-also"></a><span data-ttu-id="40b0f-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="40b0f-107">See Also</span></span>  
+ [<span data-ttu-id="40b0f-108">変換演算子</span><span class="sxs-lookup"><span data-stu-id="40b0f-108">Conversion Operators</span></span>](../../csharp/programming-guide/statements-expressions-operators/conversion-operators.md)
