--- a/docs/csharp/misc/cs0220.md
+++ b/docs/csharp/misc/cs0220.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0220"
+title: コンパイラ エラー CS0220
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0220
 helpviewer_keywords:
 - CS0220
 ms.assetid: f520bf34-bff8-4796-882b-1a9b1d5b977c
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 79e0ce80c407070292396e49e86d511f82177c7e
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: b66f6e55a0dfdb577a444f05857eb3bc2d8012f5
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33282926"
 ---
-# <a name="compiler-error-cs0220"></a><span data-ttu-id="3a5b8-102">コンパイラ エラー CS0220</span><span class="sxs-lookup"><span data-stu-id="3a5b8-102">Compiler Error CS0220</span></span>
-<span data-ttu-id="3a5b8-103">この操作はチェック モードでコンパイルしたときにオーバーフローします。</span><span class="sxs-lookup"><span data-stu-id="3a5b8-103">The operation overflows at compile time in checked mode</span></span>  
+# <a name="compiler-error-cs0220"></a><span data-ttu-id="da276-102">コンパイラ エラー CS0220</span><span class="sxs-lookup"><span data-stu-id="da276-102">Compiler Error CS0220</span></span>
+<span data-ttu-id="da276-103">この操作はチェック モードでコンパイルしたときにオーバーフローします。</span><span class="sxs-lookup"><span data-stu-id="da276-103">The operation overflows at compile time in checked mode</span></span>  
   
- <span data-ttu-id="3a5b8-104">[checked](../../csharp/language-reference/keywords/checked.md)で操作が検出されました。これは既定であり、データの損失が発生しました。</span><span class="sxs-lookup"><span data-stu-id="3a5b8-104">An operation was detected by [checked](../../csharp/language-reference/keywords/checked.md), which is the default, and a data loss resulted.</span></span> <span data-ttu-id="3a5b8-105">このエラーを解決するには、代入を修正するか、または [unchecked](../../csharp/language-reference/keywords/unchecked.md) を使用します。</span><span class="sxs-lookup"><span data-stu-id="3a5b8-105">Either correct the inputs to the assignment or use [unchecked](../../csharp/language-reference/keywords/unchecked.md) to resolve this error.</span></span> <span data-ttu-id="3a5b8-106">詳細については、次を参照してください。[オンとオフ](../../csharp/language-reference/keywords/checked-and-unchecked.md)です。</span><span class="sxs-lookup"><span data-stu-id="3a5b8-106">For more information, see [Checked and Unchecked](../../csharp/language-reference/keywords/checked-and-unchecked.md).</span></span>  
+ <span data-ttu-id="da276-104">[checked](../../csharp/language-reference/keywords/checked.md)で操作が検出されました。これは既定であり、データの損失が発生しました。</span><span class="sxs-lookup"><span data-stu-id="da276-104">An operation was detected by [checked](../../csharp/language-reference/keywords/checked.md), which is the default, and a data loss resulted.</span></span> <span data-ttu-id="da276-105">このエラーを解決するには、代入を修正するか、または [unchecked](../../csharp/language-reference/keywords/unchecked.md) を使用します。</span><span class="sxs-lookup"><span data-stu-id="da276-105">Either correct the inputs to the assignment or use [unchecked](../../csharp/language-reference/keywords/unchecked.md) to resolve this error.</span></span> <span data-ttu-id="da276-106">詳細については、次を参照してください。[オンとオフ](../../csharp/language-reference/keywords/checked-and-unchecked.md)です。</span><span class="sxs-lookup"><span data-stu-id="da276-106">For more information, see [Checked and Unchecked](../../csharp/language-reference/keywords/checked-and-unchecked.md).</span></span>  
   
- <span data-ttu-id="3a5b8-107">次の例では CS0220 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="3a5b8-107">The following sample generates CS0220:</span></span>  
+ <span data-ttu-id="da276-107">次の例では CS0220 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="da276-107">The following sample generates CS0220:</span></span>  
   
 ```csharp  
 // CS0220.cs  
