--- a/docs/csharp/misc/cs0249.md
+++ b/docs/csharp/misc/cs0249.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 8bc3572f-d949-4867-b119-6527fb924a4a
 ms.openlocfilehash: f825ddf4f07091b55bdf3b0ccc966e71b5ac3d2a
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33276079"
 ---
 # <a name="compiler-error-cs0249"></a><span data-ttu-id="82fe1-102">コンパイラ エラー CS0249</span><span class="sxs-lookup"><span data-stu-id="82fe1-102">Compiler Error CS0249</span></span>
 <span data-ttu-id="82fe1-103">object.Finalize をオーバーライドしないでください。</span><span class="sxs-lookup"><span data-stu-id="82fe1-103">Do not override object.Finalize.</span></span> <span data-ttu-id="82fe1-104">代わりにデストラクターを提供してください。</span><span class="sxs-lookup"><span data-stu-id="82fe1-104">Instead, provide a destructor.</span></span>  
