--- a/docs/csharp/misc/cs0251.md
+++ b/docs/csharp/misc/cs0251.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラの警告 (レベル 2) CS0251"
+title: コンパイラの警告 (レベル 2) CS0251
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0251
 helpviewer_keywords:
 - CS0251
 ms.assetid: 791a325a-096d-4d87-b31d-d9b3124210c8
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 25618372e740c78cff8ee66db48ce19ba8f2fd8f
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 4789f821ec585aa374ff619de1c924c699e26ffc
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33271332"
 ---
-# <a name="compiler-warning-level-2-cs0251"></a><span data-ttu-id="d83c9-102">コンパイラの警告 (レベル 2) CS0251</span><span class="sxs-lookup"><span data-stu-id="d83c9-102">Compiler Warning (level 2) CS0251</span></span>
-<span data-ttu-id="d83c9-103">負のインデックスで配列します。配列は常にゼロからの開始を示します。</span><span class="sxs-lookup"><span data-stu-id="d83c9-103">Indexing an array with a negative index (array indices always start at zero)</span></span>  
+# <a name="compiler-warning-level-2-cs0251"></a><span data-ttu-id="64745-102">コンパイラの警告 (レベル 2) CS0251</span><span class="sxs-lookup"><span data-stu-id="64745-102">Compiler Warning (level 2) CS0251</span></span>
+<span data-ttu-id="64745-103">負のインデックスで配列します。配列は常にゼロからの開始を示します。</span><span class="sxs-lookup"><span data-stu-id="64745-103">Indexing an array with a negative index (array indices always start at zero)</span></span>  
   
- <span data-ttu-id="d83c9-104">配列のインデックスに負の値を使用しないでください。</span><span class="sxs-lookup"><span data-stu-id="d83c9-104">Do not use a negative number to index into an array.</span></span>  
+ <span data-ttu-id="64745-104">配列のインデックスに負の値を使用しないでください。</span><span class="sxs-lookup"><span data-stu-id="64745-104">Do not use a negative number to index into an array.</span></span>  
   
- <span data-ttu-id="d83c9-105">次の例では CS0251 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="d83c9-105">The following sample generates CS0251:</span></span>  
+ <span data-ttu-id="64745-105">次の例では CS0251 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="64745-105">The following sample generates CS0251:</span></span>  
   
 ```csharp  
 // CS0251.cs  
