--- a/docs/csharp/misc/cs0272.md
+++ b/docs/csharp/misc/cs0272.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0272"
+title: コンパイラ エラー CS0272
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0272
 helpviewer_keywords:
 - CS0272
 ms.assetid: 16a9aab6-922a-45a3-a0ef-f32e99f3950f
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: c53a82575ffd09472a1625ba95041c24428c82b6
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 9f3646f8cc91ee59c3439cf3e77b3b027af3f1a4
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285591"
 ---
-# <a name="compiler-error-cs0272"></a><span data-ttu-id="0855b-102">コンパイラ エラー CS0272</span><span class="sxs-lookup"><span data-stu-id="0855b-102">Compiler Error CS0272</span></span>
-<span data-ttu-id="0855b-103">set アクセサーにアクセスできないため、プロパティまたはインデクサー 'property/indexer' はこのコンテキストでは使用できません</span><span class="sxs-lookup"><span data-stu-id="0855b-103">The property or indexer 'property/indexer' cannot be used in this context because the set accessor is inaccessible</span></span>  
+# <a name="compiler-error-cs0272"></a><span data-ttu-id="04835-102">コンパイラ エラー CS0272</span><span class="sxs-lookup"><span data-stu-id="04835-102">Compiler Error CS0272</span></span>
+<span data-ttu-id="04835-103">set アクセサーにアクセスできないため、プロパティまたはインデクサー 'property/indexer' はこのコンテキストでは使用できません</span><span class="sxs-lookup"><span data-stu-id="04835-103">The property or indexer 'property/indexer' cannot be used in this context because the set accessor is inaccessible</span></span>  
   
- <span data-ttu-id="0855b-104">このエラーは、 `set` アクセサーがプログラム コードにアクセスできないと発生します。</span><span class="sxs-lookup"><span data-stu-id="0855b-104">This error occurs when the `set` accessor is not accessible to the program code.</span></span> <span data-ttu-id="0855b-105">このエラーを解決するには、アクセサーのアクセシビリティを増やすか、呼び出し元の場所を変更します。</span><span class="sxs-lookup"><span data-stu-id="0855b-105">To resolve this error, increase the accessibility of the accessor, or change the calling location.</span></span> <span data-ttu-id="0855b-106">詳細については、「[アクセサーのアクセシビリティの制限](../../csharp/programming-guide/classes-and-structs/restricting-accessor-accessibility.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="0855b-106">For more information, see [Restricting Accessor Accessibility](../../csharp/programming-guide/classes-and-structs/restricting-accessor-accessibility.md).</span></span>  
+ <span data-ttu-id="04835-104">このエラーは、 `set` アクセサーがプログラム コードにアクセスできないと発生します。</span><span class="sxs-lookup"><span data-stu-id="04835-104">This error occurs when the `set` accessor is not accessible to the program code.</span></span> <span data-ttu-id="04835-105">このエラーを解決するには、アクセサーのアクセシビリティを増やすか、呼び出し元の場所を変更します。</span><span class="sxs-lookup"><span data-stu-id="04835-105">To resolve this error, increase the accessibility of the accessor, or change the calling location.</span></span> <span data-ttu-id="04835-106">詳細については、「[アクセサーのアクセシビリティの制限](../../csharp/programming-guide/classes-and-structs/restricting-accessor-accessibility.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="04835-106">For more information, see [Restricting Accessor Accessibility](../../csharp/programming-guide/classes-and-structs/restricting-accessor-accessibility.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="0855b-107">例</span><span class="sxs-lookup"><span data-stu-id="0855b-107">Example</span></span>  
- <span data-ttu-id="0855b-108">次の例では、CS0272 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="0855b-108">The following example generates CS0272:</span></span>  
+## <a name="example"></a><span data-ttu-id="04835-107">例</span><span class="sxs-lookup"><span data-stu-id="04835-107">Example</span></span>  
+ <span data-ttu-id="04835-108">次の例では、CS0272 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="04835-108">The following example generates CS0272:</span></span>  
   
 ```csharp  
 // CS0272.cs  
