--- a/docs/csharp/misc/cs0443.md
+++ b/docs/csharp/misc/cs0443.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0443"
+title: コンパイラ エラー CS0443
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0443
 helpviewer_keywords:
 - CS0443
 ms.assetid: 8f7f71ff-5eb5-4a1d-80ff-77303472eb8e
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 13493fee19237504c461747438245e80f5f26141
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: d8b4557461a136725109a702823a3b231b58e708
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33274272"
 ---
-# <a name="compiler-error-cs0443"></a><span data-ttu-id="41fec-102">コンパイラ エラー CS0443</span><span class="sxs-lookup"><span data-stu-id="41fec-102">Compiler Error CS0443</span></span>
-<span data-ttu-id="41fec-103">構文エラーです。値が必要です</span><span class="sxs-lookup"><span data-stu-id="41fec-103">Syntax error, value expected</span></span>  
+# <a name="compiler-error-cs0443"></a><span data-ttu-id="0fc35-102">コンパイラ エラー CS0443</span><span class="sxs-lookup"><span data-stu-id="0fc35-102">Compiler Error CS0443</span></span>
+<span data-ttu-id="0fc35-103">構文エラーです。値が必要です</span><span class="sxs-lookup"><span data-stu-id="0fc35-103">Syntax error, value expected</span></span>  
   
- <span data-ttu-id="41fec-104">このエラーは、配列インデックスの値を指定せずに配列を参照するときに発生します。</span><span class="sxs-lookup"><span data-stu-id="41fec-104">This error occurs when you reference an array without specifying a value for the array index.</span></span>  
+ <span data-ttu-id="0fc35-104">このエラーは、配列インデックスの値を指定せずに配列を参照するときに発生します。</span><span class="sxs-lookup"><span data-stu-id="0fc35-104">This error occurs when you reference an array without specifying a value for the array index.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="41fec-105">例</span><span class="sxs-lookup"><span data-stu-id="41fec-105">Example</span></span>  
- <span data-ttu-id="41fec-106">次のコードでは CS0443 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="41fec-106">The following code generates CS0443.</span></span>  
+## <a name="example"></a><span data-ttu-id="0fc35-105">例</span><span class="sxs-lookup"><span data-stu-id="0fc35-105">Example</span></span>  
+ <span data-ttu-id="0fc35-106">次のコードでは CS0443 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="0fc35-106">The following code generates CS0443.</span></span>  
   
 ```csharp  
 // CS0443.cs   
