--- a/docs/csharp/misc/cs0458.md
+++ b/docs/csharp/misc/cs0458.md
@@ -1,33 +1,27 @@
 ---
-title: "コンパイラの警告 (レベル 2) CS0458"
+title: コンパイラの警告 (レベル 2) CS0458
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0458
 helpviewer_keywords:
 - CS0458
 ms.assetid: 0986c620-b4bc-4e4b-976f-88359cfa3a45
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 3bd5037284feef29272f3e2d7cb5fc059f13743a
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: f642fa7d4eec80ace8175384597caa70b831c0c8
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33284577"
 ---
-# <a name="compiler-warning-level-2-cs0458"></a><span data-ttu-id="02d55-102">コンパイラの警告 (レベル 2) CS0458</span><span class="sxs-lookup"><span data-stu-id="02d55-102">Compiler Warning (level 2) CS0458</span></span>
-<span data-ttu-id="02d55-103">式の結果は常に型 'type name' の 'null' になります。</span><span class="sxs-lookup"><span data-stu-id="02d55-103">The result of the expression is always 'null' of type 'type name'</span></span>  
+# <a name="compiler-warning-level-2-cs0458"></a><span data-ttu-id="b31c3-102">コンパイラの警告 (レベル 2) CS0458</span><span class="sxs-lookup"><span data-stu-id="b31c3-102">Compiler Warning (level 2) CS0458</span></span>
+<span data-ttu-id="b31c3-103">式の結果は常に型 'type name' の 'null' になります。</span><span class="sxs-lookup"><span data-stu-id="b31c3-103">The result of the expression is always 'null' of type 'type name'</span></span>  
   
- <span data-ttu-id="02d55-104">この警告は、常に `nullable` になる `null`式によって生成されます。</span><span class="sxs-lookup"><span data-stu-id="02d55-104">This warning is caused by a `nullable` expression that always results in `null`.</span></span>  
+ <span data-ttu-id="b31c3-104">この警告は、常に `nullable` になる `null`式によって生成されます。</span><span class="sxs-lookup"><span data-stu-id="b31c3-104">This warning is caused by a `nullable` expression that always results in `null`.</span></span>  
   
- <span data-ttu-id="02d55-105">次のコードでは、警告 CS0458 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="02d55-105">The following code generates warning CS0458.</span></span>  
+ <span data-ttu-id="b31c3-105">次のコードでは、警告 CS0458 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="b31c3-105">The following code generates warning CS0458.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="02d55-106">例</span><span class="sxs-lookup"><span data-stu-id="02d55-106">Example</span></span>  
- <span data-ttu-id="02d55-107">この例は、このエラーが発生する `nullable` 型でのさまざまな操作を示しています。</span><span class="sxs-lookup"><span data-stu-id="02d55-107">This example illustrates a number of the different operations with `nullable` types that will cause this error.</span></span>  
+## <a name="example"></a><span data-ttu-id="b31c3-106">例</span><span class="sxs-lookup"><span data-stu-id="b31c3-106">Example</span></span>  
+ <span data-ttu-id="b31c3-107">この例は、このエラーが発生する `nullable` 型でのさまざまな操作を示しています。</span><span class="sxs-lookup"><span data-stu-id="b31c3-107">This example illustrates a number of the different operations with `nullable` types that will cause this error.</span></span>  
   
 ```csharp  
 // CS0458.cs  
