--- a/docs/csharp/misc/cs0508.md
+++ b/docs/csharp/misc/cs0508.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0508"
+title: コンパイラ エラー CS0508
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0508
 helpviewer_keywords:
 - CS0508
 ms.assetid: 28403573-6e64-4496-918d-fb50c8851e51
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 1d4441eff04b7eedddde51ea5562792d8e7a8acb
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 7a20827e62cf75d39a961aa05b92902c9c19783e
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285942"
 ---
-# <a name="compiler-error-cs0508"></a><span data-ttu-id="fb9ab-102">コンパイラ エラー CS0508</span><span class="sxs-lookup"><span data-stu-id="fb9ab-102">Compiler Error CS0508</span></span>
-<span data-ttu-id="fb9ab-103">'Type 1': オーバーライドされたメンバー 'Member Name' に対応するために、戻り値の型は 'Type 2' でなければなりません</span><span class="sxs-lookup"><span data-stu-id="fb9ab-103">'Type 1': return type must be 'Type 2' to match overridden member 'Member Name'</span></span>  
+# <a name="compiler-error-cs0508"></a><span data-ttu-id="45141-102">コンパイラ エラー CS0508</span><span class="sxs-lookup"><span data-stu-id="45141-102">Compiler Error CS0508</span></span>
+<span data-ttu-id="45141-103">'Type 1': オーバーライドされたメンバー 'Member Name' に対応するために、戻り値の型は 'Type 2' でなければなりません</span><span class="sxs-lookup"><span data-stu-id="45141-103">'Type 1': return type must be 'Type 2' to match overridden member 'Member Name'</span></span>  
   
- <span data-ttu-id="fb9ab-104">メソッド オーバーライドで、戻り値の型を変更しようとしています。</span><span class="sxs-lookup"><span data-stu-id="fb9ab-104">An attempt was made to change the return type in a method override.</span></span> <span data-ttu-id="fb9ab-105">このエラーを解決するには、両方のメソッドが同じ戻り値の型を宣言することを確認します。</span><span class="sxs-lookup"><span data-stu-id="fb9ab-105">To resolve this error, make sure both methods declare the same return type.</span></span>  
+ <span data-ttu-id="45141-104">メソッド オーバーライドで、戻り値の型を変更しようとしています。</span><span class="sxs-lookup"><span data-stu-id="45141-104">An attempt was made to change the return type in a method override.</span></span> <span data-ttu-id="45141-105">このエラーを解決するには、両方のメソッドが同じ戻り値の型を宣言することを確認します。</span><span class="sxs-lookup"><span data-stu-id="45141-105">To resolve this error, make sure both methods declare the same return type.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="fb9ab-106">例</span><span class="sxs-lookup"><span data-stu-id="fb9ab-106">Example</span></span>  
- <span data-ttu-id="fb9ab-107">次の例では CS0508 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="fb9ab-107">The following sample generates CS0508.</span></span>  
+## <a name="example"></a><span data-ttu-id="45141-106">例</span><span class="sxs-lookup"><span data-stu-id="45141-106">Example</span></span>  
+ <span data-ttu-id="45141-107">次の例では CS0508 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="45141-107">The following sample generates CS0508.</span></span>  
   
 ```csharp  
 // CS0508.cs  
