--- a/docs/csharp/misc/cs0509.md
+++ b/docs/csharp/misc/cs0509.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0509"
+title: コンパイラ エラー CS0509
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0509
 helpviewer_keywords:
 - CS0509
 ms.assetid: dc113e03-7a01-489b-b886-51ee056fc96a
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 05315d7fa583b510f232a1a216dc54a66003f696
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 15cf7ed686d653f02ea76f5eebcd0b7230e8f04d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33280495"
 ---
-# <a name="compiler-error-cs0509"></a><span data-ttu-id="cafda-102">コンパイラ エラー CS0509</span><span class="sxs-lookup"><span data-stu-id="cafda-102">Compiler Error CS0509</span></span>
-<span data-ttu-id="cafda-103">'class1': シール型 'class2' から派生することはできません</span><span class="sxs-lookup"><span data-stu-id="cafda-103">'class1' : cannot derive from sealed type 'class2'</span></span>  
+# <a name="compiler-error-cs0509"></a><span data-ttu-id="a88d2-102">コンパイラ エラー CS0509</span><span class="sxs-lookup"><span data-stu-id="a88d2-102">Compiler Error CS0509</span></span>
+<span data-ttu-id="a88d2-103">'class1': シール型 'class2' から派生することはできません</span><span class="sxs-lookup"><span data-stu-id="a88d2-103">'class1' : cannot derive from sealed type 'class2'</span></span>  
   
- <span data-ttu-id="cafda-104">[シール](../../csharp/language-reference/keywords/sealed.md) クラスは [基底](../../csharp/language-reference/keywords/base.md) クラスとしては機能しません。</span><span class="sxs-lookup"><span data-stu-id="cafda-104">A [sealed](../../csharp/language-reference/keywords/sealed.md) class cannot act as a [base](../../csharp/language-reference/keywords/base.md) class.</span></span> <span data-ttu-id="cafda-105">既定では、構造体はシールされています。</span><span class="sxs-lookup"><span data-stu-id="cafda-105">Structs are sealed by default.</span></span>  
+ <span data-ttu-id="a88d2-104">[シール](../../csharp/language-reference/keywords/sealed.md) クラスは [基底](../../csharp/language-reference/keywords/base.md) クラスとしては機能しません。</span><span class="sxs-lookup"><span data-stu-id="a88d2-104">A [sealed](../../csharp/language-reference/keywords/sealed.md) class cannot act as a [base](../../csharp/language-reference/keywords/base.md) class.</span></span> <span data-ttu-id="a88d2-105">既定では、構造体はシールされています。</span><span class="sxs-lookup"><span data-stu-id="a88d2-105">Structs are sealed by default.</span></span>  
   
- <span data-ttu-id="cafda-106">次の例では CS0509 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="cafda-106">The following sample generates CS0509:</span></span>  
+ <span data-ttu-id="a88d2-106">次の例では CS0509 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="a88d2-106">The following sample generates CS0509:</span></span>  
   
 ```csharp  
 // CS0509.cs  
