--- a/docs/csharp/misc/cs0538.md
+++ b/docs/csharp/misc/cs0538.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0538"
+title: コンパイラ エラー CS0538
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0538
 helpviewer_keywords:
 - CS0538
 ms.assetid: 46ac205e-16b0-4637-bd0f-9a755ac19f18
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 31c5c404f8cb84e403487766793fd79aa1da9cf3
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: d4e5073317889c1e4a3905535eaba2d537072f38
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33283791"
 ---
-# <a name="compiler-error-cs0538"></a><span data-ttu-id="e2424-102">コンパイラ エラー CS0538</span><span class="sxs-lookup"><span data-stu-id="e2424-102">Compiler Error CS0538</span></span>
-<span data-ttu-id="e2424-103">明示的インターフェイス宣言の中の 'name' はインターフェイスではありません</span><span class="sxs-lookup"><span data-stu-id="e2424-103">'name' in explicit interface declaration is not an interface</span></span>  
+# <a name="compiler-error-cs0538"></a><span data-ttu-id="eaa81-102">コンパイラ エラー CS0538</span><span class="sxs-lookup"><span data-stu-id="eaa81-102">Compiler Error CS0538</span></span>
+<span data-ttu-id="eaa81-103">明示的インターフェイス宣言の中の 'name' はインターフェイスではありません</span><span class="sxs-lookup"><span data-stu-id="eaa81-103">'name' in explicit interface declaration is not an interface</span></span>  
   
- <span data-ttu-id="e2424-104">[インターフェイス](../../csharp/language-reference/keywords/interface.md)を明示的に宣言しようとしましたが、インターフェイスが指定されていませんでした。</span><span class="sxs-lookup"><span data-stu-id="e2424-104">An attempt was made to explicitly declare an [interface](../../csharp/language-reference/keywords/interface.md), but an interface was not specified.</span></span>  
+ <span data-ttu-id="eaa81-104">[インターフェイス](../../csharp/language-reference/keywords/interface.md)を明示的に宣言しようとしましたが、インターフェイスが指定されていませんでした。</span><span class="sxs-lookup"><span data-stu-id="eaa81-104">An attempt was made to explicitly declare an [interface](../../csharp/language-reference/keywords/interface.md), but an interface was not specified.</span></span>  
   
- <span data-ttu-id="e2424-105">次の例では CS0538 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="e2424-105">The following sample generates CS0538:</span></span>  
+ <span data-ttu-id="eaa81-105">次の例では CS0538 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="eaa81-105">The following sample generates CS0538:</span></span>  
   
 ```csharp  
 // CS0538.cs  
