--- a/docs/csharp/misc/cs0553.md
+++ b/docs/csharp/misc/cs0553.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0553"
+title: コンパイラ エラー CS0553
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0553
 helpviewer_keywords:
 - CS0553
 ms.assetid: d2d6ddb1-9294-4e85-83d8-c35bd7a70f5b
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 5cdcd86e907cfb3f16015ee8337070b90ca39c00
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: d3f422221fa471089291bc9790a7973f44bf1f52
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33275393"
 ---
-# <a name="compiler-error-cs0553"></a><span data-ttu-id="35c1e-102">コンパイラ エラー CS0553</span><span class="sxs-lookup"><span data-stu-id="35c1e-102">Compiler Error CS0553</span></span>
-<span data-ttu-id="35c1e-103">'conversion routine': ユーザー定義の基底クラスとの間の変換</span><span class="sxs-lookup"><span data-stu-id="35c1e-103">'conversion routine' : user defined conversion to/from base class</span></span>  
+# <a name="compiler-error-cs0553"></a><span data-ttu-id="8b0f1-102">コンパイラ エラー CS0553</span><span class="sxs-lookup"><span data-stu-id="8b0f1-102">Compiler Error CS0553</span></span>
+<span data-ttu-id="8b0f1-103">'conversion routine': ユーザー定義の基底クラスとの間の変換</span><span class="sxs-lookup"><span data-stu-id="8b0f1-103">'conversion routine' : user defined conversion to/from base class</span></span>  
   
- <span data-ttu-id="35c1e-104">基底クラスの値へのユーザー定義の変換は許可されません。このような演算子は不要です。</span><span class="sxs-lookup"><span data-stu-id="35c1e-104">User-defined conversions to values of a base class are not allowed; you do not need such an operator.</span></span>  
+ <span data-ttu-id="8b0f1-104">基底クラスの値へのユーザー定義の変換は許可されません。このような演算子は不要です。</span><span class="sxs-lookup"><span data-stu-id="8b0f1-104">User-defined conversions to values of a base class are not allowed; you do not need such an operator.</span></span>  
   
- <span data-ttu-id="35c1e-105">次の例では CS0553 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="35c1e-105">The following sample generates CS0553:</span></span>  
+ <span data-ttu-id="8b0f1-105">次の例では CS0553 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="8b0f1-105">The following sample generates CS0553:</span></span>  
   
 ```csharp  
 // CS0553.cs  
