--- a/docs/visual-basic/misc/bc30095.md
+++ b/docs/visual-basic/misc/bc30095.md
@@ -1,35 +1,29 @@
 ---
-title: '&#39;です。場合 &#39; を選択します。一致する &#39; で終わる必要があります。最後の選択 &#39;'
+title: '&#39;Select Case&#39; 、対応する終了する必要があります&#39;End Select&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30095
 - bc30095
 helpviewer_keywords:
 - BC30095
 ms.assetid: f0809aa5-e6c9-43c9-9664-4ff02825c3d8
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 9cdcbff6d864e96814c2c52bd37a120a5baaad82
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 262627393a0bd22299e53cf0545f0fda64347d39
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33606163"
 ---
-# <a name="39select-case39-must-end-with-a-matching-39end-select39"></a><span data-ttu-id="4a7af-102">&#39;です。場合 &#39; を選択します。一致する &#39; で終わる必要があります。最後の選択 &#39;</span><span class="sxs-lookup"><span data-stu-id="4a7af-102">&#39;Select Case&#39; must end with a matching &#39;End Select&#39;</span></span>
-<span data-ttu-id="4a7af-103">`Select` ステートメントまたは `Select Case` ステートメントがありますが、対応する `End Select` ステートメントがありません。</span><span class="sxs-lookup"><span data-stu-id="4a7af-103">A `Select` or `Select Case` statement occurs without a corresponding `End Select` statement.</span></span> <span data-ttu-id="4a7af-104">`End Select` ステートメントを使用して、 `Select` ブロックを終了する必要があります。</span><span class="sxs-lookup"><span data-stu-id="4a7af-104">An `End Select` statement must be used to end the `Select` block.</span></span>  
+# <a name="39select-case39-must-end-with-a-matching-39end-select39"></a><span data-ttu-id="cea63-102">&#39;Select Case&#39; 、対応する終了する必要があります&#39;End Select&#39;</span><span class="sxs-lookup"><span data-stu-id="cea63-102">&#39;Select Case&#39; must end with a matching &#39;End Select&#39;</span></span>
+<span data-ttu-id="cea63-103">`Select` ステートメントまたは `Select Case` ステートメントがありますが、対応する `End Select` ステートメントがありません。</span><span class="sxs-lookup"><span data-stu-id="cea63-103">A `Select` or `Select Case` statement occurs without a corresponding `End Select` statement.</span></span> <span data-ttu-id="cea63-104">`End Select` ステートメントを使用して、 `Select` ブロックを終了する必要があります。</span><span class="sxs-lookup"><span data-stu-id="cea63-104">An `End Select` statement must be used to end the `Select` block.</span></span>  
   
- <span data-ttu-id="4a7af-105">**エラー ID:** BC30095</span><span class="sxs-lookup"><span data-stu-id="4a7af-105">**Error ID:** BC30095</span></span>  
+ <span data-ttu-id="cea63-105">**エラー ID:** BC30095</span><span class="sxs-lookup"><span data-stu-id="cea63-105">**Error ID:** BC30095</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4a7af-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="4a7af-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cea63-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="cea63-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="4a7af-107">この `Select` ブロックが入れ子になった `Select` ブロックのセットの一部である場合は、各ブロックが正しく終了していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="4a7af-107">If this `Select` block is part of a set of nested `Select` blocks, make sure each block is properly terminated.</span></span>  
+1.  <span data-ttu-id="cea63-107">この `Select` ブロックが入れ子になった `Select` ブロックのセットの一部である場合は、各ブロックが正しく終了していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="cea63-107">If this `Select` block is part of a set of nested `Select` blocks, make sure each block is properly terminated.</span></span>  
   
-2.  <span data-ttu-id="4a7af-108">`End Select` ステートメントを `Select` ブロックの最後に追加します。</span><span class="sxs-lookup"><span data-stu-id="4a7af-108">Add an `End Select` statement to the end of the `Select` block.</span></span>  
+2.  <span data-ttu-id="cea63-108">`End Select` ステートメントを `Select` ブロックの最後に追加します。</span><span class="sxs-lookup"><span data-stu-id="cea63-108">Add an `End Select` statement to the end of the `Select` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4a7af-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="4a7af-109">See Also</span></span>  
- [<span data-ttu-id="4a7af-110">Select...Case ステートメント</span><span class="sxs-lookup"><span data-stu-id="4a7af-110">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+## <a name="see-also"></a><span data-ttu-id="cea63-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="cea63-109">See Also</span></span>  
+ [<span data-ttu-id="cea63-110">Select...Case ステートメント</span><span class="sxs-lookup"><span data-stu-id="cea63-110">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
