commit translated contents

--- a/docs/visual-basic/misc/bc32020.md
+++ b/docs/visual-basic/misc/bc32020.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627151"
 ---
 # <a name="3939-expected-let-or-set-assignment"></a>&#39;=&#39; (Let またはセットの割り当て) が必要です
 A`Let`または`Set`代入ステートメントでは、等号 (=) は含まれません (`=`)。  
