--- a/docs/visual-basic/misc/bc33104.md
+++ b/docs/visual-basic/misc/bc33104.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627931"
 ---
 # <a name="39if39-operator-requires-either-two-or-three-operands"></a>&#39;場合&#39;演算子が 2 または 3 つのオペランドが必要です
 `If` 演算子には 2 つまたは 3 つの引数のみ使用できます。  
