--- a/docs/csharp/misc/cs0012.md
+++ b/docs/csharp/misc/cs0012.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 5523e349-22f4-4b0b-b4b0-c4bf26c461f4
 ms.openlocfilehash: 40ebd88a6a750a8a52a4fcd5d40ebeaf7282a809
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279767"
 ---
 # <a name="compiler-error-cs0012"></a>コンパイラ エラー CS0012
 型 'type' は、参照されていないアセンブリに定義されています。 アセンブリ 'assembly' に参照を追加する必要があります。  
