--- a/docs/csharp/misc/cs0148.md
+++ b/docs/csharp/misc/cs0148.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: d199afbf-02e1-4a1c-9e36-07bf86f1a2fb
 ms.openlocfilehash: e3a4881afda442bd159a6f885684cb1a6558b550
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33281389"
 ---
 # <a name="compiler-error-cs0148"></a>コンパイラ エラー CS0148
 デリゲート 'delegate' には有効なコンストラクターがありません。  
