--- a/docs/csharp/misc/cs0156.md
+++ b/docs/csharp/misc/cs0156.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 32026b1b-bcd7-4464-b63f-3b38c00452a6
 ms.openlocfilehash: f310b4b2b8aa320146d9114a999a82dcae2bb528
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33280937"
 ---
 # <a name="compiler-error-cs0156"></a>コンパイラ エラー CS0156
 引数のない throw ステートメントは、すぐ外側にある catch 句の中に入れ子にされた finally 句の中で使用することはできません。  
