--- a/docs/csharp/misc/cs0177.md
+++ b/docs/csharp/misc/cs0177.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 852a8c2a-2411-4800-af7c-4c572d9900d3
 ms.openlocfilehash: 874bcbd10dee9f4c195252f759cd09ab40e099da
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33283687"
 ---
 # <a name="compiler-error-cs0177"></a>コンパイラ エラー CS0177
 out パラメーター 'parameter' はコントロールが現在のメソッドを抜ける前に割り当てられる必要があります  
