--- a/docs/csharp/misc/cs0262.md
+++ b/docs/csharp/misc/cs0262.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 44f8661f-c934-483f-84cd-00ca8257e50a
 ms.openlocfilehash: f5940f108bc19beb8ea4d6132b4cfd7b51e6f365
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285968"
 ---
 # <a name="compiler-error-cs0262"></a>コンパイラ エラー CS0262
 'type' の partial 宣言には競合するアクセシビリティ修飾子が含まれています  
