--- a/docs/csharp/misc/cs0425.md
+++ b/docs/csharp/misc/cs0425.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: cec0391c-a641-43bc-8557-92b23f6ca685
 ms.openlocfilehash: 3350b9cd065be252d40bf6400088d93288f74b80
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285393"
 ---
 # <a name="compiler-error-cs0425"></a>コンパイラ エラー CS0425
 メソッド 'method' の型パラメーター 'type parameter' に対する制約は、インターフェイス メソッド 'method' の型パラメーター 'type parameter' に対する制約と一致しなければなりません。 明示的なインターフェイスの実装を使用することをお勧めします。  
