--- a/docs/csharp/misc/cs0517.md
+++ b/docs/csharp/misc/cs0517.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 33732ade-6ab9-4582-bea4-125d63388779
 ms.openlocfilehash: ba26aab4ce3005fd40e22cc4d4d83ceb28c14792
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33271004"
 ---
 # <a name="compiler-error-cs0517"></a>コンパイラ エラー CS0517
 'class' に基底クラスがないため、基底コンストラクターを呼び出せません。  
