--- a/docs/csharp/misc/cs0617.md
+++ b/docs/csharp/misc/cs0617.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: a4363709-9846-4cb8-8772-f5a3ea8555ca
 ms.openlocfilehash: 898b26bc820bb8d84c31ea409e522fcfb6afa7b8
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33308380"
 ---
 # <a name="compiler-error-cs0617"></a>コンパイラ エラー CS0617
 'reference' は有効な属性パラメーター型ではないため、有効な名前付き属性引数ではありません  
