--- a/docs/csharp/misc/cs0828.md
+++ b/docs/csharp/misc/cs0828.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: e18ffe72-2fcc-436d-be7f-8c8365b86129
 ms.openlocfilehash: 815780a9110bc926765126c2644b0f13ddbae25c
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303005"
 ---
 # <a name="compiler-error-cs0828"></a>コンパイラ エラー CS0828
 'expression' を、匿名型プロパティに割り当てることはできません。  
