--- a/docs/csharp/misc/cs1017.md
+++ b/docs/csharp/misc/cs1017.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: e0902e8a-b042-4711-a8a6-83456a3f88cb
 ms.openlocfilehash: 6371673d05ecd427dd410ea639f0f0671f851697
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303658"
 ---
 # <a name="compiler-error-cs1017"></a>コンパイラ エラー CS1017
 catch 句を、try ステートメントの一般的な catch 句の後に置くことはできません。  
