--- a/docs/csharp/misc/cs1680.md
+++ b/docs/csharp/misc/cs1680.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 973da155-e6fa-4de8-94fd-7838f839a81f
 ms.openlocfilehash: 0b4269461d410f0eaba68291c09dd87f94915721
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33306544"
 ---
 # <a name="compiler-error-cs1680"></a>コンパイラ エラー CS1680
 無効な参照エイリアス オプションです: 'alias=' -- ファイル名が指定されていません。  
