--- a/docs/visual-basic/misc/bc32024.md
+++ b/docs/visual-basic/misc/bc32024.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626124"
 ---
 # <a name="default-values-cannot-be-supplied-for-parameters-that-are-not-declared-39optional39"></a>既定値は、宣言されていないパラメーターに対して指定することはできません&#39;オプション&#39;
 プロシージャを呼び出す場合は必要な引数を指定する必要があり、引数は宣言で既定値を受け取りません。  
