--- a/docs/visual-basic/misc/bc32055.md
+++ b/docs/visual-basic/misc/bc32055.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627560"
 ---
 # <a name="type-39lttypenamegt39-cannot-inherit-from-a-type-parameter"></a>型&#39; &lt;typename&gt; &#39;型パラメーターから継承することはできません
 クラスまたはインターフェイスに、ジェネリック型パラメーターを指定する [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) が含まれています。  
