--- a/docs/visual-basic/misc/bc36007.md
+++ b/docs/visual-basic/misc/bc36007.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627599"
 ---
 # <a name="39end-using39-must-be-preceded-by-a-matching-39using39"></a>&#39;使用して終了&#39;前に、対応する必要がある&#39;を使用します。&#39;
 一致する `End Using` 宣言を先に記述することなく、 `Using` ステートメントを記述しています。  
