--- a/docs/visual-basic/misc/bc32020.md
+++ b/docs/visual-basic/misc/bc32020.md
@@ -1,39 +1,33 @@
 ---
-title: "&#39; = (& a) #39 です。予期される (Let またはセットの割り当て)"
+title: '&#39;=&#39; (Let またはセットの割り当て) が必要です'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc32020
 - vbc32020
 helpviewer_keywords:
 - BC32020
 ms.assetid: 1b12f082-e502-4524-9326-b9b372670243
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: d6094c056aa45afdd6841e247cf3b9726ee2734e
-ms.sourcegitcommit: c0dd436f6f8f44dc80dc43b07f6841a00b74b23f
+ms.openlocfilehash: 09a9842980020c988136885739a1da1d8060b907
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 01/19/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627151"
 ---
-# <a name="3939-expected-let-or-set-assignment"></a><span data-ttu-id="d79f2-102">&#39; = (& a) #39 です。予期される (Let またはセットの割り当て)</span><span class="sxs-lookup"><span data-stu-id="d79f2-102">&#39;=&#39; expected (Let or Set assignment)</span></span>
-<span data-ttu-id="d79f2-103">A`Let`または`Set`代入ステートメントでは、等号 (=) は含まれません (`=`)。</span><span class="sxs-lookup"><span data-stu-id="d79f2-103">A `Let` or `Set` assignment statement does not include an equal sign (`=`).</span></span>  
+# <a name="3939-expected-let-or-set-assignment"></a><span data-ttu-id="8019d-102">&#39;=&#39; (Let またはセットの割り当て) が必要です</span><span class="sxs-lookup"><span data-stu-id="8019d-102">&#39;=&#39; expected (Let or Set assignment)</span></span>
+<span data-ttu-id="8019d-103">A`Let`または`Set`代入ステートメントでは、等号 (=) は含まれません (`=`)。</span><span class="sxs-lookup"><span data-stu-id="8019d-103">A `Let` or `Set` assignment statement does not include an equal sign (`=`).</span></span>  
   
- <span data-ttu-id="d79f2-104">`Let`と`Set`代入ステートメントは現在のバージョンの Visual Basic ではサポートされていません。</span><span class="sxs-lookup"><span data-stu-id="d79f2-104">The `Let` and `Set` assignment statements are not supported in the current version of Visual Basic.</span></span> <span data-ttu-id="d79f2-105">コンパイラは、値を受け取るには、プログラミングの要素のデータ型からの割り当ての種類を判断できます。</span><span class="sxs-lookup"><span data-stu-id="d79f2-105">The compiler can determine the type of assignment from the data type of the programming element that is to receive the value.</span></span> <span data-ttu-id="d79f2-106">A*値の型*割り当て置換、`Let`ステートメントでは、および*参照型*割り当てに置換`Set`ステートメントです。</span><span class="sxs-lookup"><span data-stu-id="d79f2-106">A *value type* assignment replaces the `Let` statement, and a *reference type* assignment replaces the former `Set` statement.</span></span>  
+ <span data-ttu-id="8019d-104">`Let`と`Set`代入ステートメントは現在のバージョンの Visual Basic ではサポートされていません。</span><span class="sxs-lookup"><span data-stu-id="8019d-104">The `Let` and `Set` assignment statements are not supported in the current version of Visual Basic.</span></span> <span data-ttu-id="8019d-105">コンパイラは、値を受け取るには、プログラミングの要素のデータ型からの割り当ての種類を判断できます。</span><span class="sxs-lookup"><span data-stu-id="8019d-105">The compiler can determine the type of assignment from the data type of the programming element that is to receive the value.</span></span> <span data-ttu-id="8019d-106">A*値の型*割り当て置換、`Let`ステートメントでは、および*参照型*割り当てに置換`Set`ステートメントです。</span><span class="sxs-lookup"><span data-stu-id="8019d-106">A *value type* assignment replaces the `Let` statement, and a *reference type* assignment replaces the former `Set` statement.</span></span>  
   
- <span data-ttu-id="d79f2-107">[Set ステートメント](../../visual-basic/language-reference/statements/set-statement.md)はプロパティの定義で使用されとの関係を持たない、`Set`代入ステートメント。</span><span class="sxs-lookup"><span data-stu-id="d79f2-107">The [Set Statement](../../visual-basic/language-reference/statements/set-statement.md) is used in property definitions and has no relation to the `Set` assignment statement.</span></span>  
+ <span data-ttu-id="8019d-107">[Set ステートメント](../../visual-basic/language-reference/statements/set-statement.md)はプロパティの定義で使用されとの関係を持たない、`Set`代入ステートメント。</span><span class="sxs-lookup"><span data-stu-id="8019d-107">The [Set Statement](../../visual-basic/language-reference/statements/set-statement.md) is used in property definitions and has no relation to the `Set` assignment statement.</span></span>  
   
- <span data-ttu-id="d79f2-108">**エラー ID:** BC32020</span><span class="sxs-lookup"><span data-stu-id="d79f2-108">**Error ID:** BC32020</span></span>  
+ <span data-ttu-id="8019d-108">**エラー ID:** BC32020</span><span class="sxs-lookup"><span data-stu-id="8019d-108">**Error ID:** BC32020</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d79f2-109">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="d79f2-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8019d-109">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8019d-109">To correct this error</span></span>  
   
--   <span data-ttu-id="d79f2-110">等号 (=) を含む、標準の代入ステートメントを使用 (`=`) と、変数またはプロパティに割り当てられる値です。</span><span class="sxs-lookup"><span data-stu-id="d79f2-110">Use a standard assignment statement, including an equal sign (`=`) and a value to be assigned to the variable or property.</span></span>  
+-   <span data-ttu-id="8019d-110">等号 (=) を含む、標準の代入ステートメントを使用 (`=`) と、変数またはプロパティに割り当てられる値です。</span><span class="sxs-lookup"><span data-stu-id="8019d-110">Use a standard assignment statement, including an equal sign (`=`) and a value to be assigned to the variable or property.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d79f2-111">参照</span><span class="sxs-lookup"><span data-stu-id="d79f2-111">See Also</span></span>  
- [<span data-ttu-id="d79f2-112">プログラミング要素のサポートの変更の概要</span><span class="sxs-lookup"><span data-stu-id="d79f2-112">Programming Element Support Changes Summary</span></span>](http://msdn.microsoft.com/library/0483590a-6309-449c-a2fa-effa26a03b95)  
- [<span data-ttu-id="d79f2-113">値型と参照型</span><span class="sxs-lookup"><span data-stu-id="d79f2-113">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)  
- [<span data-ttu-id="d79f2-114">代入演算子 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="d79f2-114">Assignment operators (Visual Basic)</span></span>](~/docs/visual-basic/language-reference/operators/assignment-operators.md)
+## <a name="see-also"></a><span data-ttu-id="8019d-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="8019d-111">See Also</span></span>  
+ [<span data-ttu-id="8019d-112">プログラミング要素のサポートの変更の概要</span><span class="sxs-lookup"><span data-stu-id="8019d-112">Programming Element Support Changes Summary</span></span>](http://msdn.microsoft.com/library/0483590a-6309-449c-a2fa-effa26a03b95)  
+ [<span data-ttu-id="8019d-113">値型と参照型</span><span class="sxs-lookup"><span data-stu-id="8019d-113">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)  
+ [<span data-ttu-id="8019d-114">代入演算子 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="8019d-114">Assignment operators (Visual Basic)</span></span>](~/docs/visual-basic/language-reference/operators/assignment-operators.md)
