--- a/docs/csharp/misc/cs0012.md
+++ b/docs/csharp/misc/cs0012.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0012"
+title: コンパイラ エラー CS0012
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0012
 helpviewer_keywords:
 - CS0012
 ms.assetid: 5523e349-22f4-4b0b-b4b0-c4bf26c461f4
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 2405ffc82a052b6f57cc2b47c0fcaa44da7c71ed
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 40ebd88a6a750a8a52a4fcd5d40ebeaf7282a809
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279767"
 ---
-# <a name="compiler-error-cs0012"></a><span data-ttu-id="4c3e5-102">コンパイラ エラー CS0012</span><span class="sxs-lookup"><span data-stu-id="4c3e5-102">Compiler Error CS0012</span></span>
-<span data-ttu-id="4c3e5-103">型 'type' は、参照されていないアセンブリに定義されています。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-103">The type 'type' is defined in an assembly that is not referenced.</span></span> <span data-ttu-id="4c3e5-104">アセンブリ 'assembly' に参照を追加する必要があります。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-104">You must add a reference to assembly 'assembly'.</span></span>  
+# <a name="compiler-error-cs0012"></a><span data-ttu-id="eca1e-102">コンパイラ エラー CS0012</span><span class="sxs-lookup"><span data-stu-id="eca1e-102">Compiler Error CS0012</span></span>
+<span data-ttu-id="eca1e-103">型 'type' は、参照されていないアセンブリに定義されています。</span><span class="sxs-lookup"><span data-stu-id="eca1e-103">The type 'type' is defined in an assembly that is not referenced.</span></span> <span data-ttu-id="eca1e-104">アセンブリ 'assembly' に参照を追加する必要があります。</span><span class="sxs-lookup"><span data-stu-id="eca1e-104">You must add a reference to assembly 'assembly'.</span></span>  
   
- <span data-ttu-id="4c3e5-105">参照される型の定義が見つかりませんでした。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-105">The definition for a referenced type was not found.</span></span> <span data-ttu-id="4c3e5-106">このエラーは、必要な .DLL ファイルがコンパイル時にインクルードされていない場合に発生することがあります。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-106">This could occur if a required .DLL file is not included in the compilation.</span></span> <span data-ttu-id="4c3e5-107">詳細については、次を参照してください。[参照の追加 ダイアログ ボックス](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7)と[/reference (c# コンパイラ オプション)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)です。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-107">For more information, see [Add Reference Dialog Box](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) and [/reference (C# Compiler Options)](../../csharp/language-reference/compiler-options/reference-compiler-option.md).</span></span>  
+ <span data-ttu-id="eca1e-105">参照される型の定義が見つかりませんでした。</span><span class="sxs-lookup"><span data-stu-id="eca1e-105">The definition for a referenced type was not found.</span></span> <span data-ttu-id="eca1e-106">このエラーは、必要な .DLL ファイルがコンパイル時にインクルードされていない場合に発生することがあります。</span><span class="sxs-lookup"><span data-stu-id="eca1e-106">This could occur if a required .DLL file is not included in the compilation.</span></span> <span data-ttu-id="eca1e-107">詳細については、次を参照してください。[参照の追加 ダイアログ ボックス](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7)と[/reference (c# コンパイラ オプション)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)です。</span><span class="sxs-lookup"><span data-stu-id="eca1e-107">For more information, see [Add Reference Dialog Box](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) and [/reference (C# Compiler Options)](../../csharp/language-reference/compiler-options/reference-compiler-option.md).</span></span>  
   
- <span data-ttu-id="4c3e5-108">次のコンパイル シーケンスは CS0012 になります。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-108">The following sequence of compilations will result in CS0012:</span></span>  
+ <span data-ttu-id="eca1e-108">次のコンパイル シーケンスは CS0012 になります。</span><span class="sxs-lookup"><span data-stu-id="eca1e-108">The following sequence of compilations will result in CS0012:</span></span>  
   
 ```csharp  
 // cs0012a.cs  
@@ -32,7 +26,7 @@ ms.lasthandoff: 03/15/2018
 public class A {}  
 ```  
   
- <span data-ttu-id="4c3e5-109">次のコードも同様の結果になります。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-109">Then:</span></span>  
+ <span data-ttu-id="eca1e-109">次のコードも同様の結果になります。</span><span class="sxs-lookup"><span data-stu-id="eca1e-109">Then:</span></span>  
   
 ```csharp  
 // cs0012b.cs  
@@ -46,7 +40,7 @@ public class B
 }  
 ```  
   
- <span data-ttu-id="4c3e5-110">次のコードも同様の結果になります。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-110">Then:</span></span>  
+ <span data-ttu-id="eca1e-110">次のコードも同様の結果になります。</span><span class="sxs-lookup"><span data-stu-id="eca1e-110">Then:</span></span>  
   
 ```csharp  
 // cs0012c.cs  
@@ -60,4 +54,4 @@ class C
 }  
 ```  
   
- <span data-ttu-id="4c3e5-111">コンパイルすると、この CS0012 を解決する可能性があります`/reference:cs0012b.dll;cs0012a.dll`、または Visual Studio を使用して、[参照の追加 ダイアログ ボックス](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7)cs0012b.dll に加えて cs0012a.dll への参照を追加します。</span><span class="sxs-lookup"><span data-stu-id="4c3e5-111">You could resolve this CS0012 by compiling with `/reference:cs0012b.dll;cs0012a.dll`, or in Visual Studio by using the [Add Reference Dialog Box](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) to add a reference to cs0012a.dll in addition to cs0012b.dll.</span></span>
+ <span data-ttu-id="eca1e-111">コンパイルすると、この CS0012 を解決する可能性があります`/reference:cs0012b.dll;cs0012a.dll`、または Visual Studio を使用して、[参照の追加 ダイアログ ボックス](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7)cs0012b.dll に加えて cs0012a.dll への参照を追加します。</span><span class="sxs-lookup"><span data-stu-id="eca1e-111">You could resolve this CS0012 by compiling with `/reference:cs0012b.dll;cs0012a.dll`, or in Visual Studio by using the [Add Reference Dialog Box](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) to add a reference to cs0012a.dll in addition to cs0012b.dll.</span></span>
