--- a/docs/csharp/misc/cs0060.md
+++ b/docs/csharp/misc/cs0060.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: ae6d4fb7-5ff9-4883-82c3-f55b190f439a
 ms.openlocfilehash: 7f9730c1f6779732cfd98b9581570aa47738d96c
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33277223"
 ---
 # <a name="compiler-error-cs0060"></a><span data-ttu-id="3522d-102">コンパイラ エラー CS0060</span><span class="sxs-lookup"><span data-stu-id="3522d-102">Compiler Error CS0060</span></span>
 <span data-ttu-id="3522d-103">アクセシビリティに一貫性がありません。基底クラス 'class1' のアクセシビリティはクラス 'class2' よりも低く設定されています。</span><span class="sxs-lookup"><span data-stu-id="3522d-103">Inconsistent accessibility: base class 'class1' is less accessible than class 'class2'</span></span>  
