--- a/docs/csharp/misc/cs0170.md
+++ b/docs/csharp/misc/cs0170.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0170"
+title: コンパイラ エラー CS0170
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0170
 helpviewer_keywords:
 - CS0170
 ms.assetid: ba881e38-2abf-4a5f-b9e6-28d26a5bd235
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 495469400358b586238b36d41c0cae77fd570d9e
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: d52f8ef4cae80dbde97dc6875311e0fe4efc2337
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33282731"
 ---
-# <a name="compiler-error-cs0170"></a><span data-ttu-id="93622-102">コンパイラ エラー CS0170</span><span class="sxs-lookup"><span data-stu-id="93622-102">Compiler Error CS0170</span></span>
-<span data-ttu-id="93622-103">フィールド 'field' は、割り当てられていない可能性があります</span><span class="sxs-lookup"><span data-stu-id="93622-103">Use of possibly unassigned field 'field'</span></span>  
+# <a name="compiler-error-cs0170"></a><span data-ttu-id="bb275-102">コンパイラ エラー CS0170</span><span class="sxs-lookup"><span data-stu-id="bb275-102">Compiler Error CS0170</span></span>
+<span data-ttu-id="bb275-103">フィールド 'field' は、割り当てられていない可能性があります</span><span class="sxs-lookup"><span data-stu-id="bb275-103">Use of possibly unassigned field 'field'</span></span>  
   
- <span data-ttu-id="93622-104">構造内のフィールドが、最初に初期化しないで使用されています。</span><span class="sxs-lookup"><span data-stu-id="93622-104">A field in a structure was used without first being initialized.</span></span> <span data-ttu-id="93622-105">この問題を解決するには、初期化されていないフィールドをまず確認し、そのフィールドにアクセスする前に初期化します。</span><span class="sxs-lookup"><span data-stu-id="93622-105">To solve this problem, first determine which field was uninitialized and then initialize it before you try to access it.</span></span> <span data-ttu-id="93622-106">構造体の初期化の詳細については、次を参照してください。[構造体](../../csharp/programming-guide/classes-and-structs/structs.md)と[を使用して構造体](../../csharp/programming-guide/classes-and-structs/using-structs.md)です。</span><span class="sxs-lookup"><span data-stu-id="93622-106">For more information about initializing structs, see [Structs](../../csharp/programming-guide/classes-and-structs/structs.md) and [Using Structs](../../csharp/programming-guide/classes-and-structs/using-structs.md).</span></span>  
+ <span data-ttu-id="bb275-104">構造内のフィールドが、最初に初期化しないで使用されています。</span><span class="sxs-lookup"><span data-stu-id="bb275-104">A field in a structure was used without first being initialized.</span></span> <span data-ttu-id="bb275-105">この問題を解決するには、初期化されていないフィールドをまず確認し、そのフィールドにアクセスする前に初期化します。</span><span class="sxs-lookup"><span data-stu-id="bb275-105">To solve this problem, first determine which field was uninitialized and then initialize it before you try to access it.</span></span> <span data-ttu-id="bb275-106">構造体の初期化の詳細については、次を参照してください。[構造体](../../csharp/programming-guide/classes-and-structs/structs.md)と[を使用して構造体](../../csharp/programming-guide/classes-and-structs/using-structs.md)です。</span><span class="sxs-lookup"><span data-stu-id="bb275-106">For more information about initializing structs, see [Structs](../../csharp/programming-guide/classes-and-structs/structs.md) and [Using Structs](../../csharp/programming-guide/classes-and-structs/using-structs.md).</span></span>  
   
- <span data-ttu-id="93622-107">次の例では CS0170 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="93622-107">The following sample generates CS0170:</span></span>  
+ <span data-ttu-id="bb275-107">次の例では CS0170 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="bb275-107">The following sample generates CS0170:</span></span>  
   
 ```csharp  
 // CS0170.cs  
