--- a/docs/csharp/misc/cs0177.md
+++ b/docs/csharp/misc/cs0177.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0177"
+title: コンパイラ エラー CS0177
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0177
 helpviewer_keywords:
 - CS0177
 ms.assetid: 852a8c2a-2411-4800-af7c-4c572d9900d3
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 4a9feffea2b3f4f4c26f9c984a9087c51446834b
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 874bcbd10dee9f4c195252f759cd09ab40e099da
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33283687"
 ---
-# <a name="compiler-error-cs0177"></a><span data-ttu-id="c8ed0-102">コンパイラ エラー CS0177</span><span class="sxs-lookup"><span data-stu-id="c8ed0-102">Compiler Error CS0177</span></span>
-<span data-ttu-id="c8ed0-103">out パラメーター 'parameter' はコントロールが現在のメソッドを抜ける前に割り当てられる必要があります</span><span class="sxs-lookup"><span data-stu-id="c8ed0-103">The out parameter 'parameter' must be assigned to before control leaves the current method</span></span>  
+# <a name="compiler-error-cs0177"></a><span data-ttu-id="d86f5-102">コンパイラ エラー CS0177</span><span class="sxs-lookup"><span data-stu-id="d86f5-102">Compiler Error CS0177</span></span>
+<span data-ttu-id="d86f5-103">out パラメーター 'parameter' はコントロールが現在のメソッドを抜ける前に割り当てられる必要があります</span><span class="sxs-lookup"><span data-stu-id="d86f5-103">The out parameter 'parameter' must be assigned to before control leaves the current method</span></span>  
   
- <span data-ttu-id="c8ed0-104">マークされたパラメーター、[アウト](../../csharp/language-reference/keywords/out-parameter-modifier.md)キーワードは、メソッドの本体で値を割り当てられませんでした。</span><span class="sxs-lookup"><span data-stu-id="c8ed0-104">A parameter marked with the [out](../../csharp/language-reference/keywords/out-parameter-modifier.md) keyword was not assigned a value in the method body.</span></span> <span data-ttu-id="c8ed0-105">詳細については、次を参照してください[パラメーターの引き渡し。](../../csharp/programming-guide/classes-and-structs/passing-parameters.md)</span><span class="sxs-lookup"><span data-stu-id="c8ed0-105">For more information, see [Passing Parameters](../../csharp/programming-guide/classes-and-structs/passing-parameters.md)</span></span>  
+ <span data-ttu-id="d86f5-104">マークされたパラメーター、[アウト](../../csharp/language-reference/keywords/out-parameter-modifier.md)キーワードは、メソッドの本体で値を割り当てられませんでした。</span><span class="sxs-lookup"><span data-stu-id="d86f5-104">A parameter marked with the [out](../../csharp/language-reference/keywords/out-parameter-modifier.md) keyword was not assigned a value in the method body.</span></span> <span data-ttu-id="d86f5-105">詳細については、次を参照してください[パラメーターの引き渡し。](../../csharp/programming-guide/classes-and-structs/passing-parameters.md)</span><span class="sxs-lookup"><span data-stu-id="d86f5-105">For more information, see [Passing Parameters](../../csharp/programming-guide/classes-and-structs/passing-parameters.md)</span></span>  
   
- <span data-ttu-id="c8ed0-106">次の例では CS0177 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="c8ed0-106">The following sample generates CS0177:</span></span>  
+ <span data-ttu-id="d86f5-106">次の例では CS0177 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="d86f5-106">The following sample generates CS0177:</span></span>  
   
 ```csharp  
 // CS0177.cs  
