--- a/docs/csharp/misc/cs0198.md
+++ b/docs/csharp/misc/cs0198.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0198"
+title: コンパイラ エラー CS0198
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0198
 helpviewer_keywords:
 - CS0198
 ms.assetid: 222c20f6-3f7f-4750-9f99-b5e6ae6c1271
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: f838fa9d174ff86c502d991ea30be5af0af4f0f8
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 438563eaacbbfb585004c10a134749b4b9a437e7
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285318"
 ---
-# <a name="compiler-error-cs0198"></a><span data-ttu-id="10c8d-102">コンパイラ エラー CS0198</span><span class="sxs-lookup"><span data-stu-id="10c8d-102">Compiler Error CS0198</span></span>
-<span data-ttu-id="10c8d-103">静的読み取り専用フィールド 'name' のフィールドへの割り当てはできません (静的コンストラクターまたは変数初期化子では可)</span><span class="sxs-lookup"><span data-stu-id="10c8d-103">Fields of static readonly field 'name' cannot be assigned to (except in a static constructor or a variable initializer)</span></span>  
+# <a name="compiler-error-cs0198"></a><span data-ttu-id="f2320-102">コンパイラ エラー CS0198</span><span class="sxs-lookup"><span data-stu-id="f2320-102">Compiler Error CS0198</span></span>
+<span data-ttu-id="f2320-103">静的読み取り専用フィールド 'name' のフィールドへの割り当てはできません (静的コンストラクターまたは変数初期化子では可)</span><span class="sxs-lookup"><span data-stu-id="f2320-103">Fields of static readonly field 'name' cannot be assigned to (except in a static constructor or a variable initializer)</span></span>  
   
- <span data-ttu-id="10c8d-104">[readonly](../../csharp/language-reference/keywords/readonly.md) 変数は、それを初期化するコンストラクターと同じように [static](../../csharp/language-reference/keywords/static.md) を使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="10c8d-104">A [readonly](../../csharp/language-reference/keywords/readonly.md) variable must have the same [static](../../csharp/language-reference/keywords/static.md) usage as the constructor in which you want to initialize it.</span></span> <span data-ttu-id="10c8d-105">詳細については、「[静的コンストラクター](../../csharp/programming-guide/classes-and-structs/static-constructors.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="10c8d-105">For more information, see [Static Constructors](../../csharp/programming-guide/classes-and-structs/static-constructors.md).</span></span>  
+ <span data-ttu-id="f2320-104">[readonly](../../csharp/language-reference/keywords/readonly.md) 変数は、それを初期化するコンストラクターと同じように [static](../../csharp/language-reference/keywords/static.md) を使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="f2320-104">A [readonly](../../csharp/language-reference/keywords/readonly.md) variable must have the same [static](../../csharp/language-reference/keywords/static.md) usage as the constructor in which you want to initialize it.</span></span> <span data-ttu-id="f2320-105">詳細については、「[静的コンストラクター](../../csharp/programming-guide/classes-and-structs/static-constructors.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="f2320-105">For more information, see [Static Constructors](../../csharp/programming-guide/classes-and-structs/static-constructors.md).</span></span>  
   
- <span data-ttu-id="10c8d-106">次の例では CS0198 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="10c8d-106">The following sample generates CS0198:</span></span>  
+ <span data-ttu-id="f2320-106">次の例では CS0198 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="f2320-106">The following sample generates CS0198:</span></span>  
   
 ```csharp  
 // CS0198.cs  
