--- a/docs/csharp/misc/cs0252.md
+++ b/docs/csharp/misc/cs0252.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラの警告 (レベル 2) CS0252"
+title: コンパイラの警告 (レベル 2) CS0252
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0252
 helpviewer_keywords:
 - CS0252
 ms.assetid: ff82fbac-01cf-4ae9-b6a0-3aa990096b46
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 2529786e90ffa78fc3f75fc9b73110473b8d214f
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 39f78eded6cfb08fe80e4e90609c645825987e00
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33275819"
 ---
-# <a name="compiler-warning-level-2-cs0252"></a><span data-ttu-id="b5b03-102">コンパイラの警告 (レベル 2) CS0252</span><span class="sxs-lookup"><span data-stu-id="b5b03-102">Compiler Warning (level 2) CS0252</span></span>
-<span data-ttu-id="b5b03-103">予期しない参照比較です。比較値を取得するには、型 'type' に左辺をキャストしてください</span><span class="sxs-lookup"><span data-stu-id="b5b03-103">Possible unintended reference comparison; to get a value comparison, cast the left hand side to type 'type'</span></span>  
+# <a name="compiler-warning-level-2-cs0252"></a><span data-ttu-id="2c038-102">コンパイラの警告 (レベル 2) CS0252</span><span class="sxs-lookup"><span data-stu-id="2c038-102">Compiler Warning (level 2) CS0252</span></span>
+<span data-ttu-id="2c038-103">予期しない参照比較です。比較値を取得するには、型 'type' に左辺をキャストしてください</span><span class="sxs-lookup"><span data-stu-id="2c038-103">Possible unintended reference comparison; to get a value comparison, cast the left hand side to type 'type'</span></span>  
   
- <span data-ttu-id="b5b03-104">コンパイラは参照比較を行っています。</span><span class="sxs-lookup"><span data-stu-id="b5b03-104">The compiler is doing a reference comparison.</span></span> <span data-ttu-id="b5b03-105">文字列の値を比較する場合は、式の左辺を `type`にキャストします。</span><span class="sxs-lookup"><span data-stu-id="b5b03-105">If you want to compare the value of strings, cast the left side of the expression to `type`.</span></span>  
+ <span data-ttu-id="2c038-104">コンパイラは参照比較を行っています。</span><span class="sxs-lookup"><span data-stu-id="2c038-104">The compiler is doing a reference comparison.</span></span> <span data-ttu-id="2c038-105">文字列の値を比較する場合は、式の左辺を `type`にキャストします。</span><span class="sxs-lookup"><span data-stu-id="2c038-105">If you want to compare the value of strings, cast the left side of the expression to `type`.</span></span>  
   
- <span data-ttu-id="b5b03-106">次の例では CS0252 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="b5b03-106">The following sample generates CS0252:</span></span>  
+ <span data-ttu-id="2c038-106">次の例では CS0252 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="2c038-106">The following sample generates CS0252:</span></span>  
   
 ```csharp  
 // CS0252.cs  
