--- a/docs/csharp/misc/cs0262.md
+++ b/docs/csharp/misc/cs0262.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0262"
+title: コンパイラ エラー CS0262
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0262
 helpviewer_keywords:
 - CS0262
 ms.assetid: 44f8661f-c934-483f-84cd-00ca8257e50a
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: aa1b80eed76f8a5de5b2549c4fe7418abdd88745
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: f5940f108bc19beb8ea4d6132b4cfd7b51e6f365
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285968"
 ---
-# <a name="compiler-error-cs0262"></a><span data-ttu-id="2d851-102">コンパイラ エラー CS0262</span><span class="sxs-lookup"><span data-stu-id="2d851-102">Compiler Error CS0262</span></span>
-<span data-ttu-id="2d851-103">'type' の partial 宣言には競合するアクセシビリティ修飾子が含まれています</span><span class="sxs-lookup"><span data-stu-id="2d851-103">Partial declarations of 'type' have conflicting accessibility modifiers</span></span>  
+# <a name="compiler-error-cs0262"></a><span data-ttu-id="8f3ee-102">コンパイラ エラー CS0262</span><span class="sxs-lookup"><span data-stu-id="8f3ee-102">Compiler Error CS0262</span></span>
+<span data-ttu-id="8f3ee-103">'type' の partial 宣言には競合するアクセシビリティ修飾子が含まれています</span><span class="sxs-lookup"><span data-stu-id="8f3ee-103">Partial declarations of 'type' have conflicting accessibility modifiers</span></span>  
   
- <span data-ttu-id="2d851-104">このエラーは、部分型の修飾子 (public、private、protected、internal、abstract など) に一貫性がない場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="2d851-104">This error occurs if a partial type has inconsistent modifiers such as public, private, protected, internal, or abstract.</span></span> <span data-ttu-id="2d851-105">その型のすべての partial 宣言でこれらの修飾子が一貫している必要があります。</span><span class="sxs-lookup"><span data-stu-id="2d851-105">These modifiers must be consistent in all partial declarations for that type.</span></span> <span data-ttu-id="2d851-106">詳細については、「[部分クラスと部分メソッド](../../csharp/programming-guide/classes-and-structs/partial-classes-and-methods.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="2d851-106">For more information, see [Partial Classes and Methods](../../csharp/programming-guide/classes-and-structs/partial-classes-and-methods.md).</span></span>  
+ <span data-ttu-id="8f3ee-104">このエラーは、部分型の修飾子 (public、private、protected、internal、abstract など) に一貫性がない場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="8f3ee-104">This error occurs if a partial type has inconsistent modifiers such as public, private, protected, internal, or abstract.</span></span> <span data-ttu-id="8f3ee-105">その型のすべての partial 宣言でこれらの修飾子が一貫している必要があります。</span><span class="sxs-lookup"><span data-stu-id="8f3ee-105">These modifiers must be consistent in all partial declarations for that type.</span></span> <span data-ttu-id="8f3ee-106">詳細については、「[部分クラスと部分メソッド](../../csharp/programming-guide/classes-and-structs/partial-classes-and-methods.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="8f3ee-106">For more information, see [Partial Classes and Methods](../../csharp/programming-guide/classes-and-structs/partial-classes-and-methods.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="2d851-107">例</span><span class="sxs-lookup"><span data-stu-id="2d851-107">Example</span></span>  
- <span data-ttu-id="2d851-108">次の例では CS0262 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="2d851-108">The following sample generates CS0262:</span></span>  
+## <a name="example"></a><span data-ttu-id="8f3ee-107">例</span><span class="sxs-lookup"><span data-stu-id="8f3ee-107">Example</span></span>  
+ <span data-ttu-id="8f3ee-108">次の例では CS0262 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="8f3ee-108">The following sample generates CS0262:</span></span>  
   
 ```csharp  
 // CS0262.cs  
