--- a/docs/csharp/misc/cs0425.md
+++ b/docs/csharp/misc/cs0425.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0425"
+title: コンパイラ エラー CS0425
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0425
 helpviewer_keywords:
 - CS0425
 ms.assetid: cec0391c-a641-43bc-8557-92b23f6ca685
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 38b68bbbef773eb5e7934e1b67c131029904e68a
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 3350b9cd065be252d40bf6400088d93288f74b80
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285393"
 ---
-# <a name="compiler-error-cs0425"></a><span data-ttu-id="d0c5d-102">コンパイラ エラー CS0425</span><span class="sxs-lookup"><span data-stu-id="d0c5d-102">Compiler Error CS0425</span></span>
-<span data-ttu-id="d0c5d-103">メソッド 'method' の型パラメーター 'type parameter' に対する制約は、インターフェイス メソッド 'method' の型パラメーター 'type parameter' に対する制約と一致しなければなりません。</span><span class="sxs-lookup"><span data-stu-id="d0c5d-103">The constraints for type parameter 'type parameter' of method 'method' must match the constraints for type parameter 'type parameter' of interface method 'method'.</span></span> <span data-ttu-id="d0c5d-104">明示的なインターフェイスの実装を使用することをお勧めします。</span><span class="sxs-lookup"><span data-stu-id="d0c5d-104">Consider using an explicit interface implementation instead.</span></span>  
+# <a name="compiler-error-cs0425"></a><span data-ttu-id="4ccc4-102">コンパイラ エラー CS0425</span><span class="sxs-lookup"><span data-stu-id="4ccc4-102">Compiler Error CS0425</span></span>
+<span data-ttu-id="4ccc4-103">メソッド 'method' の型パラメーター 'type parameter' に対する制約は、インターフェイス メソッド 'method' の型パラメーター 'type parameter' に対する制約と一致しなければなりません。</span><span class="sxs-lookup"><span data-stu-id="4ccc4-103">The constraints for type parameter 'type parameter' of method 'method' must match the constraints for type parameter 'type parameter' of interface method 'method'.</span></span> <span data-ttu-id="4ccc4-104">明示的なインターフェイスの実装を使用することをお勧めします。</span><span class="sxs-lookup"><span data-stu-id="4ccc4-104">Consider using an explicit interface implementation instead.</span></span>  
   
- <span data-ttu-id="d0c5d-105">このエラーは、仮想ジェネリック メソッドが派生クラスでオーバーライドされ、派生クラスのメソッドの制約が基底クラスのメソッドの制約と一致しない場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="d0c5d-105">This error occurs if a virtual generic method is overridden in a derived class and the constraints on the method in the derived class do not match the constraints on the method in the base class.</span></span> <span data-ttu-id="d0c5d-106">このエラーを回避するには、 `where` 句が両方の宣言で同じであることを確認するか、またはインターフェイスを明示的に実装します。</span><span class="sxs-lookup"><span data-stu-id="d0c5d-106">To avoid this error, make sure the `where` clause is identical in both declarations, or implement the interface explicitly.</span></span>  
+ <span data-ttu-id="4ccc4-105">このエラーは、仮想ジェネリック メソッドが派生クラスでオーバーライドされ、派生クラスのメソッドの制約が基底クラスのメソッドの制約と一致しない場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="4ccc4-105">This error occurs if a virtual generic method is overridden in a derived class and the constraints on the method in the derived class do not match the constraints on the method in the base class.</span></span> <span data-ttu-id="4ccc4-106">このエラーを回避するには、 `where` 句が両方の宣言で同じであることを確認するか、またはインターフェイスを明示的に実装します。</span><span class="sxs-lookup"><span data-stu-id="4ccc4-106">To avoid this error, make sure the `where` clause is identical in both declarations, or implement the interface explicitly.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="d0c5d-107">例</span><span class="sxs-lookup"><span data-stu-id="d0c5d-107">Example</span></span>  
- <span data-ttu-id="d0c5d-108">次の例では、CS0425 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="d0c5d-108">The following example generates CS0425:</span></span>  
+## <a name="example"></a><span data-ttu-id="4ccc4-107">例</span><span class="sxs-lookup"><span data-stu-id="4ccc4-107">Example</span></span>  
+ <span data-ttu-id="4ccc4-108">次の例では、CS0425 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="4ccc4-108">The following example generates CS0425:</span></span>  
   
 ```csharp  
 // CS0425.cs  
@@ -58,8 +52,8 @@ class CMain
 }  
 ```  
   
-## <a name="example"></a><span data-ttu-id="d0c5d-109">例</span><span class="sxs-lookup"><span data-stu-id="d0c5d-109">Example</span></span>  
- <span data-ttu-id="d0c5d-110">一連の制約の意味が同じであれば、制約が文字どおり一致している必要はありません。</span><span class="sxs-lookup"><span data-stu-id="d0c5d-110">The constraints do not have to be a literal match, as long as the set of constraints has the same meaning.</span></span> <span data-ttu-id="d0c5d-111">たとえば、次は問題ありません。</span><span class="sxs-lookup"><span data-stu-id="d0c5d-111">For example, the following is okay:</span></span>  
+## <a name="example"></a><span data-ttu-id="4ccc4-109">例</span><span class="sxs-lookup"><span data-stu-id="4ccc4-109">Example</span></span>  
+ <span data-ttu-id="4ccc4-110">一連の制約の意味が同じであれば、制約が文字どおり一致している必要はありません。</span><span class="sxs-lookup"><span data-stu-id="4ccc4-110">The constraints do not have to be a literal match, as long as the set of constraints has the same meaning.</span></span> <span data-ttu-id="4ccc4-111">たとえば、次は問題ありません。</span><span class="sxs-lookup"><span data-stu-id="4ccc4-111">For example, the following is okay:</span></span>  
   
 ```csharp  
 // CS0425b.cs  
