--- a/docs/visual-basic/misc/bc31394.md
+++ b/docs/visual-basic/misc/bc31394.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627138"
 ---
 # <a name="expression-of-type-39lttypenamegt39-cannot-be-converted-to-39object39-or-39valuetype39"></a><span data-ttu-id="bfafe-102">型の式&#39; &lt;typename&gt; &#39;に変換できない&#39;オブジェクト&#39;または&#39;ValueType&#39;</span><span class="sxs-lookup"><span data-stu-id="bfafe-102">Expression of type &#39;&lt;typename&gt;&#39; cannot be converted to &#39;Object&#39; or &#39;ValueType&#39;</span></span>
 <span data-ttu-id="bfafe-103">式の評価結果が、共通言語ランタイム (CLR) でボックス化できない型になります。</span><span class="sxs-lookup"><span data-stu-id="bfafe-103">An expression evaluates to a type that cannot be boxed by the common language runtime (CLR).</span></span>  
