--- a/docs/visual-basic/misc/bc31441.md
+++ b/docs/visual-basic/misc/bc31441.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626777"
 ---
 # <a name="method-39ltmethodname1gt39-must-be-declared-39private39-in-order-to-implement-partial-method-39ltmethodname2gt39"></a><span data-ttu-id="3a6cf-102">メソッド&#39; &lt;methodname1&gt; &#39;として宣言されなければなりません&#39;プライベート&#39;部分メソッドを実装するために&#39; &lt;methodname2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="3a6cf-102">Method &#39;&lt;methodname1&gt;&#39; must be declared &#39;Private&#39; in order to implement partial method &#39;&lt;methodname2&gt;&#39;</span></span>
 <span data-ttu-id="3a6cf-103">部分メソッドの実装は、 `Private`として宣言する必要があります。</span><span class="sxs-lookup"><span data-stu-id="3a6cf-103">The implementation of a partial method must be declared `Private`.</span></span> <span data-ttu-id="3a6cf-104">たとえば、次のコードでは、このエラーが発生します。</span><span class="sxs-lookup"><span data-stu-id="3a6cf-104">For example, the following code causes this error.</span></span>  
