--- a/docs/visual-basic/misc/bc32024.md
+++ b/docs/visual-basic/misc/bc32024.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626124"
 ---
 # <a name="default-values-cannot-be-supplied-for-parameters-that-are-not-declared-39optional39"></a><span data-ttu-id="9f7d0-102">既定値は、宣言されていないパラメーターに対して指定することはできません&#39;オプション&#39;</span><span class="sxs-lookup"><span data-stu-id="9f7d0-102">Default values cannot be supplied for parameters that are not declared &#39;Optional&#39;</span></span>
 <span data-ttu-id="9f7d0-103">プロシージャを呼び出す場合は必要な引数を指定する必要があり、引数は宣言で既定値を受け取りません。</span><span class="sxs-lookup"><span data-stu-id="9f7d0-103">Required arguments must be supplied when the procedure is called, and they do not take default values in the declaration.</span></span>  
