--- a/docs/visual-basic/misc/bc32031.md
+++ b/docs/visual-basic/misc/bc32031.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626030"
 ---
 # <a name="39end-sub39-must-be-the-first-statement-on-a-line"></a><span data-ttu-id="2b1be-102">&#39;End Sub&#39;行の最初のステートメントをする必要があります</span><span class="sxs-lookup"><span data-stu-id="2b1be-102">&#39;End Sub&#39; must be the first statement on a line</span></span>
 <span data-ttu-id="2b1be-103">`End Sub` ステートメントがコロン (:) ステートメント区切り文字の後に続いています。</span><span class="sxs-lookup"><span data-stu-id="2b1be-103">An `End Sub` statement follows a colon (:) statement separator.</span></span> <span data-ttu-id="2b1be-104">`End Sub` はそのソース行でただ 1 つのステートメントである必要があります。</span><span class="sxs-lookup"><span data-stu-id="2b1be-104">`End Sub` must be the only statement on its source line.</span></span>  
