--- a/docs/visual-basic/misc/bc36007.md
+++ b/docs/visual-basic/misc/bc36007.md
@@ -1,37 +1,31 @@
 ---
-title: '&#39;です。使用してエンド &#39;一致する &#39; の前が必要使用して &#39;'
+title: '&#39;使用して終了&#39;前に、対応する必要がある&#39;を使用します。&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc36007
 - vbc36007
 helpviewer_keywords:
 - BC36007
 ms.assetid: 10fb31ba-9b6c-403f-bacc-c7b5df14f1dd
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: f5621c2d9f99d343786b37c0f6bd5eb96d06760a
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 22015c88de13ed07832ff4f7315de5dcea4149f8
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627599"
 ---
-# <a name="39end-using39-must-be-preceded-by-a-matching-39using39"></a><span data-ttu-id="5fe6e-102">&#39;です。使用してエンド &#39;一致する &#39; の前が必要使用して &#39;</span><span class="sxs-lookup"><span data-stu-id="5fe6e-102">&#39;End Using&#39; must be preceded by a matching &#39;Using&#39;</span></span>
-<span data-ttu-id="5fe6e-103">一致する `End Using` 宣言を先に記述することなく、 `Using` ステートメントを記述しています。</span><span class="sxs-lookup"><span data-stu-id="5fe6e-103">An `End Using` statement appears with no matching `Using` declaration preceding it.</span></span>  
+# <a name="39end-using39-must-be-preceded-by-a-matching-39using39"></a><span data-ttu-id="0c49c-102">&#39;使用して終了&#39;前に、対応する必要がある&#39;を使用します。&#39;</span><span class="sxs-lookup"><span data-stu-id="0c49c-102">&#39;End Using&#39; must be preceded by a matching &#39;Using&#39;</span></span>
+<span data-ttu-id="0c49c-103">一致する `End Using` 宣言を先に記述することなく、 `Using` ステートメントを記述しています。</span><span class="sxs-lookup"><span data-stu-id="0c49c-103">An `End Using` statement appears with no matching `Using` declaration preceding it.</span></span>  
   
- <span data-ttu-id="5fe6e-104">**エラー ID:** BC36007</span><span class="sxs-lookup"><span data-stu-id="5fe6e-104">**Error ID:** BC36007</span></span>  
+ <span data-ttu-id="0c49c-104">**エラー ID:** BC36007</span><span class="sxs-lookup"><span data-stu-id="0c49c-104">**Error ID:** BC36007</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5fe6e-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="5fe6e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0c49c-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="0c49c-105">To correct this error</span></span>  
   
--   <span data-ttu-id="5fe6e-106">`End Using` ステートメントが重複している場合は、削除します。</span><span class="sxs-lookup"><span data-stu-id="5fe6e-106">Remove the `End Using` statement if it is redundant.</span></span>  
+-   <span data-ttu-id="0c49c-106">`End Using` ステートメントが重複している場合は、削除します。</span><span class="sxs-lookup"><span data-stu-id="0c49c-106">Remove the `End Using` statement if it is redundant.</span></span>  
   
--   <span data-ttu-id="5fe6e-107">不足[Using ステートメント](../../visual-basic/language-reference/statements/using-statement.md)場合は 1 つが見つかりません。</span><span class="sxs-lookup"><span data-stu-id="5fe6e-107">Supply the missing [Using Statement](../../visual-basic/language-reference/statements/using-statement.md) if one is missing.</span></span>  
+-   <span data-ttu-id="0c49c-107">不足[Using ステートメント](../../visual-basic/language-reference/statements/using-statement.md)場合は 1 つが見つかりません。</span><span class="sxs-lookup"><span data-stu-id="0c49c-107">Supply the missing [Using Statement](../../visual-basic/language-reference/statements/using-statement.md) if one is missing.</span></span>  
   
--   <span data-ttu-id="5fe6e-108">`End Using` ステートメントをコード内の適切な場所に移動します。</span><span class="sxs-lookup"><span data-stu-id="5fe6e-108">Move the `End Using` statement to the appropriate place in the code.</span></span>  
+-   <span data-ttu-id="0c49c-108">`End Using` ステートメントをコード内の適切な場所に移動します。</span><span class="sxs-lookup"><span data-stu-id="0c49c-108">Move the `End Using` statement to the appropriate place in the code.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5fe6e-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="5fe6e-109">See Also</span></span>  
- [<span data-ttu-id="5fe6e-110">終了\<キーワード > ステートメント</span><span class="sxs-lookup"><span data-stu-id="5fe6e-110">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+## <a name="see-also"></a><span data-ttu-id="0c49c-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="0c49c-109">See Also</span></span>  
+ [<span data-ttu-id="0c49c-110">終了\<キーワード > ステートメント</span><span class="sxs-lookup"><span data-stu-id="0c49c-110">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
