commit translated contents

--- a/docs/csharp/language-reference/compiler-messages/cs0310.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0310.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33209525"
 ---
 # <a name="compiler-error-cs0310"></a>コンパイラ エラー CS0310
 'typename' は、ジェネリック型またはメソッド 'generic' 内でパラメーター 'parameter' として使用するために、パブリック パラメーターなしのコンストラクターを持つ非抽象型でなければなりません  
