--- a/docs/csharp/language-reference/compiler-messages/cs0465.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0465.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33211514"
 ---
 # <a name="compiler-warning-level-1-cs0465"></a>コンパイラの警告 (レベル 1) CS0465
 'Finalize' メソッドを導入すると、デストラクターの呼び出しに影響する可能性があります。 デストラクターを宣言しようとしましたか?  
