--- a/docs/csharp/language-reference/compiler-messages/cs0686.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0686.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33211967"
 ---
 # <a name="compiler-error-cs0686"></a>コンパイラ エラー CS0686
 アクセサー 'accessor' は、インターフェイス メンバー 'member' を型 'type' に対して実装できません。 明示的なインターフェイスの実装を使用します。  
