--- a/docs/csharp/language-reference/compiler-messages/cs0843.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0843.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33210864"
 ---
 # <a name="compiler-error-cs0843"></a>コンパイラ エラー CS0843
 自動的に実装されたプロパティ 'name' のバッキング フィールドは、コントロールが呼び出し元に返される前に完全に割り当てられている必要があります。 コンストラクター初期化子から既定のコンストラクターを呼び出すことをご検討ください。  
