--- a/docs/csharp/language-reference/compiler-messages/cs1058.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1058.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33212272"
 ---
 # <a name="compiler-warning-level-1-cs1058"></a>コンパイラの警告 (レベル 1) CS1058
 前の catch 句は、すべての例外を既にキャッチしています。 スローされる例外はすべて System.Runtime.CompilerServices.RuntimeWrappedException にラップされます。  
