--- a/docs/csharp/language-reference/compiler-messages/cs1548.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1548.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33212210"
 ---
 # <a name="compiler-error-cs1548"></a>コンパイラ エラー CS1548
 アセンブリ 'assembly' を署名しているときに暗号に失敗しました — 'reason'  
