commit bilingual contents

--- a/docs/csharp/language-reference/compiler-messages/cs0106.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0106.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33213813"
 ---
 # <a name="compiler-error-cs0106"></a><span data-ttu-id="b2ef5-102">コンパイラ エラー CS0106</span><span class="sxs-lookup"><span data-stu-id="b2ef5-102">Compiler Error CS0106</span></span>
 <span data-ttu-id="b2ef5-103">修飾子 'modifier' がこの項目に対して有効ではありません。</span><span class="sxs-lookup"><span data-stu-id="b2ef5-103">The modifier 'modifier' is not valid for this item</span></span>  
