--- a/docs/csharp/language-reference/compiler-messages/cs1519.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1519.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33215752"
 ---
 # <a name="compiler-error-cs1519"></a><span data-ttu-id="b73d2-102">コンパイラ エラー CS1519</span><span class="sxs-lookup"><span data-stu-id="b73d2-102">Compiler Error CS1519</span></span>
 <span data-ttu-id="b73d2-103">クラス、構造体またはインターフェイスのメンバー宣言でトークン '<トークン>' が無効です</span><span class="sxs-lookup"><span data-stu-id="b73d2-103">Invalid token 'token' in class, struct, or interface member declaration</span></span>  
