--- a/docs/csharp/language-reference/compiler-messages/cs3007.md
+++ b/docs/csharp/language-reference/compiler-messages/cs3007.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33212750"
 ---
 # <a name="compiler-warning-level-1-cs3007"></a><span data-ttu-id="97723-102">コンパイラの警告 (レベル 1) CS3007</span><span class="sxs-lookup"><span data-stu-id="97723-102">Compiler Warning (level 1) CS3007</span></span>
 <span data-ttu-id="97723-103">名前のない配列型のみが異なるオーバーロードされたメソッド 'メソッド' は、CLS に準拠していません。</span><span class="sxs-lookup"><span data-stu-id="97723-103">Overloaded method 'method' differing only by unnamed array types is not CLS-compliant</span></span>  
