commit translated contents

--- a/docs/visual-basic/misc/bc2011.md
+++ b/docs/visual-basic/misc/bc2011.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33602961"
 ---
 # <a name="unable-to-open-response-file-39ltfilenamegt39"></a>応答ファイルを開けません&#39;&lt;ファイル名。&gt;&#39;
 アクセスしようとしているファイルは使用不可です。  
