--- a/docs/visual-basic/misc/bc30058.md
+++ b/docs/visual-basic/misc/bc30058.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33601781"
 ---
 # <a name="statements-and-labels-are-not-valid-between-39select-case39-and-first-39case39"></a>ステートメントおよびラベルは間無効&#39;Select Case&#39;最初と&#39;ケース&#39;
 開始の `Select` または `Select Case` ステートメントと最初の `Case` ステートメントの間にコメントではないステートメントがあります。  
