--- a/docs/visual-basic/misc/bc32058.md
+++ b/docs/visual-basic/misc/bc32058.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33628454"
 ---
 # <a name="type-arguments-cannot-be-applied-to-the-expression-39ltexpressiongt39"></a>型引数を式に適用できない&#39;&lt;式&gt;&#39;
 インポート エイリアスが、そのインポート エイリアスに型引数を渡す [Of](../../visual-basic/language-reference/statements/of-clause.md) 句で定義されています。  
