--- a/docs/visual-basic/misc/bc32116.md
+++ b/docs/visual-basic/misc/bc32116.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631447"
 ---
 # <a name="type-argument-inference-failed-for-type-parameter-39lttypeparametername1gt39-of-39ltgenericproceduresignaturegt39"></a>引数を推論できませんでした型パラメーターを入力&#39; &lt;typeparametername1&gt; &#39;の&#39; &lt;genericproceduresignature&gt;&#39;
 型引数を推論できませんでした型パラメーター '\<typeparametername1 >' の'\<genericproceduresignature >' です。 パラメーターに渡される引数から推論する引数の型 '\<parametername1 >' パラメーターに渡される引数から推論される型引数と競合'\<parametername2 >' です。  
