--- a/docs/visual-basic/misc/bc36559.md
+++ b/docs/visual-basic/misc/bc36559.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631002"
 ---
 # <a name="anonymous-type-member-property-39ltpropertynamegt39-cannot-be-used-to-infer-the-type-of-another-member-property-because-the-type-of-39ltpropertynamegt39-is-not-yet-established"></a>匿名型メンバーのプロパティ&#39; &lt;propertyname&gt; &#39;ために、別のメンバー プロパティの型を推論するために使用できませんの種類&#39; &lt;propertyname&gt; &#39;使用されていません。確立
 匿名型のプロパティの型を確立するまでは、そのプロパティを使用して別のプロパティの型を確立することはできません。 たとえば、以下の宣言では、 `.IDName = .LastName` がまだ初期化されていないので、 `.LastName` は正しくありません。  
