--- a/docs/csharp/language-reference/compiler-messages/cs1933.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1933.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33215658"
 ---
 # <a name="compiler-error-cs1933"></a>コンパイラ エラー CS1933
 式にクエリ式を含めることはできません  
