--- a/docs/csharp/misc/cs0403.md
+++ b/docs/csharp/misc/cs0403.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 6e5d55ce-d6bf-419d-aded-aaa2e5963bb6
 ms.openlocfilehash: 6449df5072fc76cc17a58ca9939bf4815923e1c1
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33289231"
 ---
 # <a name="compiler-error-cs0403"></a>コンパイラ エラー CS0403
 Null 非許容の値型である可能性があるため、Null を型パラメーター 'name' に変換できません。 代わりに default('T') を使用してください。  
