--- a/docs/visual-basic/misc/bc30021.md
+++ b/docs/visual-basic/misc/bc30021.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33603510"
 ---
 # <a name="39typeofis39-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-39lttypegt39"></a>&#39;TypeOf しています.&#39;を左側のオペランドを必要と参照型を持つがこのオペランドの型&#39;&lt;型&gt;&#39;
 `TypeOf...Is` 式は、オブジェクト変数の実行時の型の互換性をチェックします。 この互換性は、値型に対して定義されていません。  
