--- a/docs/visual-basic/misc/bc30064.md
+++ b/docs/visual-basic/misc/bc30064.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33601096"
 ---
 # <a name="39readonly39-variable-cannot-be-the-target-of-an-assignment"></a>&#39;読み取り専用&#39;変数を代入式のターゲットにすることはできません
 値を代入するコンテキストに `ReadOnly` プロパティがあります。 実行時に値を代入できるのは、書き込み可能な変数、プロパティ、配列要素だけです。  
