--- a/docs/visual-basic/misc/bc31399.md
+++ b/docs/visual-basic/misc/bc31399.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626904"
 ---
 # <a name="class-39ltclassnamegt39-has-no-accessible-39sub-new39-and-cannot-be-inherited"></a>クラス&#39; &lt;classname&gt; &#39;がない&#39;Sub New&#39;継承できません
 クラスでは、 [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) を使用して基底クラスを指定していますが、目的の基底クラス上のどのコンストラクターにもアクセスできません。  
