--- a/docs/visual-basic/misc/bc32095.md
+++ b/docs/visual-basic/misc/bc32095.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626702"
 ---
 # <a name="3939-unexpected"></a>&#39;(&#39;予期しません。
 '(' は無効です。 インスタンス生成されないジェネリック型の配列は許可されていません。  
