--- a/docs/visual-basic/misc/bc33039.md
+++ b/docs/visual-basic/misc/bc33039.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631226"
 ---
 # <a name="return-and-parameter-types-of-39ltoperatorgt39-must-be-39lttypenamegt39-to-be-used-in-a-39for39-statement"></a>戻り値およびパラメーターの種類の&#39;&lt;演算子&gt;&#39;する必要があります&#39; &lt;typename&gt; &#39;で使用される、&#39;の&#39;ステートメント
 `For` ループが、それ自体の型のパラメーターと戻り値を持つ `+` または `-` 演算子を定義しない型のカウンター変数を指定しています。  
