--- a/docs/visual-basic/misc/bc36006.md
+++ b/docs/visual-basic/misc/bc36006.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630381"
 ---
 # <a name="attribute-constructor-has-a-39byref39-parameter-of-type-39lttypenamegt39-cannot-use-constructors-with-byref-parameters-to-apply-the-attribute"></a>属性コンス トラクターには、 &#39;ByRef&#39;型のパラメーター &#39; &lt;typename&gt;&#39;; byref パラメーターを含む属性を適用するコンス トラクターを使用できません
 `ByRef` パラメーターを受け取る属性コンストラクターを使用して、プログラミング要素に属性を適用しています。  
