--- a/docs/visual-basic/misc/bc36618.md
+++ b/docs/visual-basic/misc/bc36618.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631655"
 ---
 # <a name="39on39-expected"></a>&#39;&#39;が必要です
 `Join` または `Group Join` 句が指定されていますが、 `On` 演算子がありません。 各コレクションの範囲変数のキー フィールドを識別するには、 `On` 演算子を使用します。 キー フィールドは、各コレクションの項目を照合するために使用されます。  
