--- a/docs/visual-basic/misc/bc40011.md
+++ b/docs/visual-basic/misc/bc40011.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33632549"
 ---
 # <a name="39microsoftvisualbasiccomclassattribute39-is-specified-for-class-39ltclassnamegt39-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a>&#39;Microsoft.VisualBasic.ComClassAttribute&#39; is specified for class &#39;&lt;classname&gt;&#39; but it has no public members that can be exposed to COM; therefore no COM interfaces are generated
 `COMClassAttribute` 属性ブロックを使用するクラスで、 `Public` プロパティまたはメソッドが定義されていません。 クラスを COM オブジェクトとして公開する場合は、そのプロパティとメソッドを `Public` アクセスで宣言する必要があります。  
