--- a/docs/visual-basic/misc/bc40019.md
+++ b/docs/visual-basic/misc/bc40019.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634281"
 ---
 # <a name="39ltkeywordgt39-accessor-of-39ltpropertynamegt39-is-obsolete-39lterrormessagegt39-visual-basic-warning"></a>&#39;&lt;キーワード&gt;&#39;のアクセサー &#39; &lt;propertyname&gt; &#39;は廃止されています: &#39; &lt;errormessage&gt; &#39; (Visual Basic 警告)
 ステートメントがプロパティの読み取りまたは書き込みをしようとしていますが、対応するプロシージャはこのプロパティに対し、 <xref:System.ObsoleteAttribute> 属性と、これを警告として扱うよう指定するディレクティブでマークを付けています。  
