commit bilingual contents

--- a/docs/visual-basic/misc/bc2011.md
+++ b/docs/visual-basic/misc/bc2011.md
@@ -1,36 +1,30 @@
 ---
-title: 応答ファイル &#39; を開けません。&lt;filename&gt;&#39;です。
+title: 応答ファイルを開けません&#39;&lt;ファイル名。&gt;&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc2011
 - vbc2011
 helpviewer_keywords:
 - BC2011
 ms.assetid: 07e799b6-797a-49b5-9e4e-081ae0c68653
-caps.latest.revision: 10
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 19c5170e04334717370421c2026c361eadc0f379
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: d8cb6f8b520974ca02cc20de3ddf7594c8b559dc
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33602961"
 ---
-# <a name="unable-to-open-response-file-39ltfilenamegt39"></a><span data-ttu-id="7f1e2-102">応答ファイル &#39; を開けません。&lt;filename&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="7f1e2-102">Unable to open response file &#39;&lt;filename&gt;&#39;</span></span>
-<span data-ttu-id="7f1e2-103">アクセスしようとしているファイルは使用不可です。</span><span class="sxs-lookup"><span data-stu-id="7f1e2-103">The file you are attempting to access is unavailable.</span></span>  
+# <a name="unable-to-open-response-file-39ltfilenamegt39"></a><span data-ttu-id="00748-102">応答ファイルを開けません&#39;&lt;ファイル名。&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="00748-102">Unable to open response file &#39;&lt;filename&gt;&#39;</span></span>
+<span data-ttu-id="00748-103">アクセスしようとしているファイルは使用不可です。</span><span class="sxs-lookup"><span data-stu-id="00748-103">The file you are attempting to access is unavailable.</span></span>  
   
- <span data-ttu-id="7f1e2-104">**エラー ID:** BC2011</span><span class="sxs-lookup"><span data-stu-id="7f1e2-104">**Error ID:** BC2011</span></span>  
+ <span data-ttu-id="00748-104">**エラー ID:** BC2011</span><span class="sxs-lookup"><span data-stu-id="00748-104">**Error ID:** BC2011</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7f1e2-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="7f1e2-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="00748-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="00748-105">To correct this error</span></span>  
   
--   <span data-ttu-id="7f1e2-106">ネットワーク接続がアクティブであることを確認してください。</span><span class="sxs-lookup"><span data-stu-id="7f1e2-106">Make sure your network connection is still active.</span></span>  
+-   <span data-ttu-id="00748-106">ネットワーク接続がアクティブであることを確認してください。</span><span class="sxs-lookup"><span data-stu-id="00748-106">Make sure your network connection is still active.</span></span>  
   
--   <span data-ttu-id="7f1e2-107">ファイルのアクセス許可を確認します。</span><span class="sxs-lookup"><span data-stu-id="7f1e2-107">Check your permissions on the file.</span></span>  
+-   <span data-ttu-id="00748-107">ファイルのアクセス許可を確認します。</span><span class="sxs-lookup"><span data-stu-id="00748-107">Check your permissions on the file.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7f1e2-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="7f1e2-108">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="00748-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="00748-108">See Also</span></span>  
  <xref:System.Security.Permissions.FileIOPermission>  
- [<span data-ttu-id="7f1e2-109">エラーの種類</span><span class="sxs-lookup"><span data-stu-id="7f1e2-109">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
+ [<span data-ttu-id="00748-109">エラーの種類</span><span class="sxs-lookup"><span data-stu-id="00748-109">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
