--- a/docs/visual-basic/misc/bc32101.md
+++ b/docs/visual-basic/misc/bc32101.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33628650"
 ---
 # <a name="39class39-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="6c2fd-102">&#39;クラス&#39;制約は、同じ型パラメーターに対して複数回指定できないです。</span><span class="sxs-lookup"><span data-stu-id="6c2fd-102">&#39;Class&#39; constraint cannot be specified multiple times for the same type parameter</span></span>
 <span data-ttu-id="6c2fd-103">制約リストに、[クラス (Visual Basic)](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)制約を複数回です。</span><span class="sxs-lookup"><span data-stu-id="6c2fd-103">A constraint list includes the [Class (Visual Basic)](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7) constraint more than once.</span></span>  
