--- a/docs/visual-basic/misc/bc40019.md
+++ b/docs/visual-basic/misc/bc40019.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634281"
 ---
 # <a name="39ltkeywordgt39-accessor-of-39ltpropertynamegt39-is-obsolete-39lterrormessagegt39-visual-basic-warning"></a><span data-ttu-id="41453-102">&#39;&lt;キーワード&gt;&#39;のアクセサー &#39; &lt;propertyname&gt; &#39;は廃止されています: &#39; &lt;errormessage&gt; &#39; (Visual Basic 警告)</span><span class="sxs-lookup"><span data-stu-id="41453-102">&#39;&lt;keyword&gt;&#39; accessor of &#39;&lt;propertyname&gt;&#39; is obsolete: &#39;&lt;errormessage&gt;&#39; (Visual Basic Warning)</span></span>
 <span data-ttu-id="41453-103">ステートメントがプロパティの読み取りまたは書き込みをしようとしていますが、対応するプロシージャはこのプロパティに対し、 <xref:System.ObsoleteAttribute> 属性と、これを警告として扱うよう指定するディレクティブでマークを付けています。</span><span class="sxs-lookup"><span data-stu-id="41453-103">A statement attempts to read or write a property for which the corresponding procedure has been marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as a warning.</span></span>  
