--- a/docs/csharp/language-reference/compiler-messages/cs1721.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1721.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33214635"
 ---
 # <a name="compiler-error-cs1721"></a><span data-ttu-id="399f1-102">コンパイラ エラー CS1721</span><span class="sxs-lookup"><span data-stu-id="399f1-102">Compiler Error CS1721</span></span>
 <span data-ttu-id="399f1-103">クラス 'class' に複数の基本クラスを指定することはできません: 'class_1' および 'class_2'</span><span class="sxs-lookup"><span data-stu-id="399f1-103">Class 'class' cannot have multiple base classes: 'class_1' and 'class_2'</span></span>  
