--- a/docs/csharp/language-reference/compiler-messages/cs1933.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1933.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33215658"
 ---
 # <a name="compiler-error-cs1933"></a><span data-ttu-id="167e5-102">コンパイラ エラー CS1933</span><span class="sxs-lookup"><span data-stu-id="167e5-102">Compiler Error CS1933</span></span>
 <span data-ttu-id="167e5-103">式にクエリ式を含めることはできません</span><span class="sxs-lookup"><span data-stu-id="167e5-103">Expression cannot contain query expressions</span></span>  
