--- a/docs/csharp/misc/cs0403.md
+++ b/docs/csharp/misc/cs0403.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0403"
+title: コンパイラ エラー CS0403
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0403
 helpviewer_keywords:
 - CS0403
 ms.assetid: 6e5d55ce-d6bf-419d-aded-aaa2e5963bb6
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 9d596d8ca9dd32a2a69cb99a4490b3fbd8919ef2
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 6449df5072fc76cc17a58ca9939bf4815923e1c1
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33289231"
 ---
-# <a name="compiler-error-cs0403"></a><span data-ttu-id="06e7b-102">コンパイラ エラー CS0403</span><span class="sxs-lookup"><span data-stu-id="06e7b-102">Compiler Error CS0403</span></span>
-<span data-ttu-id="06e7b-103">Null 非許容の値型である可能性があるため、Null を型パラメーター 'name' に変換できません。</span><span class="sxs-lookup"><span data-stu-id="06e7b-103">Cannot convert null to type parameter 'name' because it could be a non-nullable value type.</span></span> <span data-ttu-id="06e7b-104">代わりに default('T') を使用してください。</span><span class="sxs-lookup"><span data-stu-id="06e7b-104">Consider using default('T') instead.</span></span>  
+# <a name="compiler-error-cs0403"></a><span data-ttu-id="03d97-102">コンパイラ エラー CS0403</span><span class="sxs-lookup"><span data-stu-id="03d97-102">Compiler Error CS0403</span></span>
+<span data-ttu-id="03d97-103">Null 非許容の値型である可能性があるため、Null を型パラメーター 'name' に変換できません。</span><span class="sxs-lookup"><span data-stu-id="03d97-103">Cannot convert null to type parameter 'name' because it could be a non-nullable value type.</span></span> <span data-ttu-id="03d97-104">代わりに default('T') を使用してください。</span><span class="sxs-lookup"><span data-stu-id="03d97-104">Consider using default('T') instead.</span></span>  
   
- <span data-ttu-id="06e7b-105">指定された不明な型は Null の代入が許可されない値型である可能性があるため、この型には Null を代入できません。</span><span class="sxs-lookup"><span data-stu-id="06e7b-105">You cannot assign null to the unknown type named because it might be a value type, which does not allow null assignment.</span></span> <span data-ttu-id="06e7b-106">ジェネリック クラスが値型を受け取るものではない場合は、クラス型制約を使用します。</span><span class="sxs-lookup"><span data-stu-id="06e7b-106">If your generic class is not intended to accept value types, use the class type constraint.</span></span> <span data-ttu-id="06e7b-107">組み込み型などの値型を受け取ることができる場合は、次の例に示すように、Null への代入を式 `default(T)`で置き換えることができる場合があります。</span><span class="sxs-lookup"><span data-stu-id="06e7b-107">If it can accept value types, such as the built-in types, you may be able to replace the assignment to null with the expression `default(T)`, as shown in the following example.</span></span>  
+ <span data-ttu-id="03d97-105">指定された不明な型は Null の代入が許可されない値型である可能性があるため、この型には Null を代入できません。</span><span class="sxs-lookup"><span data-stu-id="03d97-105">You cannot assign null to the unknown type named because it might be a value type, which does not allow null assignment.</span></span> <span data-ttu-id="03d97-106">ジェネリック クラスが値型を受け取るものではない場合は、クラス型制約を使用します。</span><span class="sxs-lookup"><span data-stu-id="03d97-106">If your generic class is not intended to accept value types, use the class type constraint.</span></span> <span data-ttu-id="03d97-107">組み込み型などの値型を受け取ることができる場合は、次の例に示すように、Null への代入を式 `default(T)`で置き換えることができる場合があります。</span><span class="sxs-lookup"><span data-stu-id="03d97-107">If it can accept value types, such as the built-in types, you may be able to replace the assignment to null with the expression `default(T)`, as shown in the following example.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="06e7b-108">例</span><span class="sxs-lookup"><span data-stu-id="06e7b-108">Example</span></span>  
- <span data-ttu-id="06e7b-109">次の例では CS0403 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="06e7b-109">The following sample generates CS0403.</span></span>  
+## <a name="example"></a><span data-ttu-id="03d97-108">例</span><span class="sxs-lookup"><span data-stu-id="03d97-108">Example</span></span>  
+ <span data-ttu-id="03d97-109">次の例では CS0403 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="03d97-109">The following sample generates CS0403.</span></span>  
   
 ```csharp  
 // CS0403.cs  
