--- a/docs/csharp/misc/cs0430.md
+++ b/docs/csharp/misc/cs0430.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0430"
+title: コンパイラ エラー CS0430
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0430
 helpviewer_keywords:
 - CS0430
 ms.assetid: b63c4f9a-b1cd-41d2-a02e-2ed0f177450f
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 6d9c946b75edf943130e382f63e6b3ca199357ce
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: dfff1c1c1a59754762c01bcffc5405d88c0c341d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33289816"
 ---
-# <a name="compiler-error-cs0430"></a><span data-ttu-id="50211-102">コンパイラ エラー CS0430</span><span class="sxs-lookup"><span data-stu-id="50211-102">Compiler Error CS0430</span></span>
-<span data-ttu-id="50211-103">extern エイリアス 'alias' は、/reference オプションで指定されませんでした</span><span class="sxs-lookup"><span data-stu-id="50211-103">The extern alias 'alias' was not specified in a /reference option</span></span>  
+# <a name="compiler-error-cs0430"></a><span data-ttu-id="3f763-102">コンパイラ エラー CS0430</span><span class="sxs-lookup"><span data-stu-id="3f763-102">Compiler Error CS0430</span></span>
+<span data-ttu-id="3f763-103">extern エイリアス 'alias' は、/reference オプションで指定されませんでした</span><span class="sxs-lookup"><span data-stu-id="3f763-103">The extern alias 'alias' was not specified in a /reference option</span></span>  
   
- <span data-ttu-id="50211-104">このエラーは、extern エイリアスが見つかったものの、エイリアスがコマンド ラインで参照として指定されなかった場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="50211-104">This error occurs when extern Alias is encountered but Alias was not specified as a reference on the command line.</span></span> <span data-ttu-id="50211-105">CS0430 を解決するには、 **/reference**を使用してコンパイルします。</span><span class="sxs-lookup"><span data-stu-id="50211-105">To resolve CS0430, compile with **/reference**.</span></span>  
+ <span data-ttu-id="3f763-104">このエラーは、extern エイリアスが見つかったものの、エイリアスがコマンド ラインで参照として指定されなかった場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="3f763-104">This error occurs when extern Alias is encountered but Alias was not specified as a reference on the command line.</span></span> <span data-ttu-id="3f763-105">CS0430 を解決するには、 **/reference**を使用してコンパイルします。</span><span class="sxs-lookup"><span data-stu-id="3f763-105">To resolve CS0430, compile with **/reference**.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="50211-106">例</span><span class="sxs-lookup"><span data-stu-id="50211-106">Example</span></span>  
+## <a name="example"></a><span data-ttu-id="3f763-106">例</span><span class="sxs-lookup"><span data-stu-id="3f763-106">Example</span></span>  
   
 ```csharp  
 // CS0430_a.cs  
@@ -32,8 +26,8 @@ ms.lasthandoff: 03/15/2018
 public class MyClass {}  
 ```  
   
-## <a name="example"></a><span data-ttu-id="50211-107">例</span><span class="sxs-lookup"><span data-stu-id="50211-107">Example</span></span>  
- <span data-ttu-id="50211-108">**/reference:MyType=cs0430_a.dll** を使用してコンパイルし、前の例で作成された DLL を参照すると、このエラーは解決します。</span><span class="sxs-lookup"><span data-stu-id="50211-108">Compiling with **/reference:MyType=cs0430_a.dll** to refer to the DLL created in the previous sample resolves this error.</span></span> <span data-ttu-id="50211-109">次の例では CS0430 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="50211-109">The following sample generates CS0430.</span></span>  
+## <a name="example"></a><span data-ttu-id="3f763-107">例</span><span class="sxs-lookup"><span data-stu-id="3f763-107">Example</span></span>  
+ <span data-ttu-id="3f763-108">**/reference:MyType=cs0430_a.dll** を使用してコンパイルし、前の例で作成された DLL を参照すると、このエラーは解決します。</span><span class="sxs-lookup"><span data-stu-id="3f763-108">Compiling with **/reference:MyType=cs0430_a.dll** to refer to the DLL created in the previous sample resolves this error.</span></span> <span data-ttu-id="3f763-109">次の例では CS0430 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="3f763-109">The following sample generates CS0430.</span></span>  
   
 ```csharp  
 // CS0430_b.cs  
