--- a/docs/csharp/misc/cs0451.md
+++ b/docs/csharp/misc/cs0451.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0451"
+title: コンパイラ エラー CS0451
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0451
 helpviewer_keywords:
 - CS0451
 ms.assetid: e73544f8-856b-4a92-90e0-dd6cb9d688b1
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 7ffa7b6db7d9907422b28ffbf3ef26d6ecf0d116
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 5863a51e6dfb1ae1eedc155f00360767d8caced4
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33287928"
 ---
-# <a name="compiler-error-cs0451"></a><span data-ttu-id="2c698-102">コンパイラ エラー CS0451</span><span class="sxs-lookup"><span data-stu-id="2c698-102">Compiler Error CS0451</span></span>
-<span data-ttu-id="2c698-103">'new()' 制約は 'struct' 制約と一緒には使用できません。</span><span class="sxs-lookup"><span data-stu-id="2c698-103">The 'new()' constraint cannot be used with the 'struct' constraint</span></span>  
+# <a name="compiler-error-cs0451"></a><span data-ttu-id="f85e1-102">コンパイラ エラー CS0451</span><span class="sxs-lookup"><span data-stu-id="f85e1-102">Compiler Error CS0451</span></span>
+<span data-ttu-id="f85e1-103">'new()' 制約は 'struct' 制約と一緒には使用できません。</span><span class="sxs-lookup"><span data-stu-id="f85e1-103">The 'new()' constraint cannot be used with the 'struct' constraint</span></span>  
   
- <span data-ttu-id="2c698-104">ジェネリック型に対して制約を指定するとき、 `new()` 制約は、クラス型制約、インターフェイス型制約、参照型制約、型パラメーター制約と組み合わせた場合のみ使用できます。値型の制約と組み合わせて使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="2c698-104">When specifying constraints on the type of a generic, the `new()` constraint may only be used with class type constraints, interface type constraints, reference type constraints, and type parameter constraints, but not with value type constraints.</span></span>  
+ <span data-ttu-id="f85e1-104">ジェネリック型に対して制約を指定するとき、 `new()` 制約は、クラス型制約、インターフェイス型制約、参照型制約、型パラメーター制約と組み合わせた場合のみ使用できます。値型の制約と組み合わせて使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="f85e1-104">When specifying constraints on the type of a generic, the `new()` constraint may only be used with class type constraints, interface type constraints, reference type constraints, and type parameter constraints, but not with value type constraints.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="2c698-105">例</span><span class="sxs-lookup"><span data-stu-id="2c698-105">Example</span></span>  
- <span data-ttu-id="2c698-106">次の例では CS0451 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="2c698-106">The following sample generates CS0451.</span></span>  
+## <a name="example"></a><span data-ttu-id="f85e1-105">例</span><span class="sxs-lookup"><span data-stu-id="f85e1-105">Example</span></span>  
+ <span data-ttu-id="f85e1-106">次の例では CS0451 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="f85e1-106">The following sample generates CS0451.</span></span>  
   
 ```csharp  
 // CS0451.cs  
