--- a/docs/visual-basic/misc/bc2034.md
+++ b/docs/visual-basic/misc/bc2034.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33602042"
 ---
 # <a name="option-win32manifest-ignored"></a><span data-ttu-id="46e1c-102">オプション /win32manifest が無視されました</span><span class="sxs-lookup"><span data-stu-id="46e1c-102">Option /win32manifest ignored</span></span>
 <span data-ttu-id="46e1c-103">オプション /win32manifest が無視されました。</span><span class="sxs-lookup"><span data-stu-id="46e1c-103">Option /win32manifest ignored.</span></span> <span data-ttu-id="46e1c-104">このオプションはターゲットがアセンブリのときにのみ指定できます。</span><span class="sxs-lookup"><span data-stu-id="46e1c-104">It can be specified only when the target is an assembly.</span></span>  
