--- a/docs/visual-basic/misc/bc30021.md
+++ b/docs/visual-basic/misc/bc30021.md
@@ -1,38 +1,32 @@
 ---
-title: "&#39;です。TypeOf しています.&#39;です。左側のオペランドを必要と参照型を持つ、このオペランドの種類 &#39;&lt;型&gt;&#39;です。"
+title: '&#39;TypeOf しています.&#39;を左側のオペランドを必要と参照型を持つがこのオペランドの型&#39;&lt;型&gt;&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30021
 - vbc30021
 helpviewer_keywords:
 - BC30021
 ms.assetid: a6e76fc8-9c7f-4e55-8b68-e6e7b03a6737
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: fd8516c8ddfe88d559a992358f1e341e6e1afa4e
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 59eb927e14b5b3a3e7209e9a2ee51c42ba147ccc
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33603510"
 ---
-# <a name="39typeofis39-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-39lttypegt39"></a><span data-ttu-id="0cb0a-102">&#39;です。TypeOf しています.&#39;です。左側のオペランドを必要と参照型を持つ、このオペランドの種類 &#39;&lt;型&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="0cb0a-102">&#39;TypeOf...Is&#39; requires its left operand to have a reference type, but this operand has the type &#39;&lt;type&gt;&#39;</span></span>
-<span data-ttu-id="0cb0a-103">`TypeOf...Is` 式は、オブジェクト変数の実行時の型の互換性をチェックします。</span><span class="sxs-lookup"><span data-stu-id="0cb0a-103">The `TypeOf...Is` expression checks an object variable's run-time type compatibility.</span></span> <span data-ttu-id="0cb0a-104">この互換性は、値型に対して定義されていません。</span><span class="sxs-lookup"><span data-stu-id="0cb0a-104">This compatibility is not defined for value types.</span></span>  
+# <a name="39typeofis39-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-39lttypegt39"></a><span data-ttu-id="b1a8f-102">&#39;TypeOf しています.&#39;を左側のオペランドを必要と参照型を持つがこのオペランドの型&#39;&lt;型&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="b1a8f-102">&#39;TypeOf...Is&#39; requires its left operand to have a reference type, but this operand has the type &#39;&lt;type&gt;&#39;</span></span>
+<span data-ttu-id="b1a8f-103">`TypeOf...Is` 式は、オブジェクト変数の実行時の型の互換性をチェックします。</span><span class="sxs-lookup"><span data-stu-id="b1a8f-103">The `TypeOf...Is` expression checks an object variable's run-time type compatibility.</span></span> <span data-ttu-id="b1a8f-104">この互換性は、値型に対して定義されていません。</span><span class="sxs-lookup"><span data-stu-id="b1a8f-104">This compatibility is not defined for value types.</span></span>  
   
- <span data-ttu-id="0cb0a-105">**エラー ID:** BC30021</span><span class="sxs-lookup"><span data-stu-id="0cb0a-105">**Error ID:** BC30021</span></span>  
+ <span data-ttu-id="b1a8f-105">**エラー ID:** BC30021</span><span class="sxs-lookup"><span data-stu-id="b1a8f-105">**Error ID:** BC30021</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0cb0a-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="0cb0a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b1a8f-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="b1a8f-106">To correct this error</span></span>  
   
--   <span data-ttu-id="0cb0a-107">`Option Strict` が `Off`の場合は、 `TypeName` または `VarType` の関数を使用して変数のデータ型の情報を取得します。</span><span class="sxs-lookup"><span data-stu-id="0cb0a-107">If `Option Strict` is `Off`, use the `TypeName` or `VarType` function to obtain the variable's data type information.</span></span>  
+-   <span data-ttu-id="b1a8f-107">`Option Strict` が `Off`の場合は、 `TypeName` または `VarType` の関数を使用して変数のデータ型の情報を取得します。</span><span class="sxs-lookup"><span data-stu-id="b1a8f-107">If `Option Strict` is `Off`, use the `TypeName` or `VarType` function to obtain the variable's data type information.</span></span>  
   
--   <span data-ttu-id="0cb0a-108">`Option Strict` が `On`の場合は、変数宣言で変数のデータ型を決定します。</span><span class="sxs-lookup"><span data-stu-id="0cb0a-108">If `Option Strict` is `On`, the variable declaration determines the variable's data type.</span></span>  
+-   <span data-ttu-id="b1a8f-108">`Option Strict` が `On`の場合は、変数宣言で変数のデータ型を決定します。</span><span class="sxs-lookup"><span data-stu-id="b1a8f-108">If `Option Strict` is `On`, the variable declaration determines the variable's data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0cb0a-109">参照</span><span class="sxs-lookup"><span data-stu-id="0cb0a-109">See Also</span></span>  
- [<span data-ttu-id="0cb0a-110">Visual Basic における比較演算子</span><span class="sxs-lookup"><span data-stu-id="0cb0a-110">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)  
+## <a name="see-also"></a><span data-ttu-id="b1a8f-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="b1a8f-109">See Also</span></span>  
+ [<span data-ttu-id="b1a8f-110">Visual Basic における比較演算子</span><span class="sxs-lookup"><span data-stu-id="b1a8f-110">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)  
    
    
- [<span data-ttu-id="0cb0a-111">Option Strict ステートメント</span><span class="sxs-lookup"><span data-stu-id="0cb0a-111">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+ [<span data-ttu-id="b1a8f-111">Option Strict ステートメント</span><span class="sxs-lookup"><span data-stu-id="b1a8f-111">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
