--- a/docs/visual-basic/misc/bc30035.md
+++ b/docs/visual-basic/misc/bc30035.md
@@ -1,34 +1,28 @@
 ---
-title: "構文エラー (Visual Basic エラー)"
+title: 構文エラー (Visual Basic エラー)
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30035
 - vbc30035
 helpviewer_keywords:
 - BC30035
 ms.assetid: 5fe98cb3-263f-4dd7-9f9e-0b22f5659660
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 7f3db2eb2d5081d3b1083b29390a483e5a77260f
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 2968bb5120dc5f3eb773c31b808fb53f69e63f3c
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33601846"
 ---
-# <a name="syntax-error-visual-basic-error"></a><span data-ttu-id="454a9-102">構文エラー (Visual Basic エラー)</span><span class="sxs-lookup"><span data-stu-id="454a9-102">Syntax error (Visual Basic Error)</span></span>
-<span data-ttu-id="454a9-103">ソース コード行は、不特定の構文エラーを生成します。</span><span class="sxs-lookup"><span data-stu-id="454a9-103">The source code line generates a nonspecific syntax error.</span></span>  
+# <a name="syntax-error-visual-basic-error"></a><span data-ttu-id="5e2b1-102">構文エラー (Visual Basic エラー)</span><span class="sxs-lookup"><span data-stu-id="5e2b1-102">Syntax error (Visual Basic Error)</span></span>
+<span data-ttu-id="5e2b1-103">ソース コード行は、不特定の構文エラーを生成します。</span><span class="sxs-lookup"><span data-stu-id="5e2b1-103">The source code line generates a nonspecific syntax error.</span></span>  
   
- <span data-ttu-id="454a9-104">**エラー ID:** BC30035</span><span class="sxs-lookup"><span data-stu-id="454a9-104">**Error ID:** BC30035</span></span>  
+ <span data-ttu-id="5e2b1-104">**エラー ID:** BC30035</span><span class="sxs-lookup"><span data-stu-id="5e2b1-104">**Error ID:** BC30035</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="454a9-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="454a9-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5e2b1-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="5e2b1-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="454a9-106">ソース コード行で使用される各キーワードのドキュメントを確認します。</span><span class="sxs-lookup"><span data-stu-id="454a9-106">Examine the documentation for each of the keywords used in the source code line.</span></span> <span data-ttu-id="454a9-107">ドキュメントのコード例と、このエラーを生成するソース行とを比較します。</span><span class="sxs-lookup"><span data-stu-id="454a9-107">Compare the example code in the documentation against the source line generating this error.</span></span>  
+1.  <span data-ttu-id="5e2b1-106">ソース コード行で使用される各キーワードのドキュメントを確認します。</span><span class="sxs-lookup"><span data-stu-id="5e2b1-106">Examine the documentation for each of the keywords used in the source code line.</span></span> <span data-ttu-id="5e2b1-107">ドキュメントのコード例と、このエラーを生成するソース行とを比較します。</span><span class="sxs-lookup"><span data-stu-id="5e2b1-107">Compare the example code in the documentation against the source line generating this error.</span></span>  
   
-2.  <span data-ttu-id="454a9-108">エラーの原因を特定できない場合は、状況に関する情報を収集し、マイクロソフト プロダクト サポート サービスにお知らせください。</span><span class="sxs-lookup"><span data-stu-id="454a9-108">If you cannot identify the cause of the error, gather information about the circumstances and notify Microsoft Product Support Services.</span></span>  
+2.  <span data-ttu-id="5e2b1-108">エラーの原因を特定できない場合は、状況に関する情報を収集し、マイクロソフト プロダクト サポート サービスにお知らせください。</span><span class="sxs-lookup"><span data-stu-id="5e2b1-108">If you cannot identify the cause of the error, gather information about the circumstances and notify Microsoft Product Support Services.</span></span>  
   
 
