--- a/docs/visual-basic/misc/bc30064.md
+++ b/docs/visual-basic/misc/bc30064.md
@@ -1,34 +1,28 @@
 ---
-title: '&#39;です。読み取り専用 &#39;変数を代入式のターゲットにすることはできません。'
+title: '&#39;読み取り専用&#39;変数を代入式のターゲットにすることはできません'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30064
 - bc30064
 helpviewer_keywords:
 - BC30064
 ms.assetid: 17e0751d-4c22-40b2-bb07-cb5c845dbc30
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: d3d6f3fbf202ba9cecad938d8eb1dcb4513ed30a
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 45d466ba2dbdb9ff91be21c2f95c0c019a76f0eb
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33601096"
 ---
-# <a name="39readonly39-variable-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="eca2f-102">&#39;です。読み取り専用 &#39;変数を代入式のターゲットにすることはできません。</span><span class="sxs-lookup"><span data-stu-id="eca2f-102">&#39;ReadOnly&#39; variable cannot be the target of an assignment</span></span>
-<span data-ttu-id="eca2f-103">値を代入するコンテキストに `ReadOnly` プロパティがあります。</span><span class="sxs-lookup"><span data-stu-id="eca2f-103">A `ReadOnly` property has been found in a context that assigns a value to it.</span></span> <span data-ttu-id="eca2f-104">実行時に値を代入できるのは、書き込み可能な変数、プロパティ、配列要素だけです。</span><span class="sxs-lookup"><span data-stu-id="eca2f-104">Only writable variables, properties, and array elements can have values assigned to them during execution.</span></span>  
+# <a name="39readonly39-variable-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="3b833-102">&#39;読み取り専用&#39;変数を代入式のターゲットにすることはできません</span><span class="sxs-lookup"><span data-stu-id="3b833-102">&#39;ReadOnly&#39; variable cannot be the target of an assignment</span></span>
+<span data-ttu-id="3b833-103">値を代入するコンテキストに `ReadOnly` プロパティがあります。</span><span class="sxs-lookup"><span data-stu-id="3b833-103">A `ReadOnly` property has been found in a context that assigns a value to it.</span></span> <span data-ttu-id="3b833-104">実行時に値を代入できるのは、書き込み可能な変数、プロパティ、配列要素だけです。</span><span class="sxs-lookup"><span data-stu-id="3b833-104">Only writable variables, properties, and array elements can have values assigned to them during execution.</span></span>  
   
- <span data-ttu-id="eca2f-105">**エラー ID:** BC30064</span><span class="sxs-lookup"><span data-stu-id="eca2f-105">**Error ID:** BC30064</span></span>  
+ <span data-ttu-id="3b833-105">**エラー ID:** BC30064</span><span class="sxs-lookup"><span data-stu-id="3b833-105">**Error ID:** BC30064</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="eca2f-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="eca2f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3b833-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="3b833-106">To correct this error</span></span>  
   
--   <span data-ttu-id="eca2f-107">変数を宣言する `ReadOnly` ステートメントから `Dim` キーワードを削除するか、または値を代入するステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="eca2f-107">Remove the `ReadOnly` keyword from the `Dim` statement declaring the variable, or remove the statement that assigns it a value.</span></span>  
+-   <span data-ttu-id="3b833-107">変数を宣言する `ReadOnly` ステートメントから `Dim` キーワードを削除するか、または値を代入するステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="3b833-107">Remove the `ReadOnly` keyword from the `Dim` statement declaring the variable, or remove the statement that assigns it a value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="eca2f-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="eca2f-108">See Also</span></span>  
- [<span data-ttu-id="eca2f-109">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="eca2f-109">ReadOnly</span></span>](../../visual-basic/language-reference/modifiers/readonly.md)  
- [<span data-ttu-id="eca2f-110">Dim ステートメント</span><span class="sxs-lookup"><span data-stu-id="eca2f-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+## <a name="see-also"></a><span data-ttu-id="3b833-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="3b833-108">See Also</span></span>  
+ [<span data-ttu-id="3b833-109">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="3b833-109">ReadOnly</span></span>](../../visual-basic/language-reference/modifiers/readonly.md)  
+ [<span data-ttu-id="3b833-110">Dim ステートメント</span><span class="sxs-lookup"><span data-stu-id="3b833-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
