--- a/docs/visual-basic/misc/bc31399.md
+++ b/docs/visual-basic/misc/bc31399.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626904"
 ---
 # <a name="class-39ltclassnamegt39-has-no-accessible-39sub-new39-and-cannot-be-inherited"></a><span data-ttu-id="a2a06-102">クラス&#39; &lt;classname&gt; &#39;がない&#39;Sub New&#39;継承できません</span><span class="sxs-lookup"><span data-stu-id="a2a06-102">Class &#39;&lt;classname&gt;&#39; has no accessible &#39;Sub New&#39; and cannot be inherited</span></span>
 <span data-ttu-id="a2a06-103">クラスでは、 [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) を使用して基底クラスを指定していますが、目的の基底クラス上のどのコンストラクターにもアクセスできません。</span><span class="sxs-lookup"><span data-stu-id="a2a06-103">A class uses an [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) to specify a base class, but it cannot access any constructor on the intended base class.</span></span>  
