--- a/docs/visual-basic/misc/bc31533.md
+++ b/docs/visual-basic/misc/bc31533.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626624"
 ---
 # <a name="construct-makes-an-indirect-reference-to-project-39ltprojectnamegt39-which-contains-39lttypenamegt39"></a><span data-ttu-id="2e75c-102">コンス トラクターは、プロジェクトへの間接参照&#39; &lt;projectname&gt;&#39;が含まれている&#39; &lt;typename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="2e75c-102">Construct makes an indirect reference to project &#39;&lt;projectname&gt;&#39;, which contains &#39;&lt;typename&gt;&#39;</span></span>
 <span data-ttu-id="2e75c-103">コンス トラクターは、プロジェクトへの間接参照 '\<projectname > ', を含む'\<typename >' です。</span><span class="sxs-lookup"><span data-stu-id="2e75c-103">Construct makes an indirect reference to project '\<projectname>', which contains '\<typename>'.</span></span> <span data-ttu-id="2e75c-104">参照をプロジェクトの追加 '\<projectname >' をプロジェクトにします。</span><span class="sxs-lookup"><span data-stu-id="2e75c-104">Add a project reference to '\<projectname>' to your project.</span></span>  
