--- a/docs/visual-basic/misc/bc32052.md
+++ b/docs/visual-basic/misc/bc32052.md
@@ -1,40 +1,34 @@
 ---
-title: "&#39; が &#39;です。オペランド型 &#39; の&lt;typeparametername&gt;&#39; のみを比較することができます (& a) #39 です。何も &#39;&#39;です。&lt;typeparametername&gt;&#39; は、型パラメーターでは、クラス制約のないです。"
+title: '&#39;&#39;型のオペランド&#39; &lt;typeparametername&gt; &#39;と比較できますのみ&#39;Nothing&#39;ため&#39; &lt;typeparametername&gt; &#39;型ですクラス制約のないパラメーター'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc32052
 - bc32052
 helpviewer_keywords:
 - BC32052
 ms.assetid: 0bbf2249-eb0d-4b74-a555-8868c7ebe91d
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 83dc327f4ff839368e427400c1000e2c4aeb6b44
-ms.sourcegitcommit: c0dd436f6f8f44dc80dc43b07f6841a00b74b23f
+ms.openlocfilehash: d0b362d70b4940c467288813b9b8df1a2203a382
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 01/19/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630121"
 ---
-# <a name="39is39-operand-of-type-39lttypeparameternamegt39-can-be-compared-only-to-39nothing39-because-39lttypeparameternamegt39-is-a-type-parameter-with-no-class-constraint"></a><span data-ttu-id="76017-102">&#39; が &#39;です。オペランド型 &#39; の&lt;typeparametername&gt;&#39; のみを比較することができます (& a) #39 です。何も &#39;&#39;です。&lt;typeparametername&gt;&#39; は、型パラメーターでは、クラス制約のないです。</span><span class="sxs-lookup"><span data-stu-id="76017-102">&#39;Is&#39; operand of type &#39;&lt;typeparametername&gt;&#39; can be compared only to &#39;Nothing&#39; because &#39;&lt;typeparametername&gt;&#39; is a type parameter with no class constraint</span></span>
-<span data-ttu-id="76017-103">型パラメーターが演算子のオペランドとして使用される、 [Is 演算子](../../visual-basic/language-reference/operators/is-operator.md)なしの型パラメーターが定義されている場合、[クラス (Visual Basic)](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)キーワードまたはその制約リスト内の特定のクラス名。</span><span class="sxs-lookup"><span data-stu-id="76017-103">A type parameter is used as an operand for the [Is Operator](../../visual-basic/language-reference/operators/is-operator.md) when the type parameter is defined without either the [Class (Visual Basic)](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7) keyword or a specific class name in its constraint list.</span></span>  
+# <a name="39is39-operand-of-type-39lttypeparameternamegt39-can-be-compared-only-to-39nothing39-because-39lttypeparameternamegt39-is-a-type-parameter-with-no-class-constraint"></a><span data-ttu-id="92d55-102">&#39;&#39;型のオペランド&#39; &lt;typeparametername&gt; &#39;と比較できますのみ&#39;Nothing&#39;ため&#39; &lt;typeparametername&gt; &#39;型ですクラス制約のないパラメーター</span><span class="sxs-lookup"><span data-stu-id="92d55-102">&#39;Is&#39; operand of type &#39;&lt;typeparametername&gt;&#39; can be compared only to &#39;Nothing&#39; because &#39;&lt;typeparametername&gt;&#39; is a type parameter with no class constraint</span></span>
+<span data-ttu-id="92d55-103">型パラメーターが演算子のオペランドとして使用される、 [Is 演算子](../../visual-basic/language-reference/operators/is-operator.md)なしの型パラメーターが定義されている場合、[クラス (Visual Basic)](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)キーワードまたはその制約リスト内の特定のクラス名。</span><span class="sxs-lookup"><span data-stu-id="92d55-103">A type parameter is used as an operand for the [Is Operator](../../visual-basic/language-reference/operators/is-operator.md) when the type parameter is defined without either the [Class (Visual Basic)](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7) keyword or a specific class name in its constraint list.</span></span>  
   
- <span data-ttu-id="76017-104">`Is` は 2 つの参照型を比較して、メモリ内で同じオブジェクト インスタンスをポイントしているかどうかを判断します。</span><span class="sxs-lookup"><span data-stu-id="76017-104">`Is` compares two reference types to determine whether they point to the same object instance in memory.</span></span> <span data-ttu-id="76017-105">もう一方のオペランドがない限り、参照型ではないオペランドを受け取ることはできません、 [Nothing](../../visual-basic/language-reference/nothing.md)です。</span><span class="sxs-lookup"><span data-stu-id="76017-105">It cannot take an operand that is not a reference type unless the other operand is [Nothing](../../visual-basic/language-reference/nothing.md).</span></span>  
+ <span data-ttu-id="92d55-104">`Is` は 2 つの参照型を比較して、メモリ内で同じオブジェクト インスタンスをポイントしているかどうかを判断します。</span><span class="sxs-lookup"><span data-stu-id="92d55-104">`Is` compares two reference types to determine whether they point to the same object instance in memory.</span></span> <span data-ttu-id="92d55-105">もう一方のオペランドがない限り、参照型ではないオペランドを受け取ることはできません、 [Nothing](../../visual-basic/language-reference/nothing.md)です。</span><span class="sxs-lookup"><span data-stu-id="92d55-105">It cannot take an operand that is not a reference type unless the other operand is [Nothing](../../visual-basic/language-reference/nothing.md).</span></span>  
   
- <span data-ttu-id="76017-106">**エラー ID:** BC32052</span><span class="sxs-lookup"><span data-stu-id="76017-106">**Error ID:** BC32052</span></span>  
+ <span data-ttu-id="92d55-106">**エラー ID:** BC32052</span><span class="sxs-lookup"><span data-stu-id="92d55-106">**Error ID:** BC32052</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="76017-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="76017-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="92d55-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="92d55-107">To correct this error</span></span>  
   
--   <span data-ttu-id="76017-108">この型パラメーターに指定される型引数が常に参照型であることを要求できる場合は、 `Class` キーワードを追加するか、その型パラメーターの制約リストにクラス名を指定します。</span><span class="sxs-lookup"><span data-stu-id="76017-108">If you can require that the type argument supplied to this type parameter always be a reference type, add either the `Class` keyword or a specific class name to the constraint list for the type parameter.</span></span>  
+-   <span data-ttu-id="92d55-108">この型パラメーターに指定される型引数が常に参照型であることを要求できる場合は、 `Class` キーワードを追加するか、その型パラメーターの制約リストにクラス名を指定します。</span><span class="sxs-lookup"><span data-stu-id="92d55-108">If you can require that the type argument supplied to this type parameter always be a reference type, add either the `Class` keyword or a specific class name to the constraint list for the type parameter.</span></span>  
   
--   <span data-ttu-id="76017-109">この型パラメーターに指定される型引数が常に参照型であることを要求できない場合は、 `Is` 式から型引数を削除してください。</span><span class="sxs-lookup"><span data-stu-id="76017-109">If you cannot require that the type argument supplied to this type parameter always be a reference type, remove it from the `Is` expression.</span></span> <span data-ttu-id="76017-110">`Is` 演算子を使用して、他の参照型と比較することはできません。</span><span class="sxs-lookup"><span data-stu-id="76017-110">You cannot compare it to other reference types with the `Is` operator.</span></span>  
+-   <span data-ttu-id="92d55-109">この型パラメーターに指定される型引数が常に参照型であることを要求できない場合は、 `Is` 式から型引数を削除してください。</span><span class="sxs-lookup"><span data-stu-id="92d55-109">If you cannot require that the type argument supplied to this type parameter always be a reference type, remove it from the `Is` expression.</span></span> <span data-ttu-id="92d55-110">`Is` 演算子を使用して、他の参照型と比較することはできません。</span><span class="sxs-lookup"><span data-stu-id="92d55-110">You cannot compare it to other reference types with the `Is` operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="76017-111">参照</span><span class="sxs-lookup"><span data-stu-id="76017-111">See Also</span></span>  
- [<span data-ttu-id="76017-112">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="76017-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="76017-113">型リスト</span><span class="sxs-lookup"><span data-stu-id="76017-113">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
- [<span data-ttu-id="76017-114">値型と参照型</span><span class="sxs-lookup"><span data-stu-id="76017-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)  
- [<span data-ttu-id="76017-115">Visual Basic における比較演算子</span><span class="sxs-lookup"><span data-stu-id="76017-115">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+## <a name="see-also"></a><span data-ttu-id="92d55-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="92d55-111">See Also</span></span>  
+ [<span data-ttu-id="92d55-112">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="92d55-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [<span data-ttu-id="92d55-113">型リスト</span><span class="sxs-lookup"><span data-stu-id="92d55-113">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
+ [<span data-ttu-id="92d55-114">値型と参照型</span><span class="sxs-lookup"><span data-stu-id="92d55-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)  
+ [<span data-ttu-id="92d55-115">Visual Basic における比較演算子</span><span class="sxs-lookup"><span data-stu-id="92d55-115">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
