--- a/docs/visual-basic/misc/bc32058.md
+++ b/docs/visual-basic/misc/bc32058.md
@@ -1,39 +1,33 @@
 ---
-title: "型引数を式 &#39; に適用することはできません。&lt;式&gt;&#39;です。"
+title: 型引数を式に適用できない&#39;&lt;式&gt;&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc32058
 - vbc32058
 helpviewer_keywords:
 - BC32058
 ms.assetid: c6b9b49c-6fb2-47b8-a8bb-464562d3adfd
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 2dbdd1aeda31e05a5ce02fb83ff6437adafdb6e9
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 1b56236d169a09015714b0075fb8c16f7358e043
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33628454"
 ---
-# <a name="type-arguments-cannot-be-applied-to-the-expression-39ltexpressiongt39"></a><span data-ttu-id="524bd-102">型引数を式 &#39; に適用することはできません。&lt;式&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="524bd-102">Type arguments cannot be applied to the expression &#39;&lt;expression&gt;&#39;</span></span>
-<span data-ttu-id="524bd-103">インポート エイリアスが、そのインポート エイリアスに型引数を渡す [Of](../../visual-basic/language-reference/statements/of-clause.md) 句で定義されています。</span><span class="sxs-lookup"><span data-stu-id="524bd-103">An import alias is defined with an [Of](../../visual-basic/language-reference/statements/of-clause.md) clause that passes type arguments to the import alias.</span></span>  
+# <a name="type-arguments-cannot-be-applied-to-the-expression-39ltexpressiongt39"></a><span data-ttu-id="8326f-102">型引数を式に適用できない&#39;&lt;式&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="8326f-102">Type arguments cannot be applied to the expression &#39;&lt;expression&gt;&#39;</span></span>
+<span data-ttu-id="8326f-103">インポート エイリアスが、そのインポート エイリアスに型引数を渡す [Of](../../visual-basic/language-reference/statements/of-clause.md) 句で定義されています。</span><span class="sxs-lookup"><span data-stu-id="8326f-103">An import alias is defined with an [Of](../../visual-basic/language-reference/statements/of-clause.md) clause that passes type arguments to the import alias.</span></span>  
   
- <span data-ttu-id="524bd-104">型引数はジェネリック型で使用されるものであり、ジェネリック型になり得るのは、クラス、構造体、インターフェイス、プロシージャ、デリゲートのみです。</span><span class="sxs-lookup"><span data-stu-id="524bd-104">Type arguments are used for generic types, and only classes, structures, interfaces, procedures, and delegates can be generic.</span></span> <span data-ttu-id="524bd-105">名前空間やインポート エイリアスはジェネリックになりません。</span><span class="sxs-lookup"><span data-stu-id="524bd-105">Neither namespaces nor import aliases can be generic.</span></span>  
+ <span data-ttu-id="8326f-104">型引数はジェネリック型で使用されるものであり、ジェネリック型になり得るのは、クラス、構造体、インターフェイス、プロシージャ、デリゲートのみです。</span><span class="sxs-lookup"><span data-stu-id="8326f-104">Type arguments are used for generic types, and only classes, structures, interfaces, procedures, and delegates can be generic.</span></span> <span data-ttu-id="8326f-105">名前空間やインポート エイリアスはジェネリックになりません。</span><span class="sxs-lookup"><span data-stu-id="8326f-105">Neither namespaces nor import aliases can be generic.</span></span>  
   
- <span data-ttu-id="524bd-106">**エラー ID:** BC32058</span><span class="sxs-lookup"><span data-stu-id="524bd-106">**Error ID:** BC32058</span></span>  
+ <span data-ttu-id="8326f-106">**エラー ID:** BC32058</span><span class="sxs-lookup"><span data-stu-id="8326f-106">**Error ID:** BC32058</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="524bd-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="524bd-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8326f-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8326f-107">To correct this error</span></span>  
   
--   <span data-ttu-id="524bd-108">`Of` 句と型引数をインポート エイリアスから削除します。</span><span class="sxs-lookup"><span data-stu-id="524bd-108">Remove the `Of` clause and its type arguments from the import alias.</span></span>  
+-   <span data-ttu-id="8326f-108">`Of` 句と型引数をインポート エイリアスから削除します。</span><span class="sxs-lookup"><span data-stu-id="8326f-108">Remove the `Of` clause and its type arguments from the import alias.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="524bd-109">参照</span><span class="sxs-lookup"><span data-stu-id="524bd-109">See Also</span></span>  
- [<span data-ttu-id="524bd-110">Imports ステートメント (.NET 名前空間および型)</span><span class="sxs-lookup"><span data-stu-id="524bd-110">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)  
- [<span data-ttu-id="524bd-111">参照と Imports ステートメント</span><span class="sxs-lookup"><span data-stu-id="524bd-111">References and the Imports Statement</span></span>](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)  
+## <a name="see-also"></a><span data-ttu-id="8326f-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="8326f-109">See Also</span></span>  
+ [<span data-ttu-id="8326f-110">Imports ステートメント (.NET 名前空間および型)</span><span class="sxs-lookup"><span data-stu-id="8326f-110">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)  
+ [<span data-ttu-id="8326f-111">参照と Imports ステートメント</span><span class="sxs-lookup"><span data-stu-id="8326f-111">References and the Imports Statement</span></span>](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)  
   
- [<span data-ttu-id="524bd-112">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="524bd-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="524bd-113">型リスト</span><span class="sxs-lookup"><span data-stu-id="524bd-113">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+ [<span data-ttu-id="8326f-112">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="8326f-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [<span data-ttu-id="8326f-113">型リスト</span><span class="sxs-lookup"><span data-stu-id="8326f-113">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
