--- a/docs/visual-basic/misc/bc32068.md
+++ b/docs/visual-basic/misc/bc32068.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626559"
 ---
 # <a name="local-variables-within-generic-methods-cannot-be-declared-39static39"></a><span data-ttu-id="49c4d-102">ジェネリック メソッド内のローカル変数を宣言することはできません&#39;静的&#39;</span><span class="sxs-lookup"><span data-stu-id="49c4d-102">Local variables within generic methods cannot be declared &#39;Static&#39;</span></span>
 <span data-ttu-id="49c4d-103">ジェネリック プロシージャ内のローカル変数の宣言で `Static`を指定してします。</span><span class="sxs-lookup"><span data-stu-id="49c4d-103">The declaration of a local variable within a generic procedure specifies `Static`.</span></span>  
