--- a/docs/visual-basic/misc/bc32095.md
+++ b/docs/visual-basic/misc/bc32095.md
@@ -1,39 +1,33 @@
 ---
 title: '&#39;(&#39;予期しません。'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc32095
 - bc32095
 helpviewer_keywords:
 - BC32095
 ms.assetid: a47ad15a-2cfc-4d17-9012-27ba85b7d783
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 4931518a253e54868948e979a8e7f722fa6b04d7
-ms.sourcegitcommit: 86adcc06e35390f13c1e372c36d2e044f1fc31ef
+ms.openlocfilehash: 6ed43a244fddec4521d801e3bbdf3c1005589731
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 04/26/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626702"
 ---
-# <a name="3939-unexpected"></a><span data-ttu-id="05602-102">&#39;(&#39;予期しません。</span><span class="sxs-lookup"><span data-stu-id="05602-102">&#39;(&#39; unexpected</span></span>
-<span data-ttu-id="05602-103">'(' は無効です。</span><span class="sxs-lookup"><span data-stu-id="05602-103">'(' unexpected.</span></span> <span data-ttu-id="05602-104">インスタンス生成されないジェネリック型の配列は許可されていません。</span><span class="sxs-lookup"><span data-stu-id="05602-104">Arrays of uninstantiated generic types are not allowed.</span></span>  
+# <a name="3939-unexpected"></a><span data-ttu-id="fa0ae-102">&#39;(&#39;予期しません。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-102">&#39;(&#39; unexpected</span></span>
+<span data-ttu-id="fa0ae-103">'(' は無効です。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-103">'(' unexpected.</span></span> <span data-ttu-id="fa0ae-104">インスタンス生成されないジェネリック型の配列は許可されていません。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-104">Arrays of uninstantiated generic types are not allowed.</span></span>  
   
- <span data-ttu-id="05602-105">配列は、の特定のデータ型である場合を除き、Visual Basic でコンパイルすることはできません。</span><span class="sxs-lookup"><span data-stu-id="05602-105">Visual Basic cannot compile an array unless it is of a specific data type.</span></span> <span data-ttu-id="05602-106">配列のデータ型としてジェネリック型のデータ型パラメーターを使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="05602-106">You cannot use a data-type parameter of a generic type as the data type of an array.</span></span>  
+ <span data-ttu-id="fa0ae-105">配列は、の特定のデータ型である場合を除き、Visual Basic でコンパイルすることはできません。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-105">Visual Basic cannot compile an array unless it is of a specific data type.</span></span> <span data-ttu-id="fa0ae-106">配列のデータ型としてジェネリック型のデータ型パラメーターを使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-106">You cannot use a data-type parameter of a generic type as the data type of an array.</span></span>  
   
- <span data-ttu-id="05602-107">**エラー ID:** BC32095</span><span class="sxs-lookup"><span data-stu-id="05602-107">**Error ID:** BC32095</span></span>  
+ <span data-ttu-id="fa0ae-107">**エラー ID:** BC32095</span><span class="sxs-lookup"><span data-stu-id="fa0ae-107">**Error ID:** BC32095</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="05602-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="05602-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fa0ae-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="fa0ae-108">To correct this error</span></span>  
   
--   <span data-ttu-id="05602-109">配列を使用する必要がある場合は、配列を特定のデータ型で宣言する必要があります。</span><span class="sxs-lookup"><span data-stu-id="05602-109">If you need to use an array, you must declare it to be of a specific data type.</span></span> <span data-ttu-id="05602-110">データ型パラメーターを使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="05602-110">You cannot use a data-type parameter.</span></span>  
+-   <span data-ttu-id="fa0ae-109">配列を使用する必要がある場合は、配列を特定のデータ型で宣言する必要があります。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-109">If you need to use an array, you must declare it to be of a specific data type.</span></span> <span data-ttu-id="fa0ae-110">データ型パラメーターを使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-110">You cannot use a data-type parameter.</span></span>  
   
--   <span data-ttu-id="05602-111">データ型パラメーターに指定するデータ型の要素グループが必要な場合は、配列ではなくコレクションを使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="05602-111">If you need a group of elements of the data type that is to be supplied for a data-type parameter, you must use a collection instead of an array.</span></span>  
+-   <span data-ttu-id="fa0ae-111">データ型パラメーターに指定するデータ型の要素グループが必要な場合は、配列ではなくコレクションを使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-111">If you need a group of elements of the data type that is to be supplied for a data-type parameter, you must use a collection instead of an array.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="05602-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="05602-112">See Also</span></span>  
- [<span data-ttu-id="05602-113">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="05602-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="05602-114">コレクション (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="05602-114">Collections (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/concepts/collections.md)  
- [<span data-ttu-id="05602-115">Visual Basic でのオブジェクトのグループを管理します。</span><span class="sxs-lookup"><span data-stu-id="05602-115">Managing Groups of Objects in Visual Basic</span></span>](http://msdn.microsoft.com/library/50be4910-4732-4d5f-a18a-055a162e9037)
+## <a name="see-also"></a><span data-ttu-id="fa0ae-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="fa0ae-112">See Also</span></span>  
+ [<span data-ttu-id="fa0ae-113">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="fa0ae-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [<span data-ttu-id="fa0ae-114">コレクション (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="fa0ae-114">Collections (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/concepts/collections.md)  
+ [<span data-ttu-id="fa0ae-115">Visual Basic でのオブジェクトのグループを管理します。</span><span class="sxs-lookup"><span data-stu-id="fa0ae-115">Managing Groups of Objects in Visual Basic</span></span>](http://msdn.microsoft.com/library/50be4910-4732-4d5f-a18a-055a162e9037)
