--- a/docs/visual-basic/misc/bc33039.md
+++ b/docs/visual-basic/misc/bc33039.md
@@ -1,43 +1,37 @@
 ---
-title: '戻り値およびパラメーターの型の &#39;&lt;演算子&gt;&#39; する必要があります (& m); #39&lt;typename&gt;&#39; で使用する、&#39;です。&#39;です。ステートメント'
+title: 戻り値およびパラメーターの種類の&#39;&lt;演算子&gt;&#39;する必要があります&#39; &lt;typename&gt; &#39;で使用される、&#39;の&#39;ステートメント
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc33039
 - bc33039
 helpviewer_keywords:
 - BC33039
 ms.assetid: 30e8cfa8-c086-474c-a4f0-ad01d01096e2
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 315b6a5714438ce9eaca78bb7b4f1f0431f948f5
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 418110fe3dd21e3b555200092a00a8a8e90d7dcd
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631226"
 ---
-# <a name="return-and-parameter-types-of-39ltoperatorgt39-must-be-39lttypenamegt39-to-be-used-in-a-39for39-statement"></a><span data-ttu-id="6ab37-102">戻り値およびパラメーターの型の &#39;&lt;演算子&gt;&#39; する必要があります (& m); #39&lt;typename&gt;&#39; で使用する、&#39;です。&#39;です。ステートメント</span><span class="sxs-lookup"><span data-stu-id="6ab37-102">Return and parameter types of &#39;&lt;operator&gt;&#39; must be &#39;&lt;typename&gt;&#39; to be used in a &#39;For&#39; statement</span></span>
-<span data-ttu-id="6ab37-103">`For` ループが、それ自体の型のパラメーターと戻り値を持つ `+` または `-` 演算子を定義しない型のカウンター変数を指定しています。</span><span class="sxs-lookup"><span data-stu-id="6ab37-103">A `For` loop specifies a counter variable of a type that does not define the `+` or `-` operator with parameters and return value of its own type.</span></span>  
+# <a name="return-and-parameter-types-of-39ltoperatorgt39-must-be-39lttypenamegt39-to-be-used-in-a-39for39-statement"></a><span data-ttu-id="45005-102">戻り値およびパラメーターの種類の&#39;&lt;演算子&gt;&#39;する必要があります&#39; &lt;typename&gt; &#39;で使用される、&#39;の&#39;ステートメント</span><span class="sxs-lookup"><span data-stu-id="45005-102">Return and parameter types of &#39;&lt;operator&gt;&#39; must be &#39;&lt;typename&gt;&#39; to be used in a &#39;For&#39; statement</span></span>
+<span data-ttu-id="45005-103">`For` ループが、それ自体の型のパラメーターと戻り値を持つ `+` または `-` 演算子を定義しない型のカウンター変数を指定しています。</span><span class="sxs-lookup"><span data-stu-id="45005-103">A `For` loop specifies a counter variable of a type that does not define the `+` or `-` operator with parameters and return value of its own type.</span></span>  
   
- <span data-ttu-id="6ab37-104">カウンター変数は、含んでいる型で完全に機能する加算演算子 (`+`) と減算演算子 (`-`) をサポートする型でなければなりません。</span><span class="sxs-lookup"><span data-stu-id="6ab37-104">The counter variable must be of a type that supports addition (`+`) and subtraction (`-`) operators that operate completely on their containing type.</span></span> <span data-ttu-id="6ab37-105">したがって、オペランドと戻り値は、どちらもそのカウンター変数の型でなければなりません。</span><span class="sxs-lookup"><span data-stu-id="6ab37-105">This means both of the operands and the return value must be of the type of the counter variable.</span></span>  
+ <span data-ttu-id="45005-104">カウンター変数は、含んでいる型で完全に機能する加算演算子 (`+`) と減算演算子 (`-`) をサポートする型でなければなりません。</span><span class="sxs-lookup"><span data-stu-id="45005-104">The counter variable must be of a type that supports addition (`+`) and subtraction (`-`) operators that operate completely on their containing type.</span></span> <span data-ttu-id="45005-105">したがって、オペランドと戻り値は、どちらもそのカウンター変数の型でなければなりません。</span><span class="sxs-lookup"><span data-stu-id="45005-105">This means both of the operands and the return value must be of the type of the counter variable.</span></span>  
   
- <span data-ttu-id="6ab37-106">カウンター変数に数値データ型を使用する場合、含んでいる型では `+` と `-` 演算子がサポートされています。</span><span class="sxs-lookup"><span data-stu-id="6ab37-106">If you use a numeric data type for the counter variable, the `+` and `-` operators are supported on the containing type.</span></span> <span data-ttu-id="6ab37-107">ユーザー定義のクラスまたは構造体を使用する場合、定義したクラスまたは構造体の型のオペランドと戻り値を持つ両方の演算子を定義する必要があります。</span><span class="sxs-lookup"><span data-stu-id="6ab37-107">If you use a user-defined class or structure, you must define both operators with operands and return value of the type of your class or structure.</span></span>  
+ <span data-ttu-id="45005-106">カウンター変数に数値データ型を使用する場合、含んでいる型では `+` と `-` 演算子がサポートされています。</span><span class="sxs-lookup"><span data-stu-id="45005-106">If you use a numeric data type for the counter variable, the `+` and `-` operators are supported on the containing type.</span></span> <span data-ttu-id="45005-107">ユーザー定義のクラスまたは構造体を使用する場合、定義したクラスまたは構造体の型のオペランドと戻り値を持つ両方の演算子を定義する必要があります。</span><span class="sxs-lookup"><span data-stu-id="45005-107">If you use a user-defined class or structure, you must define both operators with operands and return value of the type of your class or structure.</span></span>  
   
- <span data-ttu-id="6ab37-108">**エラー ID:** BC33039</span><span class="sxs-lookup"><span data-stu-id="6ab37-108">**Error ID:** BC33039</span></span>  
+ <span data-ttu-id="45005-108">**エラー ID:** BC33039</span><span class="sxs-lookup"><span data-stu-id="45005-108">**Error ID:** BC33039</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6ab37-109">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="6ab37-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="45005-109">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="45005-109">To correct this error</span></span>  
   
-1.  <span data-ttu-id="6ab37-110">カウンター変数のデータ型のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="6ab37-110">Make sure the spelling of the counter-variable data type is correct.</span></span>  
+1.  <span data-ttu-id="45005-110">カウンター変数のデータ型のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="45005-110">Make sure the spelling of the counter-variable data type is correct.</span></span>  
   
-2.  <span data-ttu-id="6ab37-111">ユーザー定義のクラスまたは構造体をカウンター変数に使用する場合は、そのクラスまたは構造体で完全に機能する `+` 演算子と `-` 演算子を定義します。</span><span class="sxs-lookup"><span data-stu-id="6ab37-111">If you are using a user-defined class or structure for the counter variable, define `+` and `-` operators that operate completely on that class or structure.</span></span>  
+2.  <span data-ttu-id="45005-111">ユーザー定義のクラスまたは構造体をカウンター変数に使用する場合は、そのクラスまたは構造体で完全に機能する `+` 演算子と `-` 演算子を定義します。</span><span class="sxs-lookup"><span data-stu-id="45005-111">If you are using a user-defined class or structure for the counter variable, define `+` and `-` operators that operate completely on that class or structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6ab37-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="6ab37-112">See Also</span></span>  
- [<span data-ttu-id="6ab37-113">For...Next ステートメント</span><span class="sxs-lookup"><span data-stu-id="6ab37-113">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)  
- [<span data-ttu-id="6ab37-114">演算子プロシージャ</span><span class="sxs-lookup"><span data-stu-id="6ab37-114">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="6ab37-115">Operator ステートメント</span><span class="sxs-lookup"><span data-stu-id="6ab37-115">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
- [<span data-ttu-id="6ab37-116">方法 : 演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="6ab37-116">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="6ab37-117">方法 : 変換演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="6ab37-117">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="45005-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="45005-112">See Also</span></span>  
+ [<span data-ttu-id="45005-113">For...Next ステートメント</span><span class="sxs-lookup"><span data-stu-id="45005-113">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)  
+ [<span data-ttu-id="45005-114">演算子プロシージャ</span><span class="sxs-lookup"><span data-stu-id="45005-114">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
+ [<span data-ttu-id="45005-115">Operator ステートメント</span><span class="sxs-lookup"><span data-stu-id="45005-115">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
+ [<span data-ttu-id="45005-116">方法 : 演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="45005-116">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
+ [<span data-ttu-id="45005-117">方法 : 変換演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="45005-117">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
