--- a/docs/visual-basic/misc/bc36006.md
+++ b/docs/visual-basic/misc/bc36006.md
@@ -1,40 +1,34 @@
 ---
-title: "属性コンス トラクターには、&#39;です。ByRef &#39;型 &#39; のパラメーター&lt;typename&gt;&#39; byref パラメーターを含む属性を適用するコンス トラクターを使用できません"
+title: 属性コンス トラクターには、 &#39;ByRef&#39;型のパラメーター &#39; &lt;typename&gt;&#39;; byref パラメーターを含む属性を適用するコンス トラクターを使用できません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc36006
 - vbc36006
 helpviewer_keywords:
 - BC36006
 ms.assetid: 4c4e991f-3839-4196-bcfb-eb8464aa55e5
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 81b19c1c5300ee783419d52fd43c97e204e4bfd8
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: d636e84969d0eae478d08ca6178eb2a3d0327671
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630381"
 ---
-# <a name="attribute-constructor-has-a-39byref39-parameter-of-type-39lttypenamegt39-cannot-use-constructors-with-byref-parameters-to-apply-the-attribute"></a><span data-ttu-id="f02d0-102">属性コンス トラクターには、&#39;です。ByRef &#39;型 &#39; のパラメーター&lt;typename&gt;&#39; byref パラメーターを含む属性を適用するコンス トラクターを使用できません</span><span class="sxs-lookup"><span data-stu-id="f02d0-102">Attribute constructor has a &#39;ByRef&#39; parameter of type &#39;&lt;typename&gt;&#39;; cannot use constructors with byref parameters to apply the attribute</span></span>
-<span data-ttu-id="f02d0-103">`ByRef` パラメーターを受け取る属性コンストラクターを使用して、プログラミング要素に属性を適用しています。</span><span class="sxs-lookup"><span data-stu-id="f02d0-103">An attribute is applied to a programming element using an attribute constructor that takes a `ByRef` parameter.</span></span>  
+# <a name="attribute-constructor-has-a-39byref39-parameter-of-type-39lttypenamegt39-cannot-use-constructors-with-byref-parameters-to-apply-the-attribute"></a><span data-ttu-id="ea380-102">属性コンス トラクターには、 &#39;ByRef&#39;型のパラメーター &#39; &lt;typename&gt;&#39;; byref パラメーターを含む属性を適用するコンス トラクターを使用できません</span><span class="sxs-lookup"><span data-stu-id="ea380-102">Attribute constructor has a &#39;ByRef&#39; parameter of type &#39;&lt;typename&gt;&#39;; cannot use constructors with byref parameters to apply the attribute</span></span>
+<span data-ttu-id="ea380-103">`ByRef` パラメーターを受け取る属性コンストラクターを使用して、プログラミング要素に属性を適用しています。</span><span class="sxs-lookup"><span data-stu-id="ea380-103">An attribute is applied to a programming element using an attribute constructor that takes a `ByRef` parameter.</span></span>  
   
- <span data-ttu-id="f02d0-104">属性はコンパイル時に適用されるため、コンパイラでは、属性コンストラクターに渡す具体的な値を必要とします。</span><span class="sxs-lookup"><span data-stu-id="f02d0-104">Attributes are applied at compile time, and the compiler needs concrete values to pass to the attribute constructor.</span></span> <span data-ttu-id="f02d0-105">`ByRef` パラメーターは値へのポインターを受け取りますが、コンパイル時にこの値を評価することはできません。</span><span class="sxs-lookup"><span data-stu-id="f02d0-105">A `ByRef` parameter takes a pointer to a value, which cannot be evaluated at compile time.</span></span>  
+ <span data-ttu-id="ea380-104">属性はコンパイル時に適用されるため、コンパイラでは、属性コンストラクターに渡す具体的な値を必要とします。</span><span class="sxs-lookup"><span data-stu-id="ea380-104">Attributes are applied at compile time, and the compiler needs concrete values to pass to the attribute constructor.</span></span> <span data-ttu-id="ea380-105">`ByRef` パラメーターは値へのポインターを受け取りますが、コンパイル時にこの値を評価することはできません。</span><span class="sxs-lookup"><span data-stu-id="ea380-105">A `ByRef` parameter takes a pointer to a value, which cannot be evaluated at compile time.</span></span>  
   
- <span data-ttu-id="f02d0-106">`ByRef` パラメーターを受け取る属性コンストラクターを定義し、それを継承などの目的に使用できますが、属性を適用するときは、 `ByRef` パラメーターを受け取らないコンストラクターを使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="f02d0-106">You can define an attribute constructor that takes a `ByRef` parameter, and you can use it for purposes such as inheriting, but when you apply the attribute you must use a constructor that does not take any `ByRef` parameters.</span></span>  
+ <span data-ttu-id="ea380-106">`ByRef` パラメーターを受け取る属性コンストラクターを定義し、それを継承などの目的に使用できますが、属性を適用するときは、 `ByRef` パラメーターを受け取らないコンストラクターを使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="ea380-106">You can define an attribute constructor that takes a `ByRef` parameter, and you can use it for purposes such as inheriting, but when you apply the attribute you must use a constructor that does not take any `ByRef` parameters.</span></span>  
   
- <span data-ttu-id="f02d0-107">**エラー ID:** BC36006</span><span class="sxs-lookup"><span data-stu-id="f02d0-107">**Error ID:** BC36006</span></span>  
+ <span data-ttu-id="ea380-107">**エラー ID:** BC36006</span><span class="sxs-lookup"><span data-stu-id="ea380-107">**Error ID:** BC36006</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f02d0-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="f02d0-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ea380-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ea380-108">To correct this error</span></span>  
   
--   <span data-ttu-id="f02d0-109">`ByRef` パラメーターを受け取らないコンストラクターを使用して属性を適用するか、またはどの属性も適用しないでください。</span><span class="sxs-lookup"><span data-stu-id="f02d0-109">Apply the attribute using a constructor that does not take any `ByRef` parameters, or do not apply the attribute at all.</span></span>  
+-   <span data-ttu-id="ea380-109">`ByRef` パラメーターを受け取らないコンストラクターを使用して属性を適用するか、またはどの属性も適用しないでください。</span><span class="sxs-lookup"><span data-stu-id="ea380-109">Apply the attribute using a constructor that does not take any `ByRef` parameters, or do not apply the attribute at all.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f02d0-110">参照</span><span class="sxs-lookup"><span data-stu-id="f02d0-110">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="ea380-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="ea380-110">See Also</span></span>  
    
    
- [<span data-ttu-id="f02d0-111">引数の値渡しと参照渡し</span><span class="sxs-lookup"><span data-stu-id="f02d0-111">Passing Arguments by Value and by Reference</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)  
- [<span data-ttu-id="f02d0-112">ByRef</span><span class="sxs-lookup"><span data-stu-id="f02d0-112">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)
+ [<span data-ttu-id="ea380-111">引数の値渡しと参照渡し</span><span class="sxs-lookup"><span data-stu-id="ea380-111">Passing Arguments by Value and by Reference</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)  
+ [<span data-ttu-id="ea380-112">ByRef</span><span class="sxs-lookup"><span data-stu-id="ea380-112">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)
