--- a/docs/visual-basic/misc/bc36618.md
+++ b/docs/visual-basic/misc/bc36618.md
@@ -1,33 +1,27 @@
 ---
-title: '&#39; &#39;です。必要です。'
+title: '&#39;&#39;が必要です'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc36618
 - vbc36618
 helpviewer_keywords:
 - BC36618
 ms.assetid: 7cb1b205-c4c3-4485-ae3f-8942425692ff
-caps.latest.revision: 5
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 70e49d844d3b7e5179a6c23c131977a1ea68c454
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 48f179c488f1aa5fcc9a5b2aeeb802bfe3268d41
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631655"
 ---
-# <a name="39on39-expected"></a><span data-ttu-id="a476a-102">&#39; &#39;です。必要です。</span><span class="sxs-lookup"><span data-stu-id="a476a-102">&#39;On&#39; expected</span></span>
-<span data-ttu-id="a476a-103">`Join` または `Group Join` 句が指定されていますが、 `On` 演算子がありません。</span><span class="sxs-lookup"><span data-stu-id="a476a-103">A `Join` or `Group Join` clause has been specified without an `On` operator.</span></span> <span data-ttu-id="a476a-104">各コレクションの範囲変数のキー フィールドを識別するには、 `On` 演算子を使用します。</span><span class="sxs-lookup"><span data-stu-id="a476a-104">You use the `On` operator to identify the key field of the range variable for each collection.</span></span> <span data-ttu-id="a476a-105">キー フィールドは、各コレクションの項目を照合するために使用されます。</span><span class="sxs-lookup"><span data-stu-id="a476a-105">Key fields are used to match items from each collection.</span></span>  
+# <a name="39on39-expected"></a><span data-ttu-id="bb521-102">&#39;&#39;が必要です</span><span class="sxs-lookup"><span data-stu-id="bb521-102">&#39;On&#39; expected</span></span>
+<span data-ttu-id="bb521-103">`Join` または `Group Join` 句が指定されていますが、 `On` 演算子がありません。</span><span class="sxs-lookup"><span data-stu-id="bb521-103">A `Join` or `Group Join` clause has been specified without an `On` operator.</span></span> <span data-ttu-id="bb521-104">各コレクションの範囲変数のキー フィールドを識別するには、 `On` 演算子を使用します。</span><span class="sxs-lookup"><span data-stu-id="bb521-104">You use the `On` operator to identify the key field of the range variable for each collection.</span></span> <span data-ttu-id="bb521-105">キー フィールドは、各コレクションの項目を照合するために使用されます。</span><span class="sxs-lookup"><span data-stu-id="bb521-105">Key fields are used to match items from each collection.</span></span>  
   
- <span data-ttu-id="a476a-106">**エラー ID:** BC36618</span><span class="sxs-lookup"><span data-stu-id="a476a-106">**Error ID:** BC36618</span></span>  
+ <span data-ttu-id="bb521-106">**エラー ID:** BC36618</span><span class="sxs-lookup"><span data-stu-id="bb521-106">**Error ID:** BC36618</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a476a-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a476a-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="bb521-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="bb521-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="a476a-108">`On` 演算子とキー フィールドを `Join` または `Group Join` 句に追加します。</span><span class="sxs-lookup"><span data-stu-id="a476a-108">Add the `On` operator and key fields to the `Join` or `Group Join` clause.</span></span> <span data-ttu-id="a476a-109">例を次に示します。</span><span class="sxs-lookup"><span data-stu-id="a476a-109">Following is an example:</span></span>  
+1.  <span data-ttu-id="bb521-108">`On` 演算子とキー フィールドを `Join` または `Group Join` 句に追加します。</span><span class="sxs-lookup"><span data-stu-id="bb521-108">Add the `On` operator and key fields to the `Join` or `Group Join` clause.</span></span> <span data-ttu-id="bb521-109">例を次に示します。</span><span class="sxs-lookup"><span data-stu-id="bb521-109">Following is an example:</span></span>  
   
 ```vb  
 Dim petOwnersJoin = From pers In people _  
@@ -36,9 +30,9 @@ Dim petOwnersJoin = From pers In people _
                     Select pers.FirstName, PetName = pet.Name  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="a476a-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="a476a-110">See Also</span></span>  
- [<span data-ttu-id="a476a-111">方法 : 結合を使用したデータの結合</span><span class="sxs-lookup"><span data-stu-id="a476a-111">How to: Combine Data with Joins</span></span>](../../visual-basic/programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)  
- [<span data-ttu-id="a476a-112">Join 句</span><span class="sxs-lookup"><span data-stu-id="a476a-112">Join Clause</span></span>](../../visual-basic/language-reference/queries/join-clause.md)  
- [<span data-ttu-id="a476a-113">Group Join 句</span><span class="sxs-lookup"><span data-stu-id="a476a-113">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)  
- [<span data-ttu-id="a476a-114">Visual Basic における LINQ の概要</span><span class="sxs-lookup"><span data-stu-id="a476a-114">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [<span data-ttu-id="a476a-115">LINQ</span><span class="sxs-lookup"><span data-stu-id="a476a-115">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+## <a name="see-also"></a><span data-ttu-id="bb521-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="bb521-110">See Also</span></span>  
+ [<span data-ttu-id="bb521-111">方法 : 結合を使用したデータの結合</span><span class="sxs-lookup"><span data-stu-id="bb521-111">How to: Combine Data with Joins</span></span>](../../visual-basic/programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)  
+ [<span data-ttu-id="bb521-112">Join 句</span><span class="sxs-lookup"><span data-stu-id="bb521-112">Join Clause</span></span>](../../visual-basic/language-reference/queries/join-clause.md)  
+ [<span data-ttu-id="bb521-113">Group Join 句</span><span class="sxs-lookup"><span data-stu-id="bb521-113">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)  
+ [<span data-ttu-id="bb521-114">Visual Basic における LINQ の概要</span><span class="sxs-lookup"><span data-stu-id="bb521-114">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
+ [<span data-ttu-id="bb521-115">LINQ</span><span class="sxs-lookup"><span data-stu-id="bb521-115">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
