--- a/docs/visual-basic/misc/bc36659-bc36656.md
+++ b/docs/visual-basic/misc/bc36659-bc36656.md
@@ -15,6 +15,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33632188"
 ---
 # <a name="data-types-of-the-type-parameters-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a><span data-ttu-id="030a4-102">型パラメーターの 1 つ以上のデータ型は同じ型には変換されないため、これらの引数から推論することはできません。</span><span class="sxs-lookup"><span data-stu-id="030a4-102">Data type(s) of the type parameter(s) cannot be inferred from these arguments because they do not convert to the same type</span></span>
 <span data-ttu-id="030a4-103">型パラメーターの 1 つ以上のデータ型は同じ型には変換されないため、これらの引数から推論することはできません。</span><span class="sxs-lookup"><span data-stu-id="030a4-103">Data type(s) of the type parameter(s) cannot be inferred from these arguments because they do not convert to the same type.</span></span> <span data-ttu-id="030a4-104">データ型を明示的に指定すると、このエラーを修正できる場合があります。</span><span class="sxs-lookup"><span data-stu-id="030a4-104">Specifying the data type(s) explicitly might correct this error.</span></span>  
