--- a/docs/visual-basic/misc/bc40011.md
+++ b/docs/visual-basic/misc/bc40011.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33632549"
 ---
 # <a name="39microsoftvisualbasiccomclassattribute39-is-specified-for-class-39ltclassnamegt39-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a><span data-ttu-id="a9c6b-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; is specified for class &#39;&lt;classname&gt;&#39; but it has no public members that can be exposed to COM; therefore no COM interfaces are generated</span><span class="sxs-lookup"><span data-stu-id="a9c6b-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; is specified for class &#39;&lt;classname&gt;&#39; but it has no public members that can be exposed to COM; therefore no COM interfaces are generated</span></span>
 <span data-ttu-id="a9c6b-103">`COMClassAttribute` 属性ブロックを使用するクラスで、 `Public` プロパティまたはメソッドが定義されていません。</span><span class="sxs-lookup"><span data-stu-id="a9c6b-103">A class using a `COMClassAttribute` attribute block does not define any `Public` properties or methods.</span></span> <span data-ttu-id="a9c6b-104">クラスを COM オブジェクトとして公開する場合は、そのプロパティとメソッドを `Public` アクセスで宣言する必要があります。</span><span class="sxs-lookup"><span data-stu-id="a9c6b-104">If a class is to be exposed as a COM object, its properties and methods must be declared with `Public` access.</span></span>  
