commit bilingual contents

--- a/docs/visual-basic/misc/bc30471.md
+++ b/docs/visual-basic/misc/bc30471.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33607222"
 ---
 # <a name="expression-is-not-an-array-or-a-method-and-cannot-have-an-argument-list"></a><span data-ttu-id="42b64-102">式は、配列またはメソッドではありません。引数リストを指定することはできません。</span><span class="sxs-lookup"><span data-stu-id="42b64-102">Expression is not an array or a method, and cannot have an argument list</span></span>
 <span data-ttu-id="42b64-103">配列またはメソッドではない式の引数リストを指定しました。</span><span class="sxs-lookup"><span data-stu-id="42b64-103">You have provided an argument list for an expression that is not an array or method.</span></span> <span data-ttu-id="42b64-104">引数リストを指定することができるのは、配列またはメソッドのみです。</span><span class="sxs-lookup"><span data-stu-id="42b64-104">Only arrays or methods can have argument lists.</span></span>  
