--- a/docs/visual-basic/misc/bc30060.md
+++ b/docs/visual-basic/misc/bc30060.md
@@ -1,34 +1,28 @@
 ---
-title: 変換 &#39;&lt;type1&gt;&#39; の &#39;&lt;type2&gt;&#39; 定数式で発生することはできません
+title: 変換&#39; &lt;type1&gt; &#39;に&#39; &lt;type2&gt; &#39;定数式で発生することはできません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30060
 - vbc30060
 helpviewer_keywords:
 - BC30060
 ms.assetid: bea60254-67b6-4881-91d2-47854c4d073c
-caps.latest.revision: 7
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 4f00a5a752d0ca137ad7733ab63a604b851edc79
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 0fb75d07ebb8aeaa971c1244d486a35b6105c26a
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33604953"
 ---
-# <a name="conversion-from-39lttype1gt39-to-39lttype2gt39-cannot-occur-in-a-constant-expression"></a><span data-ttu-id="9ddda-102">変換 &#39;&lt;type1&gt;&#39; の &#39;&lt;type2&gt;&#39; 定数式で発生することはできません</span><span class="sxs-lookup"><span data-stu-id="9ddda-102">Conversion from &#39;&lt;type1&gt;&#39; to &#39;&lt;type2&gt;&#39; cannot occur in a constant expression</span></span>
-<span data-ttu-id="9ddda-103">`Const` ステートメントの初期化式は、定数の宣言された型に変換できないデータ型と評価されます。</span><span class="sxs-lookup"><span data-stu-id="9ddda-103">The initialization expression in a `Const` statement evaluates to a data type that cannot be converted to the declared type of the constant.</span></span>  
+# <a name="conversion-from-39lttype1gt39-to-39lttype2gt39-cannot-occur-in-a-constant-expression"></a><span data-ttu-id="598cc-102">変換&#39; &lt;type1&gt; &#39;に&#39; &lt;type2&gt; &#39;定数式で発生することはできません</span><span class="sxs-lookup"><span data-stu-id="598cc-102">Conversion from &#39;&lt;type1&gt;&#39; to &#39;&lt;type2&gt;&#39; cannot occur in a constant expression</span></span>
+<span data-ttu-id="598cc-103">`Const` ステートメントの初期化式は、定数の宣言された型に変換できないデータ型と評価されます。</span><span class="sxs-lookup"><span data-stu-id="598cc-103">The initialization expression in a `Const` statement evaluates to a data type that cannot be converted to the declared type of the constant.</span></span>  
   
- <span data-ttu-id="9ddda-104">**エラー ID:** BC30060</span><span class="sxs-lookup"><span data-stu-id="9ddda-104">**Error ID:** BC30060</span></span>  
+ <span data-ttu-id="598cc-104">**エラー ID:** BC30060</span><span class="sxs-lookup"><span data-stu-id="598cc-104">**Error ID:** BC30060</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9ddda-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="9ddda-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="598cc-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="598cc-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="9ddda-106">定数に対して宣言される型に変換できるデータ型の式で、定数を初期化します。</span><span class="sxs-lookup"><span data-stu-id="9ddda-106">Initialize the constant with an expression of a data type that can be converted to the type declared for the constant.</span></span>  
+1.  <span data-ttu-id="598cc-106">定数に対して宣言される型に変換できるデータ型の式で、定数を初期化します。</span><span class="sxs-lookup"><span data-stu-id="598cc-106">Initialize the constant with an expression of a data type that can be converted to the type declared for the constant.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9ddda-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="9ddda-107">See Also</span></span>  
- [<span data-ttu-id="9ddda-108">Const ステートメント</span><span class="sxs-lookup"><span data-stu-id="9ddda-108">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)  
- [<span data-ttu-id="9ddda-109">Visual Basic での型変換</span><span class="sxs-lookup"><span data-stu-id="9ddda-109">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+## <a name="see-also"></a><span data-ttu-id="598cc-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="598cc-107">See Also</span></span>  
+ [<span data-ttu-id="598cc-108">Const ステートメント</span><span class="sxs-lookup"><span data-stu-id="598cc-108">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)  
+ [<span data-ttu-id="598cc-109">Visual Basic での型変換</span><span class="sxs-lookup"><span data-stu-id="598cc-109">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
