--- a/docs/visual-basic/misc/bc30361.md
+++ b/docs/visual-basic/misc/bc30361.md
@@ -1,34 +1,28 @@
 ---
-title: '&#39;です。&lt;property1&gt;&#39; と &#39;&lt;property2&gt;&#39; 1 つのみが宣言されているために、お互いをオーバー ロードすることはできません (& a) #39; 既定 &#39;'
+title: '&#39;&lt;property1&gt; &#39;と&#39; &lt;property2&gt; &#39; 1 つのみが宣言されているために、お互いをオーバー ロードすることはできません&#39;既定&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30361
 - vbc30361
 helpviewer_keywords:
 - BC30361
 ms.assetid: bac85b32-1a1f-4c43-817c-76e209cfeb8c
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 37f5f48df7ac112170489ff813302c0b72996290
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 8346439f21dc0de2ce6358dfea941cad20a362c0
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608174"
 ---
-# <a name="39ltproperty1gt39-and-39ltproperty2gt39-cannot-overload-each-other-because-only-one-is-declared-39default39"></a><span data-ttu-id="2232c-102">&#39;です。&lt;property1&gt;&#39; と &#39;&lt;property2&gt;&#39; 1 つのみが宣言されているために、お互いをオーバー ロードすることはできません (& a) #39; 既定 &#39;</span><span class="sxs-lookup"><span data-stu-id="2232c-102">&#39;&lt;property1&gt;&#39; and &#39;&lt;property2&gt;&#39; cannot overload each other because only one is declared &#39;Default&#39;</span></span>
-<span data-ttu-id="2232c-103">プロパティで `Default`が指定されている場合、その名前でオーバーロードされたすべてのプロパティでも `Default`を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="2232c-103">If a property specifies `Default`, all properties overloaded on that name must also specify `Default`.</span></span>  
+# <a name="39ltproperty1gt39-and-39ltproperty2gt39-cannot-overload-each-other-because-only-one-is-declared-39default39"></a><span data-ttu-id="31144-102">&#39;&lt;property1&gt; &#39;と&#39; &lt;property2&gt; &#39; 1 つのみが宣言されているために、お互いをオーバー ロードすることはできません&#39;既定&#39;</span><span class="sxs-lookup"><span data-stu-id="31144-102">&#39;&lt;property1&gt;&#39; and &#39;&lt;property2&gt;&#39; cannot overload each other because only one is declared &#39;Default&#39;</span></span>
+<span data-ttu-id="31144-103">プロパティで `Default`が指定されている場合、その名前でオーバーロードされたすべてのプロパティでも `Default`を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="31144-103">If a property specifies `Default`, all properties overloaded on that name must also specify `Default`.</span></span>  
   
- <span data-ttu-id="2232c-104">**エラー ID:** BC30361</span><span class="sxs-lookup"><span data-stu-id="2232c-104">**Error ID:** BC30361</span></span>  
+ <span data-ttu-id="31144-104">**エラー ID:** BC30361</span><span class="sxs-lookup"><span data-stu-id="31144-104">**Error ID:** BC30361</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2232c-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="2232c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="31144-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="31144-105">To correct this error</span></span>  
   
--   <span data-ttu-id="2232c-106">オーバーロードされたプロパティがすべて `Default`として宣言されていることを確認します。</span><span class="sxs-lookup"><span data-stu-id="2232c-106">Make sure all of the overloaded properties are declared `Default`.</span></span>  
+-   <span data-ttu-id="31144-106">オーバーロードされたプロパティがすべて `Default`として宣言されていることを確認します。</span><span class="sxs-lookup"><span data-stu-id="31144-106">Make sure all of the overloaded properties are declared `Default`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2232c-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="2232c-107">See Also</span></span>  
- [<span data-ttu-id="2232c-108">プロシージャのオーバーロードに関する注意事項</span><span class="sxs-lookup"><span data-stu-id="2232c-108">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)  
- [<span data-ttu-id="2232c-109">既定値</span><span class="sxs-lookup"><span data-stu-id="2232c-109">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
+## <a name="see-also"></a><span data-ttu-id="31144-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="31144-107">See Also</span></span>  
+ [<span data-ttu-id="31144-108">プロシージャのオーバーロードに関する注意事項</span><span class="sxs-lookup"><span data-stu-id="31144-108">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)  
+ [<span data-ttu-id="31144-109">既定値</span><span class="sxs-lookup"><span data-stu-id="31144-109">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
