--- a/docs/visual-basic/misc/bc30376.md
+++ b/docs/visual-basic/misc/bc30376.md
@@ -1,33 +1,27 @@
 ---
-title: '&#39;です。新しい &#39;です。クラス &#39; では使用できません。&lt;classname&gt;&#39; が含まれています、&#39;MustOverride &#39;オーバーライドされていないメンバー'
+title: '&#39;新しい&#39;クラスでは使用できません&#39; &lt;classname&gt; &#39;が含まれているため、 &#39;MustOverride&#39;オーバーライドされていないメンバー'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30376
 - vbc30376
 helpviewer_keywords:
 - BC30376
 ms.assetid: f3aed05a-8202-4d2d-9c49-3c000d055116
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 551327766a27e926eee627d0e0e1440d9cd71312
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: e1ac8d0c4dbe2aa6e9f97511ef8a94c630f5baf4
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610267"
 ---
-# <a name="39new39-cannot-be-used-on-class-39ltclassnamegt39-because-it-contains-a-39mustoverride39-member-that-has-not-been-overridden"></a><span data-ttu-id="f0557-102">&#39;です。新しい &#39;です。クラス &#39; では使用できません。&lt;classname&gt;&#39; が含まれています、&#39;MustOverride &#39;オーバーライドされていないメンバー</span><span class="sxs-lookup"><span data-stu-id="f0557-102">&#39;New&#39; cannot be used on class &#39;&lt;classname&gt;&#39; because it contains a &#39;MustOverride&#39; member that has not been overridden</span></span>
-<span data-ttu-id="f0557-103">オーバーライドされていない `New` メンバーを含むクラスで `MustOverride` の使用を試みました。</span><span class="sxs-lookup"><span data-stu-id="f0557-103">You have attempted to use `New` on a class that contains a `MustOverride` member that has not been overridden.</span></span>  
+# <a name="39new39-cannot-be-used-on-class-39ltclassnamegt39-because-it-contains-a-39mustoverride39-member-that-has-not-been-overridden"></a><span data-ttu-id="a0845-102">&#39;新しい&#39;クラスでは使用できません&#39; &lt;classname&gt; &#39;が含まれているため、 &#39;MustOverride&#39;オーバーライドされていないメンバー</span><span class="sxs-lookup"><span data-stu-id="a0845-102">&#39;New&#39; cannot be used on class &#39;&lt;classname&gt;&#39; because it contains a &#39;MustOverride&#39; member that has not been overridden</span></span>
+<span data-ttu-id="a0845-103">オーバーライドされていない `New` メンバーを含むクラスで `MustOverride` の使用を試みました。</span><span class="sxs-lookup"><span data-stu-id="a0845-103">You have attempted to use `New` on a class that contains a `MustOverride` member that has not been overridden.</span></span>  
   
- <span data-ttu-id="f0557-104">**エラー ID:** BC30376</span><span class="sxs-lookup"><span data-stu-id="f0557-104">**Error ID:** BC30376</span></span>  
+ <span data-ttu-id="a0845-104">**エラー ID:** BC30376</span><span class="sxs-lookup"><span data-stu-id="a0845-104">**Error ID:** BC30376</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f0557-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="f0557-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a0845-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a0845-105">To correct this error</span></span>  
   
--   <span data-ttu-id="f0557-106">`New` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="f0557-106">Remove the `New` statement.</span></span>  
+-   <span data-ttu-id="a0845-106">`New` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="a0845-106">Remove the `New` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f0557-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="f0557-107">See Also</span></span>  
- [<span data-ttu-id="f0557-108">MustOverride</span><span class="sxs-lookup"><span data-stu-id="f0557-108">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
+## <a name="see-also"></a><span data-ttu-id="a0845-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="a0845-107">See Also</span></span>  
+ [<span data-ttu-id="a0845-108">MustOverride</span><span class="sxs-lookup"><span data-stu-id="a0845-108">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
