--- a/docs/visual-basic/misc/bc30500.md
+++ b/docs/visual-basic/misc/bc30500.md
@@ -1,30 +1,24 @@
 ---
-title: "定数 &#39;&lt;constantname&gt;&#39; 独自の値に依存することはできません"
+title: 定数&#39; &lt;constantname&gt; &#39;独自の値に依存することはできません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30500
 - vbc30500
 helpviewer_keywords:
 - BC30500
 ms.assetid: 0dad89bc-9196-492f-acd9-7777757362f7
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: defa4f0c5af0fdda80d4f37af95b02602a926911
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: fdd4e9082c8d1ac71d7ed4b221f0477bfa99cfd3
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608785"
 ---
-# <a name="constant-39ltconstantnamegt39-cannot-depend-on-its-own-value"></a><span data-ttu-id="ebdca-102">定数 &#39;&lt;constantname&gt;&#39; 独自の値に依存することはできません</span><span class="sxs-lookup"><span data-stu-id="ebdca-102">Constant &#39;&lt;constantname&gt;&#39; cannot depend on its own value</span></span>
-<span data-ttu-id="ebdca-103">定数がそれ自体の値に依存する循環依存をコードに作成しました。</span><span class="sxs-lookup"><span data-stu-id="ebdca-103">You created a circular dependency in your code, where a constant depends on its own value.</span></span> <span data-ttu-id="ebdca-104">たとえば、 `Const a = Const b; Const b = Const a`のようにします。</span><span class="sxs-lookup"><span data-stu-id="ebdca-104">For example, `Const a = Const b; Const b = Const a`.</span></span>  
+# <a name="constant-39ltconstantnamegt39-cannot-depend-on-its-own-value"></a><span data-ttu-id="8333f-102">定数&#39; &lt;constantname&gt; &#39;独自の値に依存することはできません</span><span class="sxs-lookup"><span data-stu-id="8333f-102">Constant &#39;&lt;constantname&gt;&#39; cannot depend on its own value</span></span>
+<span data-ttu-id="8333f-103">定数がそれ自体の値に依存する循環依存をコードに作成しました。</span><span class="sxs-lookup"><span data-stu-id="8333f-103">You created a circular dependency in your code, where a constant depends on its own value.</span></span> <span data-ttu-id="8333f-104">たとえば、 `Const a = Const b; Const b = Const a`のようにします。</span><span class="sxs-lookup"><span data-stu-id="8333f-104">For example, `Const a = Const b; Const b = Const a`.</span></span>  
   
- <span data-ttu-id="ebdca-105">**エラー ID:** BC30500</span><span class="sxs-lookup"><span data-stu-id="ebdca-105">**Error ID:** BC30500</span></span>  
+ <span data-ttu-id="8333f-105">**エラー ID:** BC30500</span><span class="sxs-lookup"><span data-stu-id="8333f-105">**Error ID:** BC30500</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ebdca-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ebdca-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8333f-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8333f-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="ebdca-107">コードを調べて定数が評価されている場所を確認し、必要に応じて変更します。</span><span class="sxs-lookup"><span data-stu-id="ebdca-107">Check your code to see where the constant is being evaluated, and modify it accordingly.</span></span>
+1.  <span data-ttu-id="8333f-107">コードを調べて定数が評価されている場所を確認し、必要に応じて変更します。</span><span class="sxs-lookup"><span data-stu-id="8333f-107">Check your code to see where the constant is being evaluated, and modify it accordingly.</span></span>
