--- a/docs/visual-basic/misc/bc30622.md
+++ b/docs/visual-basic/misc/bc30622.md
@@ -1,33 +1,27 @@
 ---
-title: '&#39;です。終了モジュール &#39;一致する &#39; の前が必要モジュール &#39;'
+title: '&#39;End Module&#39;前に、対応する必要がある&#39;モジュール&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30622
 - bc30622
 helpviewer_keywords:
 - BC30622
 ms.assetid: f5d412ae-3265-4e69-b513-d402730bf575
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 1c28f32b21da0c748abfb6a8ca1080d9fe05cb99
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 478ae9446faa42ae87f21f27e82487672bde0487
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610484"
 ---
-# <a name="39end-module39-must-be-preceded-by-a-matching-39module39"></a><span data-ttu-id="0d345-102">&#39;です。終了モジュール &#39;一致する &#39; の前が必要モジュール &#39;</span><span class="sxs-lookup"><span data-stu-id="0d345-102">&#39;End Module&#39; must be preceded by a matching &#39;Module&#39;</span></span>
-<span data-ttu-id="0d345-103">モジュール ブロックは `Module` ステートメントで始まり、 `End Module` コンストラクトで終わります。</span><span class="sxs-lookup"><span data-stu-id="0d345-103">Module blocks begin with a `Module` statement and end with an `End Module` construct.</span></span>  
+# <a name="39end-module39-must-be-preceded-by-a-matching-39module39"></a><span data-ttu-id="c38c8-102">&#39;End Module&#39;前に、対応する必要がある&#39;モジュール&#39;</span><span class="sxs-lookup"><span data-stu-id="c38c8-102">&#39;End Module&#39; must be preceded by a matching &#39;Module&#39;</span></span>
+<span data-ttu-id="c38c8-103">モジュール ブロックは `Module` ステートメントで始まり、 `End Module` コンストラクトで終わります。</span><span class="sxs-lookup"><span data-stu-id="c38c8-103">Module blocks begin with a `Module` statement and end with an `End Module` construct.</span></span>  
   
- <span data-ttu-id="0d345-104">**エラー ID:** BC30622</span><span class="sxs-lookup"><span data-stu-id="0d345-104">**Error ID:** BC30622</span></span>  
+ <span data-ttu-id="c38c8-104">**エラー ID:** BC30622</span><span class="sxs-lookup"><span data-stu-id="c38c8-104">**Error ID:** BC30622</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0d345-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="0d345-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c38c8-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="c38c8-105">To correct this error</span></span>  
   
--   <span data-ttu-id="0d345-106">モジュール ブロックが `Module` ステートメントで始まることを確認してください。</span><span class="sxs-lookup"><span data-stu-id="0d345-106">Make sure that the module block begins with a `Module` statement.</span></span>  
+-   <span data-ttu-id="c38c8-106">モジュール ブロックが `Module` ステートメントで始まることを確認してください。</span><span class="sxs-lookup"><span data-stu-id="c38c8-106">Make sure that the module block begins with a `Module` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0d345-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="0d345-107">See Also</span></span>  
- [<span data-ttu-id="0d345-108">Module ステートメント</span><span class="sxs-lookup"><span data-stu-id="0d345-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a><span data-ttu-id="c38c8-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="c38c8-107">See Also</span></span>  
+ [<span data-ttu-id="c38c8-108">Module ステートメント</span><span class="sxs-lookup"><span data-stu-id="c38c8-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
