--- a/docs/visual-basic/misc/bc30649.md
+++ b/docs/visual-basic/misc/bc30649.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611301"
 ---
 # <a name="39lttypenamegt39-is-an-unsupported-type"></a><span data-ttu-id="32169-102">&#39;&lt;typename&gt; &#39;はサポートされていない型です。</span><span class="sxs-lookup"><span data-stu-id="32169-102">&#39;&lt;typename&gt;&#39; is an unsupported type</span></span>
 <span data-ttu-id="32169-103">指定された型は、Visual Studio によって表されることはできません。</span><span class="sxs-lookup"><span data-stu-id="32169-103">The type specified cannot be represented by Visual Studio.</span></span>  
