commit translated contents

--- a/docs/visual-basic/misc/bc32081.md
+++ b/docs/visual-basic/misc/bc32081.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627294"
 ---
 # <a name="39new39-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a>&#39;新しい&#39;制約は、同じ型パラメーターに対して複数回指定できないです。
 制約リストに、 [New 演算子](../../visual-basic/language-reference/operators/new-operator.md)制約を複数回です。  
