--- a/docs/visual-basic/misc/bc31417.md
+++ b/docs/visual-basic/misc/bc31417.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33625812"
 ---
 # <a name="39ltprocedurename1gt39-cannot-override-39ltprocedurename2gt39-because-it-is-not-accessible-in-this-context"></a>&#39;&lt;procedurename1&gt; &#39;オーバーライドできません&#39; &lt;procedurename2&gt; &#39;はこのコンテキストでアクセスできないため
 プロシージャまたはプロパティが別のプロシージャまたはプロパティをオーバーライドしますが、前者からのアクセスを禁ずるアクセス レベルが後者に設定されています。  
