--- a/docs/visual-basic/misc/bc32033.md
+++ b/docs/visual-basic/misc/bc32033.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626215"
 ---
 # <a name="39end-get39-must-be-the-first-statement-on-a-line"></a>&#39;End Get&#39;行の最初のステートメントをする必要があります
 `End Get` ステートメントがコロン (:) ステートメント区切り文字の後に続いています。 `End Get` はそのソース行でただ 1 つのステートメントである必要があります。  
