commit bilingual contents

--- a/docs/visual-basic/misc/bc32127.md
+++ b/docs/visual-basic/misc/bc32127.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627547"
 ---
 # <a name="39is39-operand-of-type-39typename39-can-only-be-compared-to-39nothing39-because-39typename39-is-a-nullable-type"></a><span data-ttu-id="3818b-102">&#39;&#39;型のオペランド&#39;typename&#39;のみと比較できます&#39;Nothing&#39;ので、 &#39;typename&#39; null 許容型は、</span><span class="sxs-lookup"><span data-stu-id="3818b-102">&#39;Is&#39; operand of type &#39;typename&#39; can only be compared to &#39;Nothing&#39;, because &#39;typename&#39; is a nullable type</span></span>
 <span data-ttu-id="3818b-103">Null 許容型として宣言された変数が、 `Nothing` 演算子を使用して、 `Is` 以外の式と比較されました。</span><span class="sxs-lookup"><span data-stu-id="3818b-103">A variable declared as nullable has been compared to an expression other than `Nothing` by using the `Is` operator.</span></span>  
