--- a/docs/visual-basic/misc/bc32081.md
+++ b/docs/visual-basic/misc/bc32081.md
@@ -1,35 +1,29 @@
 ---
-title: '&#39;です。新しい &#39;です。制約は、同じ型パラメーターに対して複数回指定できないです。'
+title: '&#39;新しい&#39;制約は、同じ型パラメーターに対して複数回指定できないです。'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc32081
 - BC32081
 helpviewer_keywords:
 - BC32081
 ms.assetid: afcb30da-3973-4452-9cf3-c027f9866589
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 15a82a64db2cf2c6c11c74b0302997623d76c0ce
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: b0f2f7386f426a55b2ad161087271e8a72ea49c4
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627294"
 ---
-# <a name="39new39-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="fcee0-102">&#39;です。新しい &#39;です。制約は、同じ型パラメーターに対して複数回指定できないです。</span><span class="sxs-lookup"><span data-stu-id="fcee0-102">&#39;New&#39; constraint cannot be specified multiple times for the same type parameter</span></span>
-<span data-ttu-id="fcee0-103">制約リストに、 [New 演算子](../../visual-basic/language-reference/operators/new-operator.md)制約を複数回です。</span><span class="sxs-lookup"><span data-stu-id="fcee0-103">A constraint list includes the [New Operator](../../visual-basic/language-reference/operators/new-operator.md) constraint more than once.</span></span>  
+# <a name="39new39-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="ec2a2-102">&#39;新しい&#39;制約は、同じ型パラメーターに対して複数回指定できないです。</span><span class="sxs-lookup"><span data-stu-id="ec2a2-102">&#39;New&#39; constraint cannot be specified multiple times for the same type parameter</span></span>
+<span data-ttu-id="ec2a2-103">制約リストに、 [New 演算子](../../visual-basic/language-reference/operators/new-operator.md)制約を複数回です。</span><span class="sxs-lookup"><span data-stu-id="ec2a2-103">A constraint list includes the [New Operator](../../visual-basic/language-reference/operators/new-operator.md) constraint more than once.</span></span>  
   
- <span data-ttu-id="fcee0-104">型パラメーターの制約リストは、その型パラメーターに渡される型引数が、作成元のコードからアクセスできるパラメーターなしのコンストラクターを公開する必要があることを指定できます。</span><span class="sxs-lookup"><span data-stu-id="fcee0-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="fcee0-105">型はパラメーターなしのコンストラクターを複数持つことはできないため、この要件を複数回指定することはできません。</span><span class="sxs-lookup"><span data-stu-id="fcee0-105">A type cannot have more than one parameterless constructor, and you cannot specify this requirement more than once.</span></span>  
+ <span data-ttu-id="ec2a2-104">型パラメーターの制約リストは、その型パラメーターに渡される型引数が、作成元のコードからアクセスできるパラメーターなしのコンストラクターを公開する必要があることを指定できます。</span><span class="sxs-lookup"><span data-stu-id="ec2a2-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="ec2a2-105">型はパラメーターなしのコンストラクターを複数持つことはできないため、この要件を複数回指定することはできません。</span><span class="sxs-lookup"><span data-stu-id="ec2a2-105">A type cannot have more than one parameterless constructor, and you cannot specify this requirement more than once.</span></span>  
   
- <span data-ttu-id="fcee0-106">**エラー ID:** BC32081</span><span class="sxs-lookup"><span data-stu-id="fcee0-106">**Error ID:** BC32081</span></span>  
+ <span data-ttu-id="ec2a2-106">**エラー ID:** BC32081</span><span class="sxs-lookup"><span data-stu-id="ec2a2-106">**Error ID:** BC32081</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fcee0-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="fcee0-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ec2a2-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ec2a2-107">To correct this error</span></span>  
   
--   <span data-ttu-id="fcee0-108">冗長な `New` キーワードがある場合は削除します。</span><span class="sxs-lookup"><span data-stu-id="fcee0-108">Remove any redundant `New` keywords.</span></span> <span data-ttu-id="fcee0-109">制約リストには 1 つだけ含める必要があります。</span><span class="sxs-lookup"><span data-stu-id="fcee0-109">You should have only one in the constraint list.</span></span>  
+-   <span data-ttu-id="ec2a2-108">冗長な `New` キーワードがある場合は削除します。</span><span class="sxs-lookup"><span data-stu-id="ec2a2-108">Remove any redundant `New` keywords.</span></span> <span data-ttu-id="ec2a2-109">制約リストには 1 つだけ含める必要があります。</span><span class="sxs-lookup"><span data-stu-id="ec2a2-109">You should have only one in the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fcee0-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="fcee0-110">See Also</span></span>  
- [<span data-ttu-id="fcee0-111">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="fcee0-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+## <a name="see-also"></a><span data-ttu-id="ec2a2-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="ec2a2-110">See Also</span></span>  
+ [<span data-ttu-id="ec2a2-111">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="ec2a2-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
